--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -217,10 +217,10 @@ foxtrick.PlayerBirthday.desc=Mostra els darrers i els següents aniversaris a la
 foxtrick.MovePlayerSelectbox.desc=Mou la llista desplegable de jugadors a la part de dalt de la pàgina dels detalls dels jugadors
 foxtrick.SeasonStats.desc=Mostra algunes estadístiques a les pàgines dels arxius de partits
 foxtrick.LeagueNewsFilter.desc=A la pàgina de la lliga marca els equips que recentment han canviat o fixat la seva alineació, i afegeix una caixa de selecció per les notícies de la lliga.
-foxtrick.LeagueNewsFilter.all.desc=Monstre totes les notícies
-foxtrick.LeagueNewsFilter.friendlies.desc=Mostra només els amistosos internacionals i els canvis d'entrenador
-foxtrick.LeagueNewsFilter.transfers.desc=Mostra només les transferències
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostra només els canvis de la alineació
+LeagueNewsFilter.all.desc=Monstre totes les notícies
+LeagueNewsFilter.friendlies.desc=Mostra només els amistosos internacionals i els canvis d'entrenador
+LeagueNewsFilter.transfers.desc=Mostra només les transferències
+LeagueNewsFilter.lineupChanges.desc=Mostra només els canvis de la alineació
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Mou el nombre de mànagers connectats a la part de dalt de les pàgines de regions. Advertència, això pot fer que vagi molt lenta la càrrega de la pàgina en cas de que hi hagi més de 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Afegeix «TeamPopupLinks» als enllaços d'equips
@@ -293,72 +293,72 @@ foxtrick.TableSort.desc=Fa que totes les taules correctes i que tinguin capçale
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Estadístiques
-foxtrick.ExtraShortcuts.transfers=Transferències
-foxtrick.ExtraShortcuts.prefs=Preferències
-foxtrick.ExtraShortcuts.ftprefs=Preferències de FoxTrick
+ExtraShortcuts.statistics=Estadístiques
+ExtraShortcuts.transfers=Transferències
+ExtraShortcuts.prefs=Preferències
+ExtraShortcuts.ftprefs=Preferències de FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=Temporada
-foxtrick.HistoryStats.season.short=T
-foxtrick.HistoryStats.cup=Ronda de copa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Lligues
-foxtrick.HistoryStats.league.short=Lliga
-foxtrick.HistoryStats.pos=Posició final a la lliga
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Estadístiques històriques
-foxtrick.HistoryStats.cupwinner=Guanyador de la copa
-foxtrick.HistoryStats.cupwinner.short=CC
+HistoryStats.season=Temporada
+HistoryStats.season.short=T
+HistoryStats.cup=Ronda de copa
+HistoryStats.cup.short=C
+HistoryStats.league=Lligues
+HistoryStats.league.short=Lliga
+HistoryStats.finalPosition=Posició final a la lliga
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Estadístiques històriques
+HistoryStats.cupwinner=Guanyador de la copa
+HistoryStats.cupwinner.short=CC
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Pots promocionar-lo avui
 
 # links
-foxtrick.links.boxheader=Enllaços
+links.boxheader=Enllaços
 
 #teamstats+filters
-foxtrick.TeamStats.label=Vista general de l’equip
-foxtrick.TeamStats.PlayerNotToOld.label=Jugadors < 19 anys
-foxtrick.TeamStats.PlayerToOld.label=Jugadors >\= 19 anys
-foxtrick.TeamStats.Cards.label=Targetes
-foxtrick.TeamStats.Injured.label=Lesionat
-foxtrick.TeamStats.TransferListed.label=Transferible
-foxtrick.TeamStats.Pictures.label=Cares
-foxtrick.TeamStats.PlayedLatest.label=Ha jugat el darrer partit
-foxtrick.TeamStats.NotPlayedLatest.label=No ha jugat el darrer partit
+TeamStats.boxheader=Vista general de l’equip
+TeamStats.PlayerNotToOld=Jugadors < 19 anys
+TeamStats.PlayerToOld=Jugadors >\= 19 anys
+TeamStats.Cards=Targetes
+TeamStats.Injured=Lesionat
+TeamStats.TransferListed=Transferible
+TeamStats.Pictures=Cares
+TeamStats.PlayedLatest=Ha jugat el darrer partit
+TeamStats.NotPlayedLatest=No ha jugat el darrer partit
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Informació de la lliga
+seasonstats.boxheader=Informació de la lliga
 
-foxtrick.seasonstats.played=Pj
-foxtrick.seasonstats.won=G
-foxtrick.seasonstats.draw=E
-foxtrick.seasonstats.lost=P
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GC
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=C
-foxtrick.seasonstats.away=F
-foxtrick.seasonstats.league=Lliga
-foxtrick.seasonstats.friendly=Amistosos
-foxtrick.seasonstats.cup=Copa
-foxtrick.seasonstats.masters=Màsters
+seasonstats.played=Pj
+seasonstats.won=G
+seasonstats.draw=E
+seasonstats.lost=P
+seasonstats.goalplus=GF
+seasonstats.goalminus=GC
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=C
+seasonstats.away=F
+seasonstats.league=Lliga
+seasonstats.friendly=Amistosos
+seasonstats.cup=Copa
+seasonstats.masters=Màsters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtre de l'alimentador de notícies\:
-foxtrick.LeagueNewsFilter.all=Tot
-foxtrick.LeagueNewsFilter.friendlies=Amistosos i canvis d'entrenador
-foxtrick.LeagueNewsFilter.transfers=Transferències
-foxtrick.LeagueNewsFilter.lineup_changes=Canvis a la alineació
+LeagueNewsFilter.label=Filtre de l'alimentador de notícies\:
+LeagueNewsFilter.all=Tot
+LeagueNewsFilter.friendlies=Amistosos i canvis d'entrenador
+LeagueNewsFilter.transfers=Transferències
+LeagueNewsFilter.lineupChanges=Canvis a la alineació
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
-leave_conf_button=Surt d'aquest fòrum
+AddLeaveConfButton.alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
+AddLeaveConfButton.LeaveForum=Surt d'aquest fòrum
 
 
 # ForumTemplates
@@ -376,7 +376,7 @@ preview=Vista prèvia
 forumPreview.send=Envia
 
 #Forums
-foxtrick.CopyPostID=Copia la id de missatge al porta-retalls
+copy.PostID=Copia la id de missatge al porta-retalls
 CopyPosting=Copia el missatge amb estil %s
 CopyPosting.abbr=Copia amb estil %s
 CopyPosting.style.ht-ml=HT-ML
@@ -408,10 +408,10 @@ ForumSpecialBBCode.enterSeparator=Introdueix un separador personalitzat
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Introduïu el nom del filtre\:
-foxtrick.transferfilter.delete_filter_ask=Voleu eliminar aquest filtre?
-foxtrick.transferfilter.save_new_filter=Desa un filtre nou
-foxtrick.transferfilter.Foxtrick_Filters=Filtres de FoxTrick
+TransferSearchFilters.enterName=Introduïu el nom del filtre\:
+TransferSearchFilters.deleteFilter.ask=Voleu eliminar aquest filtre?
+TransferSearchFilters.saveFilter=Desa un filtre nou
+TransferSearchFilters.boxheader=Filtres de FoxTrick
 
 #Filter
 
@@ -545,18 +545,18 @@ Current_league.abbr=Lliga
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mig
-foxtrick.matchdetail.attack=Atac
-foxtrick.matchdetail.defence=Defensa
-foxtrick.shortcut.matchlineup=alineació
+match.ratings.midfield=Mig
+match.ratings.attack=Atac
+match.ratings.defence=Defensa
+lineupShortcut.lineup=alineació
 
-foxtrick.matchdetail.right=Dreta
-foxtrick.matchdetail.center=Central
-foxtrick.matchdetail.left=Esquerra
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=E
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Dreta
+match.ratings.center=Central
+match.ratings.left=Esquerra
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=E
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Voleu fer una oferta per aquest jugador? El preu és %s.
 foxtrick.tlconfirmation=Voleu posar el jugador a la llista de transferibles? El preu de venta és %s.
 foxtrick.staffconfirmationhire=Voleu contractar %num %kind?
@@ -633,7 +633,7 @@ matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Estadístiques de Supporter
+shortcuts.suppstats=Estadístiques de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
