--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -235,7 +235,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Zvětšit prostor pro ikonky
 foxtrick.ExtraShortcuts.Supporterstats.desc=Ikona s odkazem na statistiky fanouška
 foxtrick.ExtraShortcuts.Transfers.desc=Ikona s odkazem na stránku přestupů vlastního týmu
 foxtrick.ExtraShortcuts.Prefs.desc=Ikona s odkazem na stránku s nastavením
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Ikona s odkazem na stránku s CHPP nastavením
+ExtraShortcuts.ManageCHPP.desc=Ikona s odkazem na stránku s CHPP nastavením
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Ikona s odkazem na stránku s nastavením FoxTricku
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=Rádio No9
@@ -267,10 +267,10 @@ foxtrick.PlayerBirthday.desc=Na stránce s přehledem hráčů zobrazuje údaje 
 foxtrick.MovePlayerSelectbox.desc=Na stránce hráče přesouvá nabídku pro výběr hráčů nahoru.
 foxtrick.SeasonStats.desc=Na stránce archivu zápasů zobrazuje statistiky.
 foxtrick.LeagueNewsFilter.desc=Filtry pro zobrazování jednotlivých ligových událostí.
-foxtrick.LeagueNewsFilter.all.desc=Zobrazovat všechny novinky
-foxtrick.LeagueNewsFilter.friendlies.desc=Zobrazovat jen informace o mezinárodních přátelských zápasech a změnách trenérů
-foxtrick.LeagueNewsFilter.transfers.desc=Zobrazovat jen informace o přestupech
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Zobrazovat jen informace o změnách sestav
+LeagueNewsFilter.all.desc=Zobrazovat všechny novinky
+LeagueNewsFilter.friendlies.desc=Zobrazovat jen informace o mezinárodních přátelských zápasech a změnách trenérů
+LeagueNewsFilter.transfers.desc=Zobrazovat jen informace o přestupech
+LeagueNewsFilter.lineupChanges.desc=Zobrazovat jen informace o změnách sestav
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Na stránce regionu přesouvá manažery, kteří jsou připojeni, nahoru. Upozornění\: Pokud počet připojených manažerů přesáhne hodnotu 100, systém může být velice pomalý.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Zapnout plovoucí nabídku u odkazů na tým
@@ -387,27 +387,27 @@ foxtrick.RatingsDisplay.HatStats.desc=Jako HatStats
 #Save for work
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Vložený obrázek
+EmbedMedia.EmbeddedImage=Vložený obrázek
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistiky
-foxtrick.ExtraShortcuts.transfers=Přestupy
-foxtrick.ExtraShortcuts.ManageCHPP=Správa CHPP aplikací
-foxtrick.ExtraShortcuts.prefs=Nastavení
-foxtrick.ExtraShortcuts.ftprefs=Nastavení FoxTricku
+ExtraShortcuts.statistics=Statistiky
+ExtraShortcuts.transfers=Přestupy
+ExtraShortcuts.ManageCHPP=Správa CHPP aplikací
+ExtraShortcuts.prefs=Nastavení
+ExtraShortcuts.ftprefs=Nastavení FoxTricku
 
 #HistoryStats
-foxtrick.HistoryStats.season=Sezóna
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Pohár
-foxtrick.HistoryStats.cup.short=P
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Konečné umístění
-foxtrick.HistoryStats.pos.short=Poz.
-foxtrick.HistoryStats.label=Historické statistiky
-foxtrick.HistoryStats.cupwinner=vítěz poháru
-foxtrick.HistoryStats.cupwinner.short=VP
+HistoryStats.season=Sezóna
+HistoryStats.season.short=S
+HistoryStats.cup=Pohár
+HistoryStats.cup.short=P
+HistoryStats.league=Liga
+HistoryStats.league.short=L
+HistoryStats.finalPosition=Konečné umístění
+HistoryStats.finalPosition.short=Poz.
+HistoryStats.label=Historické statistiky
+HistoryStats.cupwinner=vítěz poháru
+HistoryStats.cupwinner.short=VP
 
 # YouthPromotes
 #following string uses pluralForms
@@ -415,56 +415,56 @@ YouthPromotes.future=Hráč může být přeřazen za %1 dní (%2).
 YouthPromotes.today=Hráč již může být přeřazen\!
 
 # links
-foxtrick.links.boxheader=Odkazy
+links.boxheader=Odkazy
 
 #teamstats+filters
-foxtrick.TeamStats.label=Přehled o týmu
-foxtrick.TeamStats.PlayerNotToOld.label=Hráči do 19 let
-foxtrick.TeamStats.PlayerToOld.label=Hráči nad 19 let
-foxtrick.TeamStats.Cards.label=Karty
-foxtrick.TeamStats.Injured.label=Zranění
-foxtrick.TeamStats.TransferListed.label=Na přestupové listině
-foxtrick.TeamStats.Pictures.label=Obličeje
-foxtrick.TeamStats.PlayedLatest.label=Hrající v posledním utkání
-foxtrick.TeamStats.NotPlayedLatest.label=Nehrající v posledním utkání
-foxtrick.TeamStats.NotTransferListed.label=Mimo přestupovou listinu
-foxtrick.TeamStats.ActivePlayers.label=Aktivní hráči
-foxtrick.TeamStats.HomeGrownPlayers.label=Odchovanci
-foxtrick.TeamStats.PurchasedPlayers.label=Zakoupení hráči
-foxtrick.TeamStats.FilterFor=Filtr pro
+TeamStats.boxheader=Přehled o týmu
+TeamStats.PlayerNotToOld=Hráči do 19 let
+TeamStats.PlayerToOld=Hráči nad 19 let
+TeamStats.Cards=Karty
+TeamStats.Injured=Zranění
+TeamStats.TransferListed=Na přestupové listině
+TeamStats.Pictures=Obličeje
+TeamStats.PlayedLatest=Hrající v posledním utkání
+TeamStats.NotPlayedLatest=Nehrající v posledním utkání
+TeamStats.NotTransferListed=Mimo přestupovou listinu
+TeamStats.ActivePlayers=Aktivní hráči
+TeamStats.HomeGrownPlayers=Odchovanci
+TeamStats.PurchasedPlayers=Zakoupení hráči
+TeamStats.FilterFor=Filtr pro
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Souhrn sezóny
+seasonstats.boxheader=Souhrn sezóny
 
-foxtrick.seasonstats.played=Z
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=R
-foxtrick.seasonstats.lost=P
-foxtrick.seasonstats.goalplus=VG
-foxtrick.seasonstats.goalminus=IG
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=Cel
-foxtrick.seasonstats.home=Dom
-foxtrick.seasonstats.away=Ven
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Přátelská utkání
-foxtrick.seasonstats.cup=Pohár
-foxtrick.seasonstats.masters=HT Masters
+seasonstats.played=Z
+seasonstats.won=V
+seasonstats.draw=R
+seasonstats.lost=P
+seasonstats.goalplus=VG
+seasonstats.goalminus=IG
+seasonstats.goaldiff=±
+seasonstats.total=Cel
+seasonstats.home=Dom
+seasonstats.away=Ven
+seasonstats.league=Liga
+seasonstats.friendly=Přátelská utkání
+seasonstats.cup=Pohár
+seasonstats.masters=HT Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtr ligových zpráv\:
-foxtrick.LeagueNewsFilter.all=Vše
-foxtrick.LeagueNewsFilter.friendlies=Přátelská utkání a změny trenérů
-foxtrick.LeagueNewsFilter.transfers=Přestupy
-foxtrick.LeagueNewsFilter.lineup_changes=Změny sestav
+LeagueNewsFilter.label=Filtr ligových zpráv\:
+LeagueNewsFilter.all=Vše
+LeagueNewsFilter.friendlies=Přátelská utkání a změny trenérů
+LeagueNewsFilter.transfers=Přestupy
+LeagueNewsFilter.lineupChanges=Změny sestav
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
-leave_conf_button=Opustit konferenci
+AddLeaveConfButton.alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
+AddLeaveConfButton.LeaveForum=Opustit konferenci
 
-forum.preferences=Nastavení konferencí
+ShowForumPrefButton.forumPreferences=Nastavení konferencí
 
 # ForumTemplates
 make_template_from_post=Vytvořit šablonu z příspěvku
@@ -481,7 +481,7 @@ preview=Náhled
 forumPreview.send=Poslat
 
 #Forums
-foxtrick.CopyPostID=Kopírovat ID příspěvku do schránky
+copy.PostID=Kopírovat ID příspěvku do schránky
 CopyPosting=Kopírovat příspěvek ve stylu %s
 CopyPosting.abbr=Kopírovat v %s stylu
 CopyPosting.style.ht-ml=HT-ML
@@ -522,10 +522,10 @@ ForumSpecialBBCode.symbols=Vložit symbol\: %s
 ShowNestedQuotes=Zobrazit vložené citace
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Napiš název filtru\:
-foxtrick.transferfilter.delete_filter_ask=Opravdu chceš odstranit tento filtr?
-foxtrick.transferfilter.save_new_filter=Uložit nový filtr
-foxtrick.transferfilter.Foxtrick_Filters=Foxtrick filtry
+TransferSearchFilters.enterName=Napiš název filtru\:
+TransferSearchFilters.deleteFilter.ask=Opravdu chceš odstranit tento filtr?
+TransferSearchFilters.saveFilter=Uložit nový filtr
+TransferSearchFilters.boxheader=Foxtrick filtry
 
 #Filter
 Filters=Filtry
@@ -749,19 +749,19 @@ skilltable.youthplayer=odchovanec
 skilltable.rebought_youthplayer=znovukoupený odchovanec
 
 #matchdetail
-foxtrick.matchdetail.midfield=Záloha
-foxtrick.matchdetail.attack=Útok
-foxtrick.matchdetail.defence=Obrana
-foxtrick.matchdetail.total=Celek
-foxtrick.shortcut.matchlineup=sestava
+match.ratings.midfield=Záloha
+match.ratings.attack=Útok
+match.ratings.defence=Obrana
+match.ratings.total=Celek
+lineupShortcut.lineup=sestava
 
-foxtrick.matchdetail.right=Pravý
-foxtrick.matchdetail.center=Střední
-foxtrick.matchdetail.left=Levý
-foxtrick.matchdetail.rightshort=P
-foxtrick.matchdetail.centershort=S
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=NK
+match.ratings.right=Pravý
+match.ratings.center=Střední
+match.ratings.left=Levý
+match.ratings.rightshort=P
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=NK
 foxtrick.bidconfirmation=Opravdu chceš za tohoto hráče nabídnout %s?
 foxtrick.tlconfirmation=Opravdu chceš tohoto hráče umístit na přestupový trh? Jeho vyvolávací cena bude %s.
 foxtrick.staffconfirmationhire=Opravdu chceš, aby do klubu přišli %num %kind?
@@ -867,7 +867,7 @@ matches.wronglang=FoxTrick\: Statistiky nemohou být zobrazeny, neboť váš jaz
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Statistiky Fanouška
+shortcuts.suppstats=Statistiky Fanouška
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
