--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -215,7 +215,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Forøge mellemrum for genvejsikoner
 foxtrick.ExtraShortcuts.Supporterstats.desc=Link til supporter statistik
 foxtrick.ExtraShortcuts.Transfers.desc=Link til transfer side af eget hold
 foxtrick.ExtraShortcuts.Prefs.desc=Link til Indstillings side
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link til CHPP indstillings side
+ExtraShortcuts.ManageCHPP.desc=Link til CHPP indstillings side
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link til FoxTrick indstillings side
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -267,8 +267,8 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #Newsfeed filter
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
-leave_conf_button=Forlad forum
+AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
+AddLeaveConfButton.LeaveForum=Forlad forum
 
 
 # ForumTemplates
@@ -432,19 +432,19 @@ skilltable.youthplayer=ungdomsspiller
 skilltable.rebought_youthplayer=genkøbt ungdomspiller
 
 #matchdetail
-foxtrick.matchdetail.midfield=Midtbane
-foxtrick.matchdetail.attack=Angreb
-foxtrick.matchdetail.defence=Forsvar
-foxtrick.matchdetail.total=I alt
-foxtrick.shortcut.matchlineup=kampopstilling
+match.ratings.midfield=Midtbane
+match.ratings.attack=Angreb
+match.ratings.defence=Forsvar
+match.ratings.total=I alt
+lineupShortcut.lineup=kampopstilling
 
-foxtrick.matchdetail.right=Højre
-foxtrick.matchdetail.center=Center
-foxtrick.matchdetail.left=Venstre
-foxtrick.matchdetail.rightshort=H
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=V
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Højre
+match.ratings.center=Center
+match.ratings.left=Venstre
+match.ratings.rightshort=H
+match.ratings.centershort=C
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Ønsker du at byde på denne spiller? Prisen er %s.
 foxtrick.tlconfirmation=Ønsker du at transferliste denne spiller? Den valgte startpris er %s.
 foxtrick.staffconfirmationhire=Ønsker du at ansætte %num %slags?
