--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -236,7 +236,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Vergrössern der Linkleiste
 foxtrick.ExtraShortcuts.Supporterstats.desc=Linkicon für Supporterstatistiken
 foxtrick.ExtraShortcuts.Transfers.desc=Linkicon für die Transferübersicht des eigenen Teams
 foxtrick.ExtraShortcuts.Prefs.desc=Linkicon zur Einstellungen-Seite
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Linkicon zu den CHPP-Einstellungen
+ExtraShortcuts.ManageCHPP.desc=Linkicon zu den CHPP-Einstellungen
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Linkicon zu den FoxTrick-Einstellungen
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -270,10 +270,10 @@ foxtrick.PlayerBirthday.desc=Anzeige kommender und aktueller Geburtstage von Spi
 foxtrick.MovePlayerSelectbox.desc=Verschieben der Spielerauswahl-Box nach oben auf der Übersichtsseite
 foxtrick.SeasonStats.desc=Anzeige einiger Statistiken auf der Archivseite
 foxtrick.LeagueNewsFilter.desc=Hinzufügen einer News-Filterbox auf der Ligaseite. Auswahl der Standardansicht
-foxtrick.LeagueNewsFilter.all.desc=Alle News anzeigen
-foxtrick.LeagueNewsFilter.friendlies.desc=Nur internationale Friendlies anzeigen
-foxtrick.LeagueNewsFilter.transfers.desc=Nur Transfers anzeigen
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Nur Aufstellungen anzeigen
+LeagueNewsFilter.all.desc=Alle News anzeigen
+LeagueNewsFilter.friendlies.desc=Nur internationale Friendlies anzeigen
+LeagueNewsFilter.transfers.desc=Nur Transfers anzeigen
+LeagueNewsFilter.lineupChanges.desc=Nur Aufstellungen anzeigen
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Manager die online sind als erstes auf der Regionen-Seite anzeigen. Achtung\! Falls mehr als 100 Manager online sind, so kann die Anzeige sehr verlangsamt werden\!
 foxtrick.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
@@ -390,31 +390,31 @@ foxtrick.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Titel
-foxtrick.SafeForWork.icon=Icon
+SafeForWork.title=Titel
+SafeForWork.icon=Icon
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Eingebettetes Bild
+EmbedMedia.EmbeddedImage=Eingebettetes Bild
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistiken
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Deine CHPP Produkte
-foxtrick.ExtraShortcuts.prefs=Einstellungen
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
+ExtraShortcuts.statistics=Statistiken
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Deine CHPP Produkte
+ExtraShortcuts.prefs=Einstellungen
+ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
 
 #HistoryStats
-foxtrick.HistoryStats.season=Saison
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Pokalrunde
-foxtrick.HistoryStats.cup.short=P
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Endplatzierung
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=History Stats
-foxtrick.HistoryStats.cupwinner=Pokalsieger
-foxtrick.HistoryStats.cupwinner.short=PS
+HistoryStats.season=Saison
+HistoryStats.season.short=S
+HistoryStats.cup=Pokalrunde
+HistoryStats.cup.short=P
+HistoryStats.league=Liga
+HistoryStats.league.short=L
+HistoryStats.finalPosition=Endplatzierung
+HistoryStats.finalPosition.short=P
+HistoryStats.label=History Stats
+HistoryStats.cupwinner=Pokalsieger
+HistoryStats.cupwinner.short=PS
 
 # YouthPromotes
 #following string uses pluralForms
@@ -422,56 +422,56 @@ YouthPromotes.future=Spieler kann befördert werden in %1 Tagen am %2.
 YouthPromotes.today=Spieler kann heute befördert werden.
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=Teamübersicht
-foxtrick.TeamStats.PlayerNotToOld.label=Spieler < 19 Jahre
-foxtrick.TeamStats.PlayerToOld.label=Spieler >\= 19 Jahre
-foxtrick.TeamStats.Cards.label=Karten
-foxtrick.TeamStats.Injured.label=Verletzungen
-foxtrick.TeamStats.TransferListed.label=Transfergelistet
-foxtrick.TeamStats.Pictures.label=Gesichter
-foxtrick.TeamStats.PlayedLatest.label=Einsatz im letzten Spiel
-foxtrick.TeamStats.NotPlayedLatest.label=Ohne Einsatz im letzten Spiel
-foxtrick.TeamStats.NotTransferListed.label=Nicht transfergelistet
-foxtrick.TeamStats.ActivePlayers.label=Aktive Spieler
-foxtrick.TeamStats.HomeGrownPlayers.label=Eigengewächse
-foxtrick.TeamStats.PurchasedPlayers.label=Gekaufte
-foxtrick.TeamStats.FilterFor=Filtern nach
+TeamStats.boxheader=Teamübersicht
+TeamStats.PlayerNotToOld=Spieler < 19 Jahre
+TeamStats.PlayerToOld=Spieler >\= 19 Jahre
+TeamStats.Cards=Karten
+TeamStats.Injured=Verletzungen
+TeamStats.TransferListed=Transfergelistet
+TeamStats.Pictures=Gesichter
+TeamStats.PlayedLatest=Einsatz im letzten Spiel
+TeamStats.NotPlayedLatest=Ohne Einsatz im letzten Spiel
+TeamStats.NotTransferListed=Nicht transfergelistet
+TeamStats.ActivePlayers=Aktive Spieler
+TeamStats.HomeGrownPlayers=Eigengewächse
+TeamStats.PurchasedPlayers=Gekaufte
+TeamStats.FilterFor=Filtern nach
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Saisonübersicht
+seasonstats.boxheader=Saisonübersicht
 
-foxtrick.seasonstats.played=Sp
-foxtrick.seasonstats.won=S
-foxtrick.seasonstats.draw=U
-foxtrick.seasonstats.lost=N
-foxtrick.seasonstats.goalplus=T+
-foxtrick.seasonstats.goalminus=T-
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=Ges
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Freundschaftsspiele
-foxtrick.seasonstats.cup=Pokal
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Sp
+seasonstats.won=S
+seasonstats.draw=U
+seasonstats.lost=N
+seasonstats.goalplus=T+
+seasonstats.goalminus=T-
+seasonstats.goaldiff=±
+seasonstats.total=Ges
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=Liga
+seasonstats.friendly=Freundschaftsspiele
+seasonstats.cup=Pokal
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=News-Filter\:
-foxtrick.LeagueNewsFilter.all=Alle
-foxtrick.LeagueNewsFilter.friendlies=Freundschaftsspiele
-foxtrick.LeagueNewsFilter.transfers=Transfers
-foxtrick.LeagueNewsFilter.lineup_changes=Aufstellungen
+LeagueNewsFilter.label=News-Filter\:
+LeagueNewsFilter.all=Alle
+LeagueNewsFilter.friendlies=Freundschaftsspiele
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Aufstellungen
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Auf den Speichern-Button im nächsten Fenster klicken um dieses Forum abzubestellen.
-leave_conf_button=Forum abbestellen
+AddLeaveConfButton.alert=Auf den Speichern-Button im nächsten Fenster klicken um dieses Forum abzubestellen.
+AddLeaveConfButton.LeaveForum=Forum abbestellen
 
-forum.preferences=Foren-Einstellungen
+ShowForumPrefButton.forumPreferences=Foren-Einstellungen
 
 # ForumTemplates
 make_template_from_post=Vorlage aus dem Posting erstellen
@@ -488,7 +488,7 @@ preview=Vorschau
 forumPreview.send=Absenden
 
 #Forums
-foxtrick.CopyPostID=In die Zwischenablage kopieren
+copy.PostID=In die Zwischenablage kopieren
 CopyPosting=Kopiere Posting im %s Stil
 CopyPosting.abbr=Kopiere im %s Stil
 CopyPosting.style.ht-ml=HT-ML
@@ -529,10 +529,10 @@ ForumSpecialBBCode.symbols=Symbol einfügen\: %s
 ShowNestedQuotes=Zeige verschachtelte Zitat an
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Filtername\:
-foxtrick.transferfilter.delete_filter_ask=Diesen Filter wirklich löschen?
-foxtrick.transferfilter.save_new_filter=Filter speichern
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filter
+TransferSearchFilters.enterName=Filtername\:
+TransferSearchFilters.deleteFilter.ask=Diesen Filter wirklich löschen?
+TransferSearchFilters.saveFilter=Filter speichern
+TransferSearchFilters.boxheader=FoxTrick Filter
 
 #Filter
 Filters=Filter
@@ -757,19 +757,19 @@ skilltable.youthplayer=Jugendspieler
 skilltable.rebought_youthplayer=zurückgekaufter Jugendspieler
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mittelfeld
-foxtrick.matchdetail.attack=Angriff
-foxtrick.matchdetail.defence=Verteidigung
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=Aufstellung
+match.ratings.midfield=Mittelfeld
+match.ratings.attack=Angriff
+match.ratings.defence=Verteidigung
+match.ratings.total=Total
+lineupShortcut.lineup=Aufstellung
 
-foxtrick.matchdetail.right=Rechts
-foxtrick.matchdetail.center=Mitte
-foxtrick.matchdetail.left=Links
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=M
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Rechts
+match.ratings.center=Mitte
+match.ratings.left=Links
+match.ratings.rightshort=R
+match.ratings.centershort=M
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Auf diesen Spieler bieten? Der Preis beträgt %s.
 foxtrick.tlconfirmation=Den Spieler auf die Transferliste setzen? Der Preis beträgt %s.
 foxtrick.staffconfirmationhire=Sollen %num %kind eingestellt werden?
@@ -875,7 +875,7 @@ matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter Statistiken
+shortcuts.suppstats=Supporter Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
