--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -86,8 +86,8 @@ foxtrick.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Title
-foxtrick.SafeForWork.icon=Icon
+SafeForWork.title=Title
+SafeForWork.icon=Icon
 
 #Embed Media
 
@@ -102,9 +102,9 @@ YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be p
 # links
 
 #teamstats+filters
-foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
-foxtrick.TeamStats.HomeGrownPlayers.label=Home grown players
-foxtrick.TeamStats.FilterFor=Filter for
+TeamStats.NotPlayedLatest=Did not play in last match
+TeamStats.HomeGrownPlayers=Home grown players
+TeamStats.FilterFor=Filter for
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -198,7 +198,7 @@ skilltable.rebought_youthplayer=rebought youth player
 
 #matchdetail
 
-foxtrick.matchdetail.center=Centre
+match.ratings.center=Centre
 foxtrick.confirmstripserver=Do you want to strip the Hattrick server from links to make them usable in the forum?
 copy.selectplayer=Select player
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
@@ -250,7 +250,7 @@ matches.wronglang=FoxTrick\: The stats cannot be displayed because your language
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter Statistics
+shortcuts.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
