--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -235,7 +235,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Aumentar espacio para iconos (atajos)
 foxtrick.ExtraShortcuts.Supporterstats.desc=Enlace a estadísticas de supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Enlace a la página de transferencias de tu equipo
 foxtrick.ExtraShortcuts.Prefs.desc=Enlace a la página de Preferencias
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Enlace a la página de preferencias CHPP
+ExtraShortcuts.ManageCHPP.desc=Enlace a la página de preferencias CHPP
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Enlace a la página de Preferencias de Foxtrick
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -269,10 +269,10 @@ foxtrick.PlayerBirthday.desc=Muestra los ultimos y próximos cumpleaños en la V
 foxtrick.MovePlayerSelectbox.desc=Mueve la caja de selección de jugadores arriba en la pàgina del jugador
 foxtrick.SeasonStats.desc=Muestra algunas estadìsticas en la pàgina de Archivo de partidos
 foxtrick.LeagueNewsFilter.desc=En la página de la liga, resalta a los equipos que colocaron o cambiaron las ordenes de su partido en la ultima semana y añade caja de selección con filtros para las noticias de la liga. Configura el filtro por defecto\:
-foxtrick.LeagueNewsFilter.all.desc=Mostrar todas la noticias
-foxtrick.LeagueNewsFilter.friendlies.desc=Mostrar solo amistosos internacionales y cambio de entrenador
-foxtrick.LeagueNewsFilter.transfers.desc=Mostrar solo transferencias
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostrar solo cambios en la alineación
+LeagueNewsFilter.all.desc=Mostrar todas la noticias
+LeagueNewsFilter.friendlies.desc=Mostrar solo amistosos internacionales y cambio de entrenador
+LeagueNewsFilter.transfers.desc=Mostrar solo transferencias
+LeagueNewsFilter.lineupChanges.desc=Mostrar solo cambios en la alineación
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Mueve la lista de managers en linea en la región. Precaución\! Esto puede volverse muy lento si la lista de managers en línea es mayor a 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Añade ventana de enlaces a los enlaces del equipo
@@ -389,31 +389,31 @@ foxtrick.SafeForWork.desc=Remplazar iconos y el texto del título de las pestañ
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Título
-foxtrick.SafeForWork.icon=Icono
+SafeForWork.title=Título
+SafeForWork.icon=Icono
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Imagen Embebida
+EmbedMedia.EmbeddedImage=Imagen Embebida
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Estadísticas
-foxtrick.ExtraShortcuts.transfers=Transferencias
-foxtrick.ExtraShortcuts.ManageCHPP=Organizar tus aplicaciones CHPP
-foxtrick.ExtraShortcuts.prefs=Preferencias
-foxtrick.ExtraShortcuts.ftprefs=Preferencias de FoxTrick
+ExtraShortcuts.statistics=Estadísticas
+ExtraShortcuts.transfers=Transferencias
+ExtraShortcuts.ManageCHPP=Organizar tus aplicaciones CHPP
+ExtraShortcuts.prefs=Preferencias
+ExtraShortcuts.ftprefs=Preferencias de FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=Temporada
-foxtrick.HistoryStats.season.short=T
-foxtrick.HistoryStats.cup=Ronda Copa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Posición final en la Liga
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Estadísticas del Historial
-foxtrick.HistoryStats.cupwinner=Ganador Copa
-foxtrick.HistoryStats.cupwinner.short=GC
+HistoryStats.season=Temporada
+HistoryStats.season.short=T
+HistoryStats.cup=Ronda Copa
+HistoryStats.cup.short=C
+HistoryStats.league=Liga
+HistoryStats.league.short=L
+HistoryStats.finalPosition=Posición final en la Liga
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Estadísticas del Historial
+HistoryStats.cupwinner=Ganador Copa
+HistoryStats.cupwinner.short=GC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -421,56 +421,56 @@ YouthPromotes.future=El jugador puede ser promocionado en %1 día(s) luego en %2
 YouthPromotes.today=El jugador puede ser promocionado hoy\!
 
 # links
-foxtrick.links.boxheader=Enlaces
+links.boxheader=Enlaces
 
 #teamstats+filters
-foxtrick.TeamStats.label=Resumen del Equipo
-foxtrick.TeamStats.PlayerNotToOld.label=Jugadores < 19 años
-foxtrick.TeamStats.PlayerToOld.label=Jugadores >\= 19 años
-foxtrick.TeamStats.Cards.label=Tarjetas
-foxtrick.TeamStats.Injured.label=Lesionados
-foxtrick.TeamStats.TransferListed.label=En Venta
-foxtrick.TeamStats.Pictures.label=Imágenes
-foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
-foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
-foxtrick.TeamStats.NotTransferListed.label=Sin transferir
-foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
-foxtrick.TeamStats.HomeGrownPlayers.label=Jugadores nacidos en el club
-foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
-foxtrick.TeamStats.FilterFor=Filtro para
+TeamStats.boxheader=Resumen del Equipo
+TeamStats.PlayerNotToOld=Jugadores < 19 años
+TeamStats.PlayerToOld=Jugadores >\= 19 años
+TeamStats.Cards=Tarjetas
+TeamStats.Injured=Lesionados
+TeamStats.TransferListed=En Venta
+TeamStats.Pictures=Imágenes
+TeamStats.PlayedLatest=Jugaron el último partido
+TeamStats.NotPlayedLatest=No jugaron el último partido
+TeamStats.NotTransferListed=Sin transferir
+TeamStats.ActivePlayers=Jugadores activos
+TeamStats.HomeGrownPlayers=Jugadores nacidos en el club
+TeamStats.PurchasedPlayers=Jugadores comprados
+TeamStats.FilterFor=Filtro para
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Resumen Temporada
+seasonstats.boxheader=Resumen Temporada
 
-foxtrick.seasonstats.played=PJ
-foxtrick.seasonstats.won=PG
-foxtrick.seasonstats.draw=PE
-foxtrick.seasonstats.lost=PP
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GC
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=L
-foxtrick.seasonstats.away=V
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Amistoso
-foxtrick.seasonstats.cup=Copa
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=PJ
+seasonstats.won=PG
+seasonstats.draw=PE
+seasonstats.lost=PP
+seasonstats.goalplus=GF
+seasonstats.goalminus=GC
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=L
+seasonstats.away=V
+seasonstats.league=Liga
+seasonstats.friendly=Amistoso
+seasonstats.cup=Copa
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtro de Noticias\:
-foxtrick.LeagueNewsFilter.all=Todas
-foxtrick.LeagueNewsFilter.friendlies=Amistosos y cambios de entrenador
-foxtrick.LeagueNewsFilter.transfers=Transferencias
-foxtrick.LeagueNewsFilter.lineup_changes=Cambios Alineación
+LeagueNewsFilter.label=Filtro de Noticias\:
+LeagueNewsFilter.all=Todas
+LeagueNewsFilter.friendlies=Amistosos y cambios de entrenador
+LeagueNewsFilter.transfers=Transferencias
+LeagueNewsFilter.lineupChanges=Cambios Alineación
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
-leave_conf_button=Abandonar foro.
+AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
+AddLeaveConfButton.LeaveForum=Abandonar foro.
 
-forum.preferences=Preferencias del Foro
+ShowForumPrefButton.forumPreferences=Preferencias del Foro
 
 # ForumTemplates
 make_template_from_post=Crear plantilla a partir de este mensaje
@@ -487,7 +487,7 @@ preview=Vista previa
 forumPreview.send=Enviar
 
 #Forums
-foxtrick.CopyPostID=Copiar al Portapapeles el ID del mensaje
+copy.PostID=Copiar al Portapapeles el ID del mensaje
 CopyPosting=Copiar mensaje en estilo %s
 CopyPosting.abbr=Copiar en estilo %s
 CopyPosting.style.ht-ml=HT-ML
@@ -528,10 +528,10 @@ ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 ShowNestedQuotes=Mostrar citas anidadas
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Escriba el nombre del filtro\:
-foxtrick.transferfilter.delete_filter_ask=¿Deseas borrar este filtro?
-foxtrick.transferfilter.save_new_filter=Guardar nuevo filtro
-foxtrick.transferfilter.Foxtrick_Filters=Filtros de Foxtrick
+TransferSearchFilters.enterName=Escriba el nombre del filtro\:
+TransferSearchFilters.deleteFilter.ask=¿Deseas borrar este filtro?
+TransferSearchFilters.saveFilter=Guardar nuevo filtro
+TransferSearchFilters.boxheader=Filtros de Foxtrick
 
 #Filter
 Filters=Filtros
@@ -756,19 +756,19 @@ skilltable.youthplayer=juvenil
 skilltable.rebought_youthplayer=juvenil recomprado
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mediocampo
-foxtrick.matchdetail.attack=Ataque
-foxtrick.matchdetail.defence=Defensa
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=alineación
+match.ratings.midfield=Mediocampo
+match.ratings.attack=Ataque
+match.ratings.defence=Defensa
+match.ratings.total=Total
+lineupShortcut.lineup=alineación
 
-foxtrick.matchdetail.right=Derecha
-foxtrick.matchdetail.center=Central
-foxtrick.matchdetail.left=Izquierda
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=I
-foxtrick.matchdetail.ifkshort=Tli.
+match.ratings.right=Derecha
+match.ratings.center=Central
+match.ratings.left=Izquierda
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=I
+match.ratings.ifkshort=Tli.
 foxtrick.bidconfirmation=¿Deseas ofrecer por este jugador? El precio es %s.
 foxtrick.tlconfirmation=¿Deseas poner a este jugador en la lista de transferencias? El precio solicitado es %s
 foxtrick.staffconfirmationhire=¿Deseas contratar %num %kind?
@@ -874,7 +874,7 @@ matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu id
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Estadísticas de Supporter
+shortcuts.suppstats=Estadísticas de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
