--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -217,7 +217,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Incrementa el espacio para los accesos dir
 foxtrick.ExtraShortcuts.Supporterstats.desc=Link a estadísticas de supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Link a página de transferencias en el propio equipo
 foxtrick.ExtraShortcuts.Prefs.desc=Link a página de preferencias
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link a página de preferencias CHPP
+ExtraShortcuts.ManageCHPP.desc=Link a página de preferencias CHPP
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link a página de preferencias de foxtrick
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -249,10 +249,10 @@ foxtrick.PlayerBirthday.desc=Muestra el último y el próximo cumpleaños en el 
 foxtrick.MovePlayerSelectbox.desc=Mover el cuadro de selección de jugadores arriba en la página de detalle de los jugadores
 foxtrick.SeasonStats.desc=Mostrar algunas estadísticas en la página de archivo de partidos
 foxtrick.LeagueNewsFilter.desc=Filtros para mostrar algunos tipos de noticias de la liga
-foxtrick.LeagueNewsFilter.all.desc=Todas las noticias
-foxtrick.LeagueNewsFilter.friendlies.desc=Amistosos internacionales y cambios de entrenador
-foxtrick.LeagueNewsFilter.transfers.desc=Sólo transferencias
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Sólo modificaciones en la alineación
+LeagueNewsFilter.all.desc=Todas las noticias
+LeagueNewsFilter.friendlies.desc=Amistosos internacionales y cambios de entrenador
+LeagueNewsFilter.transfers.desc=Sólo transferencias
+LeagueNewsFilter.lineupChanges.desc=Sólo modificaciones en la alineación
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Mover los managers online al principio en la página de las regiones. ¡Precaución\! Muy lento para más de 100 managers\!
 foxtrick.TeamPopupLinks.TeamLinks.desc=Añade popups a los links del equipo
@@ -365,24 +365,24 @@ foxtrick.RatingsDisplay.DenominationsRange.desc=En un rango de 0-20
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=estadísticas
-foxtrick.ExtraShortcuts.transfers=transferencias
-foxtrick.ExtraShortcuts.ManageCHPP=Gestiona tus productos CHPP
-foxtrick.ExtraShortcuts.prefs=preferencias
-foxtrick.ExtraShortcuts.ftprefs=Preferencias de FoxTrick
+ExtraShortcuts.statistics=estadísticas
+ExtraShortcuts.transfers=transferencias
+ExtraShortcuts.ManageCHPP=Gestiona tus productos CHPP
+ExtraShortcuts.prefs=preferencias
+ExtraShortcuts.ftprefs=Preferencias de FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=temporada
-foxtrick.HistoryStats.season.short=t
-foxtrick.HistoryStats.cup=copa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=liga
-foxtrick.HistoryStats.league.short=Liga
-foxtrick.HistoryStats.pos=pos
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Estadísticas históricas
-foxtrick.HistoryStats.cupwinner=Ganador de Copa
-foxtrick.HistoryStats.cupwinner.short=GC
+HistoryStats.season=temporada
+HistoryStats.season.short=t
+HistoryStats.cup=copa
+HistoryStats.cup.short=C
+HistoryStats.league=liga
+HistoryStats.league.short=Liga
+HistoryStats.finalPosition=pos
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Estadísticas históricas
+HistoryStats.cupwinner=Ganador de Copa
+HistoryStats.cupwinner.short=GC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -390,55 +390,55 @@ YouthPromotes.future=El jugador puede ser promocionado %1 día(s) después, el %
 YouthPromotes.today=¡El jugador puede ser promocionado hoy\!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=Resumen del equipo
-foxtrick.TeamStats.PlayerNotToOld.label=Jugadores < 19 años
-foxtrick.TeamStats.PlayerToOld.label=Jugadores >\= 19 años
-foxtrick.TeamStats.Cards.label=Tarjetas
-foxtrick.TeamStats.Injured.label=Lesionado
-foxtrick.TeamStats.TransferListed.label=En lista de transferencias
-foxtrick.TeamStats.Pictures.label=Imágenes
-foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
-foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
-foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
-foxtrick.TeamStats.HomeGrownPlayers.label=Canteranos
-foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
-foxtrick.TeamStats.FilterFor=Filtro para
+TeamStats.boxheader=Resumen del equipo
+TeamStats.PlayerNotToOld=Jugadores < 19 años
+TeamStats.PlayerToOld=Jugadores >\= 19 años
+TeamStats.Cards=Tarjetas
+TeamStats.Injured=Lesionado
+TeamStats.TransferListed=En lista de transferencias
+TeamStats.Pictures=Imágenes
+TeamStats.PlayedLatest=Jugaron el último partido
+TeamStats.NotPlayedLatest=No jugaron el último partido
+TeamStats.ActivePlayers=Jugadores activos
+TeamStats.HomeGrownPlayers=Canteranos
+TeamStats.PurchasedPlayers=Jugadores comprados
+TeamStats.FilterFor=Filtro para
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Resumen de la temporada
+seasonstats.boxheader=Resumen de la temporada
 
-foxtrick.seasonstats.played=Jug
-foxtrick.seasonstats.won=G
-foxtrick.seasonstats.draw=E
-foxtrick.seasonstats.lost=P
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GC
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=C
-foxtrick.seasonstats.away=F
-foxtrick.seasonstats.league=liga
-foxtrick.seasonstats.friendly=Amistosos
-foxtrick.seasonstats.cup=copa
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Jug
+seasonstats.won=G
+seasonstats.draw=E
+seasonstats.lost=P
+seasonstats.goalplus=GF
+seasonstats.goalminus=GC
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=C
+seasonstats.away=F
+seasonstats.league=liga
+seasonstats.friendly=Amistosos
+seasonstats.cup=copa
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtro de noticias\:
-foxtrick.LeagueNewsFilter.all=Todos
-foxtrick.LeagueNewsFilter.friendlies=Amistosos y amigos
-foxtrick.LeagueNewsFilter.transfers=transferencias
-foxtrick.LeagueNewsFilter.lineup_changes=Cambios en la alineación
+LeagueNewsFilter.label=Filtro de noticias\:
+LeagueNewsFilter.all=Todos
+LeagueNewsFilter.friendlies=Amistosos y amigos
+LeagueNewsFilter.transfers=transferencias
+LeagueNewsFilter.lineupChanges=Cambios en la alineación
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar esta conferencia.
-leave_conf_button=Abandonar conferencia
+AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar esta conferencia.
+AddLeaveConfButton.LeaveForum=Abandonar conferencia
 
-forum.preferences=Preferencias del foro
+ShowForumPrefButton.forumPreferences=Preferencias del foro
 
 # ForumTemplates
 make_template_from_post=Crear plantilla a partir de este mensaje
@@ -455,7 +455,7 @@ preview=Vista previa
 forumPreview.send=Enviar
 
 #Forums
-foxtrick.CopyPostID=Copiar ID del mensaje al portapapeles
+copy.PostID=Copiar ID del mensaje al portapapeles
 CopyPosting=Copiar el mensaje en estilo %s
 CopyPosting.abbr=Copia en estilo %s
 CopyPosting.style.ht-ml=HT-ML
@@ -492,10 +492,10 @@ ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Seleccionar nombre del filtro\:
-foxtrick.transferfilter.delete_filter_ask=¿Deseas borrar este filtro?
-foxtrick.transferfilter.save_new_filter=Guardar nuevo filtro
-foxtrick.transferfilter.Foxtrick_Filters=Filtros de Foxtrick
+TransferSearchFilters.enterName=Seleccionar nombre del filtro\:
+TransferSearchFilters.deleteFilter.ask=¿Deseas borrar este filtro?
+TransferSearchFilters.saveFilter=Guardar nuevo filtro
+TransferSearchFilters.boxheader=Filtros de Foxtrick
 
 #Filter
 Filters=Filtros
@@ -693,19 +693,19 @@ Hotlist.abbr=Lista
 skilltable.youthplayer=juvenil canterano
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mediocampo
-foxtrick.matchdetail.attack=Ataque
-foxtrick.matchdetail.defence=Defensa
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=alineación
+match.ratings.midfield=Mediocampo
+match.ratings.attack=Ataque
+match.ratings.defence=Defensa
+match.ratings.total=Total
+lineupShortcut.lineup=alineación
 
-foxtrick.matchdetail.right=Derecha
-foxtrick.matchdetail.center=Centro
-foxtrick.matchdetail.left=Izquierda
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=P
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Derecha
+match.ratings.center=Centro
+match.ratings.left=Izquierda
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=P
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=¿Deseas ofrecer por este jugador? El precio es %s
 foxtrick.tlconfirmation=¿Deseas poner a este jugador en la lista de transferencias? El precio solicitado es %s
 foxtrick.staffconfirmationhire=¿Deseas contratar %num %kind?
@@ -811,7 +811,7 @@ matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu id
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Estadísticas de Supporter
+shortcuts.suppstats=Estadísticas de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
