--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -83,8 +83,8 @@ YouthPromotes.today=Mängijat võib edutada\!
 # links
 
 #teamstats+filters
-foxtrick.TeamStats.Injured.label=Vigastatud
-foxtrick.TeamStats.TransferListed.label=Müüginimekirjas
+TeamStats.Injured=Vigastatud
+TeamStats.TransferListed=Müüginimekirjas
 
 #season stats
 #note to translators. use abreviations of league table where applicable
