--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -234,7 +234,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Kasvata tilaa oikopolku-ikoneille
 foxtrick.ExtraShortcuts.Supporterstats.desc=Linkki supporter tilastoihin
 foxtrick.ExtraShortcuts.Transfers.desc=Linkki oman joukkueen siirtoihin
 foxtrick.ExtraShortcuts.Prefs.desc=Linkki asetuksiin
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Linkki CHPP asetissivuun
+ExtraShortcuts.ManageCHPP.desc=Linkki CHPP asetissivuun
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Linkki Foxtrickin asetuksiin
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -268,10 +268,10 @@ foxtrick.PlayerBirthday.desc=Näytä tulevat ja menneet syntymäpäivät pelaaji
 foxtrick.MovePlayerSelectbox.desc=Siirtää pelaaja-valikkolaatikon ylös pelaajan sivulla
 foxtrick.SeasonStats.desc=Näyttää joitain tilastoja otteluhistoria sivuilla
 foxtrick.LeagueNewsFilter.desc=Suodattimet näyttääkseen tietyn tyyppisiä sarjauutisia
-foxtrick.LeagueNewsFilter.all.desc=Näytä kaikki uutiset
-foxtrick.LeagueNewsFilter.friendlies.desc=Näytä vain kansainväliset ystävyysottelu- ja valmentajan vaihto -uutiset
-foxtrick.LeagueNewsFilter.transfers.desc=Näytä vain siirtouutiset
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Näytä vain kokoonpanomuutokset
+LeagueNewsFilter.all.desc=Näytä kaikki uutiset
+LeagueNewsFilter.friendlies.desc=Näytä vain kansainväliset ystävyysottelu- ja valmentajan vaihto -uutiset
+LeagueNewsFilter.transfers.desc=Näytä vain siirtouutiset
+LeagueNewsFilter.lineupChanges.desc=Näytä vain kokoonpanomuutokset
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Siirtää sisäänkirjautuneiden managerien määrän ylös alue-sivulla. Varoitus\! Tästä ominaisuudesta tulee hidas, jos sisäänkirjautuneiden managerien lista on yli 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Lisää JoukkuePopupLinkit joukkueID linkkeihin
@@ -386,30 +386,30 @@ foxtrick.RatingsDisplay.HatStats.desc=Hatstatteina
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.icon=Ikoni
+SafeForWork.icon=Ikoni
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Upotettu Kuva
+EmbedMedia.EmbeddedImage=Upotettu Kuva
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Tilastot
-foxtrick.ExtraShortcuts.transfers=Siirrot
-foxtrick.ExtraShortcuts.ManageCHPP=Hallinnoi CHPP-ohjelmiasi
-foxtrick.ExtraShortcuts.prefs=Asetukset
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick-asetukset
+ExtraShortcuts.statistics=Tilastot
+ExtraShortcuts.transfers=Siirrot
+ExtraShortcuts.ManageCHPP=Hallinnoi CHPP-ohjelmiasi
+ExtraShortcuts.prefs=Asetukset
+ExtraShortcuts.ftprefs=FoxTrick-asetukset
 
 #HistoryStats
-foxtrick.HistoryStats.season=Kausi
-foxtrick.HistoryStats.season.short=K
-foxtrick.HistoryStats.cup=Cup kierros
-foxtrick.HistoryStats.cup.short=Cup
-foxtrick.HistoryStats.league=Sarja
-foxtrick.HistoryStats.league.short=Sarja
-foxtrick.HistoryStats.pos=Sijoitus sarjassa
-foxtrick.HistoryStats.pos.short=Sija
-foxtrick.HistoryStats.label=Historia tilastot
-foxtrick.HistoryStats.cupwinner=Cup voittaja
-foxtrick.HistoryStats.cupwinner.short=CV
+HistoryStats.season=Kausi
+HistoryStats.season.short=K
+HistoryStats.cup=Cup kierros
+HistoryStats.cup.short=Cup
+HistoryStats.league=Sarja
+HistoryStats.league.short=Sarja
+HistoryStats.finalPosition=Sijoitus sarjassa
+HistoryStats.finalPosition.short=Sija
+HistoryStats.label=Historia tilastot
+HistoryStats.cupwinner=Cup voittaja
+HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
@@ -417,56 +417,56 @@ YouthPromotes.future=Pelaajan voi nostaa %1 päivän kuluttua, eli %2\:;Pelaajan
 YouthPromotes.today=Pelaajan voi nostaa tänään\!
 
 # links
-foxtrick.links.boxheader=Linkit
+links.boxheader=Linkit
 
 #teamstats+filters
-foxtrick.TeamStats.label=Joukkueen yleiskatsaus
-foxtrick.TeamStats.PlayerNotToOld.label=Pelaajat < 19 v.
-foxtrick.TeamStats.PlayerToOld.label=Pelaajat >\= 19 v.
-foxtrick.TeamStats.Cards.label=Kortit
-foxtrick.TeamStats.Injured.label=Loukkaantuneet
-foxtrick.TeamStats.TransferListed.label=Siirtolistatut
-foxtrick.TeamStats.Pictures.label=Joukkuekuva
-foxtrick.TeamStats.PlayedLatest.label=Pelasi viim. ottelussa
-foxtrick.TeamStats.NotPlayedLatest.label=Ei pelannut viim. ottelussa
-foxtrick.TeamStats.NotTransferListed.label=Siirtolistaamaton
-foxtrick.TeamStats.ActivePlayers.label=Aktiiviset pelaajat
-foxtrick.TeamStats.HomeGrownPlayers.label=Joukkueen kasvattipelaajat
-foxtrick.TeamStats.PurchasedPlayers.label=Ostetut pelaajat
-foxtrick.TeamStats.FilterFor=Suodata
+TeamStats.boxheader=Joukkueen yleiskatsaus
+TeamStats.PlayerNotToOld=Pelaajat < 19 v.
+TeamStats.PlayerToOld=Pelaajat >\= 19 v.
+TeamStats.Cards=Kortit
+TeamStats.Injured=Loukkaantuneet
+TeamStats.TransferListed=Siirtolistatut
+TeamStats.Pictures=Joukkuekuva
+TeamStats.PlayedLatest=Pelasi viim. ottelussa
+TeamStats.NotPlayedLatest=Ei pelannut viim. ottelussa
+TeamStats.NotTransferListed=Siirtolistaamaton
+TeamStats.ActivePlayers=Aktiiviset pelaajat
+TeamStats.HomeGrownPlayers=Joukkueen kasvattipelaajat
+TeamStats.PurchasedPlayers=Ostetut pelaajat
+TeamStats.FilterFor=Suodata
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Kauden yleiskatsaus
+seasonstats.boxheader=Kauden yleiskatsaus
 
-foxtrick.seasonstats.played=O
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=T
-foxtrick.seasonstats.lost=H
-foxtrick.seasonstats.goalplus=TM
-foxtrick.seasonstats.goalminus=PM
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=Y
-foxtrick.seasonstats.home=K
-foxtrick.seasonstats.away=V
-foxtrick.seasonstats.league=Sarjaottelut
-foxtrick.seasonstats.friendly=Ystävyysottelut
-foxtrick.seasonstats.cup=Cup
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=O
+seasonstats.won=V
+seasonstats.draw=T
+seasonstats.lost=H
+seasonstats.goalplus=TM
+seasonstats.goalminus=PM
+seasonstats.goaldiff=±
+seasonstats.total=Y
+seasonstats.home=K
+seasonstats.away=V
+seasonstats.league=Sarjaottelut
+seasonstats.friendly=Ystävyysottelut
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Newsfeed suodatin\:
-foxtrick.LeagueNewsFilter.all=Kaikki
-foxtrick.LeagueNewsFilter.friendlies=Ystävyysottelut & valmentajan vaihdot
-foxtrick.LeagueNewsFilter.transfers=Siirrot
-foxtrick.LeagueNewsFilter.lineup_changes=Kokoonpanomuutokset
+LeagueNewsFilter.label=Newsfeed suodatin\:
+LeagueNewsFilter.all=Kaikki
+LeagueNewsFilter.friendlies=Ystävyysottelut & valmentajan vaihdot
+LeagueNewsFilter.transfers=Siirrot
+LeagueNewsFilter.lineupChanges=Kokoonpanomuutokset
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klikkaa 'Tallenna' nappia seuraavalla sivulla, jättääksesi tämän foorumin.
-leave_conf_button=Jätä foorumi
+AddLeaveConfButton.alert=Klikkaa 'Tallenna' nappia seuraavalla sivulla, jättääksesi tämän foorumin.
+AddLeaveConfButton.LeaveForum=Jätä foorumi
 
-forum.preferences=Foorumiasetukset
+ShowForumPrefButton.forumPreferences=Foorumiasetukset
 
 # ForumTemplates
 make_template_from_post=Tee viestistä malli
@@ -483,7 +483,7 @@ preview=Esikatselu
 forumPreview.send=Lähetä
 
 #Forums
-foxtrick.CopyPostID=Kopioi viestiID leikepöytään
+copy.PostID=Kopioi viestiID leikepöytään
 CopyPosting=Copy Posting in %s style
 CopyPosting.abbr=Copy in %s style
 CopyPosting.style.ht-ml=HT-ML
@@ -523,10 +523,10 @@ ForumSpecialBBCode.symbols=Lisää symboli\: %s
 ShowNestedQuotes=Näytä sisäkkäiset lainaukset
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Anna suodattimelle nimi\:
-foxtrick.transferfilter.delete_filter_ask=Oletko varma, että haluat poistaa tämän suodattimen?
-foxtrick.transferfilter.save_new_filter=Tallenna uusi suodatin
-foxtrick.transferfilter.Foxtrick_Filters=Foxtrick-suodattimet
+TransferSearchFilters.enterName=Anna suodattimelle nimi\:
+TransferSearchFilters.deleteFilter.ask=Oletko varma, että haluat poistaa tämän suodattimen?
+TransferSearchFilters.saveFilter=Tallenna uusi suodatin
+TransferSearchFilters.boxheader=Foxtrick-suodattimet
 
 #Filter
 Filters=Suodattimet
@@ -751,19 +751,19 @@ skilltable.youthplayer=junioripelaaja
 skilltable.rebought_youthplayer=takaisin ostettu junioripelaaja
 
 #matchdetail
-foxtrick.matchdetail.midfield=Keskikenttä
-foxtrick.matchdetail.attack=Hyökkäys
-foxtrick.matchdetail.defence=Puolustus
-foxtrick.matchdetail.total=Yhteensä
-foxtrick.shortcut.matchlineup=kokoonpano
+match.ratings.midfield=Keskikenttä
+match.ratings.attack=Hyökkäys
+match.ratings.defence=Puolustus
+match.ratings.total=Yhteensä
+lineupShortcut.lineup=kokoonpano
 
-foxtrick.matchdetail.right=Oikea
-foxtrick.matchdetail.center=Keskus
-foxtrick.matchdetail.left=Vasen
-foxtrick.matchdetail.rightshort=O
-foxtrick.matchdetail.centershort=K
-foxtrick.matchdetail.leftshort=V
-foxtrick.matchdetail.ifkshort=E
+match.ratings.right=Oikea
+match.ratings.center=Keskus
+match.ratings.left=Vasen
+match.ratings.rightshort=O
+match.ratings.centershort=K
+match.ratings.leftshort=V
+match.ratings.ifkshort=E
 foxtrick.bidconfirmation=Haluatko varmasti tarjota tästä pelaajasta? Hinta on %s.
 foxtrick.tlconfirmation=Haluatko varmasti laittaa tämän pelaajan siirtolistalle? Hintapyyntö on %s.
 foxtrick.staffconfirmationhire=Haluatko varmasti palkata %num %kind?
@@ -869,7 +869,7 @@ matches.wronglang=Foxtrick\: Tilastoja ei voida näyttää, koska kielesi ei ole
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter-tilastot
+shortcuts.suppstats=Supporter-tilastot
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
