--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -235,7 +235,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Augmenter l'espace entre les icônes de ra
 foxtrick.ExtraShortcuts.Supporterstats.desc=Statistiques
 foxtrick.ExtraShortcuts.Transfers.desc=Enchères de l'équipe en cours
 foxtrick.ExtraShortcuts.Prefs.desc=Préférences Hattrick
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Lien vers la page des préférences CHPP
+ExtraShortcuts.ManageCHPP.desc=Lien vers la page des préférences CHPP
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Préférences FoxTrick
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -269,10 +269,10 @@ foxtrick.PlayerBirthday.desc=Ajoute les anniversaires passés et à venir à la 
 foxtrick.MovePlayerSelectbox.desc=Déplace vers le haut la liste déroulante des compte-rendus sur la page des détails des joueurs.
 foxtrick.SeasonStats.desc=Affiche une synthèse de la saison sur la page d'archive des matchs.
 foxtrick.LeagueNewsFilter.desc=Ajoute un filtre pour sélectionner les informations de la division. Réglez votre filtre par défaut ci-dessous \:
-foxtrick.LeagueNewsFilter.all.desc=Toutes les informations
-foxtrick.LeagueNewsFilter.friendlies.desc=Uniquement les informations concernant les matchs internationaux et les changements d'entraîneurs
-foxtrick.LeagueNewsFilter.transfers.desc=Uniquement les informations concernant les transferts
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Uniquement les informations concernant les changements de composition d'équipes
+LeagueNewsFilter.all.desc=Toutes les informations
+LeagueNewsFilter.friendlies.desc=Uniquement les informations concernant les matchs internationaux et les changements d'entraîneurs
+LeagueNewsFilter.transfers.desc=Uniquement les informations concernant les transferts
+LeagueNewsFilter.lineupChanges.desc=Uniquement les informations concernant les changements de composition d'équipes
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Déplace vers le haut la liste des membres connectés des pages Région. Attention\! L'affichage sera très lent si le nombre de joueurs en ligne est supérieur à 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Activer pour les liens des équipes
@@ -389,31 +389,31 @@ foxtrick.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hat
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Titre
-foxtrick.SafeForWork.icon=Icône
+SafeForWork.title=Titre
+SafeForWork.icon=Icône
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Image incrustée
+EmbedMedia.EmbeddedImage=Image incrustée
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistiques
-foxtrick.ExtraShortcuts.transfers=Enchères en cours
-foxtrick.ExtraShortcuts.ManageCHPP=Gérer vos produits CHPP
-foxtrick.ExtraShortcuts.prefs=Préférences
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick préférences
+ExtraShortcuts.statistics=Statistiques
+ExtraShortcuts.transfers=Enchères en cours
+ExtraShortcuts.ManageCHPP=Gérer vos produits CHPP
+ExtraShortcuts.prefs=Préférences
+ExtraShortcuts.ftprefs=FoxTrick préférences
 
 #HistoryStats
-foxtrick.HistoryStats.season=Saison
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Coupe
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Division
-foxtrick.HistoryStats.league.short=Div.
-foxtrick.HistoryStats.pos=Rang
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Synthèse
-foxtrick.HistoryStats.cupwinner=Vainqueur de la Coupe
-foxtrick.HistoryStats.cupwinner.short=VC
+HistoryStats.season=Saison
+HistoryStats.season.short=S
+HistoryStats.cup=Coupe
+HistoryStats.cup.short=C
+HistoryStats.league=Division
+HistoryStats.league.short=Div.
+HistoryStats.finalPosition=Rang
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Synthèse
+HistoryStats.cupwinner=Vainqueur de la Coupe
+HistoryStats.cupwinner.short=VC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -421,56 +421,56 @@ YouthPromotes.future=Le joueur peut être promu dans  %1 jours, le %2.;Le joueur
 YouthPromotes.today=Le joueur peut être promu aujourd'hui \!
 
 # links
-foxtrick.links.boxheader=Liens externes
+links.boxheader=Liens externes
 
 #teamstats+filters
-foxtrick.TeamStats.label=Synthèse de l'équipe
-foxtrick.TeamStats.PlayerNotToOld.label=Joueurs < 19 ans
-foxtrick.TeamStats.PlayerToOld.label=Joueurs >\= 19 ans
-foxtrick.TeamStats.Cards.label=Cartons
-foxtrick.TeamStats.Injured.label=Blessés
-foxtrick.TeamStats.TransferListed.label=Sur la liste des transferts
-foxtrick.TeamStats.Pictures.label=Photos
-foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
-foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
-foxtrick.TeamStats.NotTransferListed.label=Non transférable
-foxtrick.TeamStats.ActivePlayers.label=Joueurs actifs
-foxtrick.TeamStats.HomeGrownPlayers.label=Joueurs issus du club
-foxtrick.TeamStats.PurchasedPlayers.label=Joueurs achetés
-foxtrick.TeamStats.FilterFor=Filtre pour
+TeamStats.boxheader=Synthèse de l'équipe
+TeamStats.PlayerNotToOld=Joueurs < 19 ans
+TeamStats.PlayerToOld=Joueurs >\= 19 ans
+TeamStats.Cards=Cartons
+TeamStats.Injured=Blessés
+TeamStats.TransferListed=Sur la liste des transferts
+TeamStats.Pictures=Photos
+TeamStats.PlayedLatest=A joué pendant le dernier match
+TeamStats.NotPlayedLatest=N'a pas joué pendant le dernier match
+TeamStats.NotTransferListed=Non transférable
+TeamStats.ActivePlayers=Joueurs actifs
+TeamStats.HomeGrownPlayers=Joueurs issus du club
+TeamStats.PurchasedPlayers=Joueurs achetés
+TeamStats.FilterFor=Filtre pour
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Synthèse
+seasonstats.boxheader=Synthèse
 
-foxtrick.seasonstats.played=J
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=N
-foxtrick.seasonstats.lost=D
-foxtrick.seasonstats.goalplus=BP
-foxtrick.seasonstats.goalminus=BC
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=D
-foxtrick.seasonstats.away=E
-foxtrick.seasonstats.league=Ligue
-foxtrick.seasonstats.friendly=Amical
-foxtrick.seasonstats.cup=Coupe
-foxtrick.seasonstats.masters=Hattrick Masters
+seasonstats.played=J
+seasonstats.won=V
+seasonstats.draw=N
+seasonstats.lost=D
+seasonstats.goalplus=BP
+seasonstats.goalminus=BC
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=D
+seasonstats.away=E
+seasonstats.league=Ligue
+seasonstats.friendly=Amical
+seasonstats.cup=Coupe
+seasonstats.masters=Hattrick Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtre des informations de la division \:
-foxtrick.LeagueNewsFilter.all=Tout
-foxtrick.LeagueNewsFilter.friendlies=Amicaux & changements d'entraîneurs
-foxtrick.LeagueNewsFilter.transfers=Transferts
-foxtrick.LeagueNewsFilter.lineup_changes=Changements composition d'équipes
+LeagueNewsFilter.label=Filtre des informations de la division \:
+LeagueNewsFilter.all=Tout
+LeagueNewsFilter.friendlies=Amicaux & changements d'entraîneurs
+LeagueNewsFilter.transfers=Transferts
+LeagueNewsFilter.lineupChanges=Changements composition d'équipes
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Cliquez sur le bouton 'Sauvegarder' sur la page suivante pour quitter cette conférence.
-leave_conf_button=Quitter la conférence
+AddLeaveConfButton.alert=Cliquez sur le bouton 'Sauvegarder' sur la page suivante pour quitter cette conférence.
+AddLeaveConfButton.LeaveForum=Quitter la conférence
 
-forum.preferences=Préférences du Forum
+ShowForumPrefButton.forumPreferences=Préférences du Forum
 
 # ForumTemplates
 make_template_from_post=Créer un modèle à partir de ce message
@@ -487,7 +487,7 @@ preview=Aperçu
 forumPreview.send=Envoyer
 
 #Forums
-foxtrick.CopyPostID=Copie l'identifiant du message dans le presse-papiers
+copy.PostID=Copie l'identifiant du message dans le presse-papiers
 CopyPosting=Copier coller dans le style %s
 CopyPosting.abbr=Copier dans le style %s
 CopyPosting.style.ht-ml=HT-ML
@@ -528,10 +528,10 @@ ForumSpecialBBCode.symbols=Inserer le symbole\: %s
 ShowNestedQuotes=Afficher les citations masquées
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Entrez le nom du filtre \:
-foxtrick.transferfilter.delete_filter_ask=Voulez-vous vraiment supprimer ce filtre ?
-foxtrick.transferfilter.save_new_filter=Enregistrer le nouveau filtre
-foxtrick.transferfilter.Foxtrick_Filters=Filtres FoxTrick
+TransferSearchFilters.enterName=Entrez le nom du filtre \:
+TransferSearchFilters.deleteFilter.ask=Voulez-vous vraiment supprimer ce filtre ?
+TransferSearchFilters.saveFilter=Enregistrer le nouveau filtre
+TransferSearchFilters.boxheader=Filtres FoxTrick
 
 #Filter
 Filters=Filtres
@@ -756,19 +756,19 @@ skilltable.youthplayer=Junior
 skilltable.rebought_youthplayer=Jeune joueur racheté
 
 #matchdetail
-foxtrick.matchdetail.midfield=Milieu
-foxtrick.matchdetail.attack=Attaque
-foxtrick.matchdetail.defence=Défense
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=Composition
+match.ratings.midfield=Milieu
+match.ratings.attack=Attaque
+match.ratings.defence=Défense
+match.ratings.total=Total
+lineupShortcut.lineup=Composition
 
-foxtrick.matchdetail.right=Droite
-foxtrick.matchdetail.center=Centre
-foxtrick.matchdetail.left=Gauche
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=G
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Droite
+match.ratings.center=Centre
+match.ratings.left=Gauche
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=G
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Voulez-vous présenter une offre pour ce joueur ? Le prix est de %s.
 foxtrick.tlconfirmation=Voulez-vous mettre ce joueur sur la liste des transferts ? Le prix demandé est %s.
 foxtrick.staffconfirmationhire=Voulez-vous embaucher %num %kind ?
@@ -874,7 +874,7 @@ matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés par
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Stats Supporter
+shortcuts.suppstats=Stats Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
