--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -144,8 +144,8 @@ foxtrick.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=statistyken
-foxtrick.ExtraShortcuts.transfers=oerstappen
+ExtraShortcuts.statistics=statistyken
+ExtraShortcuts.transfers=oerstappen
 
 #HistoryStats
 
@@ -153,10 +153,10 @@ foxtrick.ExtraShortcuts.transfers=oerstappen
 #following string uses pluralForms
 
 # links
-foxtrick.links.boxheader=Koppelings
+links.boxheader=Koppelings
 
 #teamstats+filters
-foxtrick.TeamStats.label=Ploechoersjoch
+TeamStats.boxheader=Ploechoersjoch
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -166,8 +166,8 @@ foxtrick.TeamStats.label=Ploechoersjoch
 #Newsfeed filter
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
-leave_conf_button=ferlit foarum
+AddLeaveConfButton.alert=Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
+AddLeaveConfButton.LeaveForum=ferlit foarum
 
 
 # ForumTemplates
@@ -179,7 +179,7 @@ delete_template_ask=Template ferwiderje?
 show_preview_from_post=Toan foarútblik fan it berjocht
 
 #Forums
-foxtrick.CopyPostID=Kopiearje nei klemboerd
+copy.PostID=Kopiearje nei klemboerd
 
 ForumYouthIcons.label=Jeugdkoppelings
 ForumYouthIcons.labelToolbar=Haadkoppelings
@@ -195,10 +195,10 @@ ForumSpecialBBCode.br=foegje enter yn
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Jou filternamme op\:
-foxtrick.transferfilter.delete_filter_ask=Wolst dit filter echt ferwiderje?
-foxtrick.transferfilter.save_new_filter=Bewarje nij filter
-foxtrick.transferfilter.Foxtrick_Filters=Foxtrick Filters
+TransferSearchFilters.enterName=Jou filternamme op\:
+TransferSearchFilters.deleteFilter.ask=Wolst dit filter echt ferwiderje?
+TransferSearchFilters.saveFilter=Bewarje nij filter
+TransferSearchFilters.boxheader=Foxtrick Filters
 
 #Filter
 
@@ -256,18 +256,18 @@ Stamina=Kondysje
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Middenfjild
-foxtrick.matchdetail.attack=Oanfal
-foxtrick.matchdetail.defence=Ferdigening
-foxtrick.shortcut.matchlineup=opstelling
+match.ratings.midfield=Middenfjild
+match.ratings.attack=Oanfal
+match.ratings.defence=Ferdigening
+lineupShortcut.lineup=opstelling
 
-foxtrick.matchdetail.right=Rjochts
-foxtrick.matchdetail.center=Sintraal
-foxtrick.matchdetail.left=Links
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=S
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=YFT
+match.ratings.right=Rjochts
+match.ratings.center=Sintraal
+match.ratings.left=Links
+match.ratings.rightshort=R
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=YFT
 foxtrick.bidconfirmation=Wolst biede op dizze spiler? De priis is %s.
 foxtrick.tlconfirmation=Wolst dizze spiler te keap sette? Dyn fraachpriis is %s.
 foxtrick.conferences.signaturetoggle=Hântekening
@@ -320,7 +320,7 @@ matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net r
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporterstatistiken
+shortcuts.suppstats=Supporterstatistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
