--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -229,10 +229,10 @@ foxtrick.PlayerBirthday.desc=Megjeleníti a soron következő és nemrég elmúl
 foxtrick.MovePlayerSelectbox.desc=Felülre helyezi a játékosokhoz tartozó legördülő menüket a játékosok adatlapján
 foxtrick.SeasonStats.desc=Statisztikákat jelenít meg a Meccsarchívum oldalon
 foxtrick.LeagueNewsFilter.desc=A csoportoldalon kiemeli a nemrégiben felállást beállító vagy módosító csapatokat, és szűrőt ad a csoporteseményekhez.
-foxtrick.LeagueNewsFilter.all.desc=Megjeleníti az összes hírt
-foxtrick.LeagueNewsFilter.friendlies.desc=Csak a nemzetközi barátságos mérkőzéseket és az edzőcseréket jeleníti meg
-foxtrick.LeagueNewsFilter.transfers.desc=Csak az átigazolásokat jeleníti meg
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Csak a felállás módosításait jeleníti meg
+LeagueNewsFilter.all.desc=Megjeleníti az összes hírt
+LeagueNewsFilter.friendlies.desc=Csak a nemzetközi barátságos mérkőzéseket és az edzőcseréket jeleníti meg
+LeagueNewsFilter.transfers.desc=Csak az átigazolásokat jeleníti meg
+LeagueNewsFilter.lineupChanges.desc=Csak a felállás módosításait jeleníti meg
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Felülre helyezi az online menedzserek listáját a Régiók oldalon. Figyelem\! Ha az online játékosok száma eléri a 100-at, a folyamat igencsak lelassul\!
 foxtrick.TeamPopupLinks.TeamLinks.desc=Előugró hivatkozásokat ad a csapathivatkozásokhoz
@@ -321,26 +321,26 @@ foxtrick.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelé
 #Save for work
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Beágyazott kép
+EmbedMedia.EmbeddedImage=Beágyazott kép
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statisztikák
-foxtrick.ExtraShortcuts.transfers=Átigazolások
-foxtrick.ExtraShortcuts.prefs=Beállítások
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick-beállítások
+ExtraShortcuts.statistics=Statisztikák
+ExtraShortcuts.transfers=Átigazolások
+ExtraShortcuts.prefs=Beállítások
+ExtraShortcuts.ftprefs=FoxTrick-beállítások
 
 #HistoryStats
-foxtrick.HistoryStats.season=Szezon
-foxtrick.HistoryStats.season.short=Sz
-foxtrick.HistoryStats.cup=Kupaforduló
-foxtrick.HistoryStats.cup.short=Kf
-foxtrick.HistoryStats.league=Csoport
-foxtrick.HistoryStats.league.short=Csop
-foxtrick.HistoryStats.pos=Bajnoki helyezés
-foxtrick.HistoryStats.pos.short=H
-foxtrick.HistoryStats.label=Korábbi statisztikák
-foxtrick.HistoryStats.cupwinner=Kupagyőztes
-foxtrick.HistoryStats.cupwinner.short=Kgy
+HistoryStats.season=Szezon
+HistoryStats.season.short=Sz
+HistoryStats.cup=Kupaforduló
+HistoryStats.cup.short=Kf
+HistoryStats.league=Csoport
+HistoryStats.league.short=Csop
+HistoryStats.finalPosition=Bajnoki helyezés
+HistoryStats.finalPosition.short=H
+HistoryStats.label=Korábbi statisztikák
+HistoryStats.cupwinner=Kupagyőztes
+HistoryStats.cupwinner.short=Kgy
 
 # YouthPromotes
 #following string uses pluralForms
@@ -348,52 +348,52 @@ YouthPromotes.future=A játékost %1 nap múlva, ekkor hozhatod fel\: %2.
 YouthPromotes.today=A játékost most azonnal felhozhatod\!
 
 # links
-foxtrick.links.boxheader=Hivatkozások
+links.boxheader=Hivatkozások
 
 #teamstats+filters
-foxtrick.TeamStats.label=Csapatáttekintés
-foxtrick.TeamStats.PlayerNotToOld.label=19 évesnél fiatalabb játékosok
-foxtrick.TeamStats.PlayerToOld.label=19 évesnél idősebb játékosok
-foxtrick.TeamStats.Cards.label=Lapok
-foxtrick.TeamStats.Injured.label=Sérült
-foxtrick.TeamStats.TransferListed.label=Piacon van
-foxtrick.TeamStats.Pictures.label=Arcképek
-foxtrick.TeamStats.PlayedLatest.label=Játszott a legutóbbi mérkőzésen
-foxtrick.TeamStats.NotPlayedLatest.label=Nem játszott a legutóbbi mérkőzésen
-foxtrick.TeamStats.HomeGrownPlayers.label=Saját nevelésű játékosok
+TeamStats.boxheader=Csapatáttekintés
+TeamStats.PlayerNotToOld=19 évesnél fiatalabb játékosok
+TeamStats.PlayerToOld=19 évesnél idősebb játékosok
+TeamStats.Cards=Lapok
+TeamStats.Injured=Sérült
+TeamStats.TransferListed=Piacon van
+TeamStats.Pictures=Arcképek
+TeamStats.PlayedLatest=Játszott a legutóbbi mérkőzésen
+TeamStats.NotPlayedLatest=Nem játszott a legutóbbi mérkőzésen
+TeamStats.HomeGrownPlayers=Saját nevelésű játékosok
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=A szezon áttekintése
+seasonstats.boxheader=A szezon áttekintése
 
-foxtrick.seasonstats.played=Mérk.sz.
-foxtrick.seasonstats.won=Gy
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=V
-foxtrick.seasonstats.goalplus=RG
-foxtrick.seasonstats.goalminus=KG
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=Össz.
-foxtrick.seasonstats.home=O
-foxtrick.seasonstats.away=I
-foxtrick.seasonstats.league=Bajnoki
-foxtrick.seasonstats.friendly=Barátságos
-foxtrick.seasonstats.cup=Kupa
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Mérk.sz.
+seasonstats.won=Gy
+seasonstats.draw=D
+seasonstats.lost=V
+seasonstats.goalplus=RG
+seasonstats.goalminus=KG
+seasonstats.goaldiff=±
+seasonstats.total=Össz.
+seasonstats.home=O
+seasonstats.away=I
+seasonstats.league=Bajnoki
+seasonstats.friendly=Barátságos
+seasonstats.cup=Kupa
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Hírfeed-szűrő\:
-foxtrick.LeagueNewsFilter.all=Az összes
-foxtrick.LeagueNewsFilter.friendlies=Barátságos meccsek és edzőcserék
-foxtrick.LeagueNewsFilter.transfers=Átigazolások
-foxtrick.LeagueNewsFilter.lineup_changes=A felállás módosításai
+LeagueNewsFilter.label=Hírfeed-szűrő\:
+LeagueNewsFilter.all=Az összes
+LeagueNewsFilter.friendlies=Barátságos meccsek és edzőcserék
+LeagueNewsFilter.transfers=Átigazolások
+LeagueNewsFilter.lineupChanges=A felállás módosításai
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
-leave_conf_button=A fórum elhagyása
+AddLeaveConfButton.alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
+AddLeaveConfButton.LeaveForum=A fórum elhagyása
 
-forum.preferences=Fórumbeállítások
+ShowForumPrefButton.forumPreferences=Fórumbeállítások
 
 # ForumTemplates
 make_template_from_post=Sablon készítése a hozzászólásból
@@ -410,7 +410,7 @@ preview=Előnézet
 forumPreview.send=Küldés
 
 #Forums
-foxtrick.CopyPostID=A hozzászólás számának vágólapra másolása
+copy.PostID=A hozzászólás számának vágólapra másolása
 CopyPosting=Hozzászólás másolása ebben a stílusban\: %s
 CopyPosting.abbr=Másolás ebben a stílusban\: %s
 CopyPosting.style.ht-ml=HT-ML
@@ -448,10 +448,10 @@ ForumSpecialBBCode.symbols=Szimbólum beszúrása\: %s
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=A szűrő nevének megadása
-foxtrick.transferfilter.delete_filter_ask=Tényleg törlöd a szűrőt?
-foxtrick.transferfilter.save_new_filter=Az új szűrő mentése
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick-szűrők
+TransferSearchFilters.enterName=A szűrő nevének megadása
+TransferSearchFilters.deleteFilter.ask=Tényleg törlöd a szűrőt?
+TransferSearchFilters.saveFilter=Az új szűrő mentése
+TransferSearchFilters.boxheader=FoxTrick-szűrők
 
 #Filter
 Filters=Szűrők
@@ -668,19 +668,19 @@ skilltable.youthplayer=ifijátékos
 skilltable.rebought_youthplayer=Visszavásárolt ifijátékos
 
 #matchdetail
-foxtrick.matchdetail.midfield=Középpálya
-foxtrick.matchdetail.attack=Támadás
-foxtrick.matchdetail.defence=Védelem
-foxtrick.matchdetail.total=Összesen
-foxtrick.shortcut.matchlineup=felállás
+match.ratings.midfield=Középpálya
+match.ratings.attack=Támadás
+match.ratings.defence=Védelem
+match.ratings.total=Összesen
+lineupShortcut.lineup=felállás
 
-foxtrick.matchdetail.right=Jobb oldali
-foxtrick.matchdetail.center=Középső
-foxtrick.matchdetail.left=Bal oldali
-foxtrick.matchdetail.rightshort=J
-foxtrick.matchdetail.centershort=K
-foxtrick.matchdetail.leftshort=B
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Jobb oldali
+match.ratings.center=Középső
+match.ratings.left=Bal oldali
+match.ratings.rightshort=J
+match.ratings.centershort=K
+match.ratings.leftshort=B
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Valóban licitálsz erre a játékosra? Az ára %s.
 foxtrick.tlconfirmation=Valóban eladod ezt a játékost? A kezdőár %s.
 foxtrick.staffconfirmationhire=Valóban alkalmazod a következő(ke)t\: %num %kind?
@@ -784,7 +784,7 @@ matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel a
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Támogatói statisztikák
+shortcuts.suppstats=Támogatói statisztikák
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
