--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -233,10 +233,10 @@ foxtrick.PlayerBirthday.desc=Sýna síðustu og komandi afmæli í yfirliti leik
 foxtrick.MovePlayerSelectbox.desc=Færa valglugga leikmanna upp á upplýsingasíðu leikmanna
 foxtrick.SeasonStats.desc=Sýna tölfræði á skjalasafnasíðu leikja
 foxtrick.LeagueNewsFilter.desc=Síur til að sýna ákveðnar tegundir af deildarfréttum.
-foxtrick.LeagueNewsFilter.all.desc=Sýna allar fréttir
-foxtrick.LeagueNewsFilter.friendlies.desc=Sýna aðeins alþjóðlega vináttuleiki og ráðningar á nýjum þjálfurum
-foxtrick.LeagueNewsFilter.transfers.desc=Sýna aðeins leikmannakaup og sölur
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Sýna aðeins breytingar á liðsuppstillingu
+LeagueNewsFilter.all.desc=Sýna allar fréttir
+LeagueNewsFilter.friendlies.desc=Sýna aðeins alþjóðlega vináttuleiki og ráðningar á nýjum þjálfurum
+LeagueNewsFilter.transfers.desc=Sýna aðeins leikmannakaup og sölur
+LeagueNewsFilter.lineupChanges.desc=Sýna aðeins breytingar á liðsuppstillingu
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Færa framkvæmdarstjóra sem eru nettengdir upp á svæðissíðunni. Varúð\! Þetta verður mjög hægt ef nettengdir notendur fara yfir 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Bætir við sprettiglugga á liðstengla
@@ -334,23 +334,23 @@ foxtrick.ShowLineupSet.Winning.desc=Auðkenna vinningslið
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Tölfræði
-foxtrick.ExtraShortcuts.transfers=Sölulisti
-foxtrick.ExtraShortcuts.prefs=Stillingar
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick stillingar
+ExtraShortcuts.statistics=Tölfræði
+ExtraShortcuts.transfers=Sölulisti
+ExtraShortcuts.prefs=Stillingar
+ExtraShortcuts.ftprefs=FoxTrick stillingar
 
 #HistoryStats
-foxtrick.HistoryStats.season=Tímabil
-foxtrick.HistoryStats.season.short=T
-foxtrick.HistoryStats.cup=Bikarumferð
-foxtrick.HistoryStats.cup.short=BU
-foxtrick.HistoryStats.league=Deild
-foxtrick.HistoryStats.league.short=D
-foxtrick.HistoryStats.pos=Endanlegt deildarsæti
-foxtrick.HistoryStats.pos.short=ED
-foxtrick.HistoryStats.label=Ferilstölfræði
-foxtrick.HistoryStats.cupwinner=Bikarsigurvegari
-foxtrick.HistoryStats.cupwinner.short=BS
+HistoryStats.season=Tímabil
+HistoryStats.season.short=T
+HistoryStats.cup=Bikarumferð
+HistoryStats.cup.short=BU
+HistoryStats.league=Deild
+HistoryStats.league.short=D
+HistoryStats.finalPosition=Endanlegt deildarsæti
+HistoryStats.finalPosition.short=ED
+HistoryStats.label=Ferilstölfræði
+HistoryStats.cupwinner=Bikarsigurvegari
+HistoryStats.cupwinner.short=BS
 
 # YouthPromotes
 #following string uses pluralForms
@@ -358,51 +358,51 @@ YouthPromotes.future=Hægt að taka leikmann upp í A-lið eftir %1 dag(a) eftir
 YouthPromotes.today=Hægt að taka leikmann upp í A-lið í dag\!
 
 # links
-foxtrick.links.boxheader=Tenglar
+links.boxheader=Tenglar
 
 #teamstats+filters
-foxtrick.TeamStats.label=Liðsyfirlit
-foxtrick.TeamStats.PlayerNotToOld.label=Leikmenn < 19 ára
-foxtrick.TeamStats.PlayerToOld.label=Leikmenn >\= 19 ára
-foxtrick.TeamStats.Cards.label=Spjöld
-foxtrick.TeamStats.Injured.label=Meiðsli
-foxtrick.TeamStats.TransferListed.label=Á sölulista
-foxtrick.TeamStats.Pictures.label=Andlit
-foxtrick.TeamStats.PlayedLatest.label=Spilaði í síðasta leik
-foxtrick.TeamStats.NotPlayedLatest.label=Spilaði ekki í síðasta leik
+TeamStats.boxheader=Liðsyfirlit
+TeamStats.PlayerNotToOld=Leikmenn < 19 ára
+TeamStats.PlayerToOld=Leikmenn >\= 19 ára
+TeamStats.Cards=Spjöld
+TeamStats.Injured=Meiðsli
+TeamStats.TransferListed=Á sölulista
+TeamStats.Pictures=Andlit
+TeamStats.PlayedLatest=Spilaði í síðasta leik
+TeamStats.NotPlayedLatest=Spilaði ekki í síðasta leik
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Yfirlit tímabils
+seasonstats.boxheader=Yfirlit tímabils
 
-foxtrick.seasonstats.played=L
-foxtrick.seasonstats.won=U
-foxtrick.seasonstats.draw=J
-foxtrick.seasonstats.lost=T
-foxtrick.seasonstats.goalplus=MS
-foxtrick.seasonstats.goalminus=MF
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=S
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=Ú
-foxtrick.seasonstats.league=Deild
-foxtrick.seasonstats.friendly=Vináttuleikir
-foxtrick.seasonstats.cup=Bikar
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=L
+seasonstats.won=U
+seasonstats.draw=J
+seasonstats.lost=T
+seasonstats.goalplus=MS
+seasonstats.goalminus=MF
+seasonstats.goaldiff=±
+seasonstats.total=S
+seasonstats.home=H
+seasonstats.away=Ú
+seasonstats.league=Deild
+seasonstats.friendly=Vináttuleikir
+seasonstats.cup=Bikar
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Fréttastraumssía\:
-foxtrick.LeagueNewsFilter.all=Allt
-foxtrick.LeagueNewsFilter.friendlies=Vináttuleikir & breyttir þjálfarar
-foxtrick.LeagueNewsFilter.transfers=Leikmannakaup & sölur
-foxtrick.LeagueNewsFilter.lineup_changes=Breytingar á liðsuppstillingu
+LeagueNewsFilter.label=Fréttastraumssía\:
+LeagueNewsFilter.all=Allt
+LeagueNewsFilter.friendlies=Vináttuleikir & breyttir þjálfarar
+LeagueNewsFilter.transfers=Leikmannakaup & sölur
+LeagueNewsFilter.lineupChanges=Breytingar á liðsuppstillingu
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Smelltu á 'Vista' hnappinn á næstu síðu til að yfirgefa þetta spjallborð.
-leave_conf_button=Yfirgefa spjallborð
+AddLeaveConfButton.alert=Smelltu á 'Vista' hnappinn á næstu síðu til að yfirgefa þetta spjallborð.
+AddLeaveConfButton.LeaveForum=Yfirgefa spjallborð
 
-forum.preferences=Stillingar spjallborðs
+ShowForumPrefButton.forumPreferences=Stillingar spjallborðs
 
 # ForumTemplates
 make_template_from_post=Búa til sniðmát úr svari
@@ -419,7 +419,7 @@ preview=Forskoðun
 forumPreview.send=Senda
 
 #Forums
-foxtrick.CopyPostID=Afrita svarnúmer á klippiborð
+copy.PostID=Afrita svarnúmer á klippiborð
 CopyPosting=Afrita svar í %s stíl
 CopyPosting.abbr=Afrita í %s stíl
 CopyPosting.style.ht-ml=HT-ML
@@ -451,10 +451,10 @@ ForumSpecialBBCode.enterSeparator=Sláðu inn sérsniðið skiltákn
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Sláðu inn nafn á síu\:
-foxtrick.transferfilter.delete_filter_ask=Ertu viss að þú viljir eyða þessari síu?
-foxtrick.transferfilter.save_new_filter=Vista nýja síu
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Síur
+TransferSearchFilters.enterName=Sláðu inn nafn á síu\:
+TransferSearchFilters.deleteFilter.ask=Ertu viss að þú viljir eyða þessari síu?
+TransferSearchFilters.saveFilter=Vista nýja síu
+TransferSearchFilters.boxheader=FoxTrick Síur
 
 #Filter
 
@@ -603,19 +603,19 @@ Current_league.abbr=Deild
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Miðja
-foxtrick.matchdetail.attack=Sókn
-foxtrick.matchdetail.defence=Vörn
-foxtrick.matchdetail.total=Samtals
-foxtrick.shortcut.matchlineup=liðsuppstilling
+match.ratings.midfield=Miðja
+match.ratings.attack=Sókn
+match.ratings.defence=Vörn
+match.ratings.total=Samtals
+lineupShortcut.lineup=liðsuppstilling
 
-foxtrick.matchdetail.right=Hægri
-foxtrick.matchdetail.center=Miðja
-foxtrick.matchdetail.left=Vinstri
-foxtrick.matchdetail.rightshort=H
-foxtrick.matchdetail.centershort=M
-foxtrick.matchdetail.leftshort=V
-foxtrick.matchdetail.ifkshort=Ó
+match.ratings.right=Hægri
+match.ratings.center=Miðja
+match.ratings.left=Vinstri
+match.ratings.rightshort=H
+match.ratings.centershort=M
+match.ratings.leftshort=V
+match.ratings.ifkshort=Ó
 foxtrick.bidconfirmation=Viltu bjóða í þennan leikmann? Verðið er %s.
 foxtrick.tlconfirmation=Viltu setja þennan leikmann á sölu? Uppsett verð er %s.
 foxtrick.staffconfirmationhire=Viltu ráða %num %kind?
@@ -701,7 +701,7 @@ matches.wronglang=FoxTrick\: Ekki er hægt að sýna tölfræðina vegna þess a
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter tölfræði
+shortcuts.suppstats=Supporter tölfræði
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
