--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -236,7 +236,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Aumenta lo spazio per le icone
 foxtrick.ExtraShortcuts.Supporterstats.desc=Icona statistiche dei supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Icona propria storia trasferimenti
 foxtrick.ExtraShortcuts.Prefs.desc=Icona preferenze di Hattrick
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link alla pagina delle preferenze CHPP
+ExtraShortcuts.ManageCHPP.desc=Link alla pagina delle preferenze CHPP
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Icona preferenze di Foxtrick
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -270,10 +270,10 @@ foxtrick.PlayerBirthday.desc=Mostra i compleanni recenti e venturi nella lista d
 foxtrick.MovePlayerSelectbox.desc=Sposta il riquadro per la selezione del giocatore in alto nella pagina dei giocatori
 foxtrick.SeasonStats.desc=Aggiunge alcune statistiche nella pagina dell'archivio partite
 foxtrick.LeagueNewsFilter.desc=Nella pagina della serie, evidenzia alcuni eventi e aggiunge filtri per le notizie della serie.
-foxtrick.LeagueNewsFilter.all.desc=Mostra tutte le notizie
-foxtrick.LeagueNewsFilter.friendlies.desc=Mostra solo amichevoli internazionali e cambi di allenatore
-foxtrick.LeagueNewsFilter.transfers.desc=Mostra solo trasferimenti
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostra solo cambiamenti alla formazione
+LeagueNewsFilter.all.desc=Mostra tutte le notizie
+LeagueNewsFilter.friendlies.desc=Mostra solo amichevoli internazionali e cambi di allenatore
+LeagueNewsFilter.transfers.desc=Mostra solo trasferimenti
+LeagueNewsFilter.lineupChanges.desc=Mostra solo cambiamenti alla formazione
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Sposta gli utenti online in alto nella pagina delle regioni. Attenzione\! Può essere molto lenta se i giocatori sono più di 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Visualizza il menu a tendina sui collegamenti alle squadre
@@ -390,31 +390,31 @@ foxtrick.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Titolo
-foxtrick.SafeForWork.icon=Icona
+SafeForWork.title=Titolo
+SafeForWork.icon=Icona
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Immagine incorporata
+EmbedMedia.EmbeddedImage=Immagine incorporata
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistiche
-foxtrick.ExtraShortcuts.transfers=Trasferimenti
-foxtrick.ExtraShortcuts.ManageCHPP=Gestisci i tuoi prodotti CHPP
-foxtrick.ExtraShortcuts.prefs=Preferenze
-foxtrick.ExtraShortcuts.ftprefs=Preferenze di FoxTrick
+ExtraShortcuts.statistics=Statistiche
+ExtraShortcuts.transfers=Trasferimenti
+ExtraShortcuts.ManageCHPP=Gestisci i tuoi prodotti CHPP
+ExtraShortcuts.prefs=Preferenze
+ExtraShortcuts.ftprefs=Preferenze di FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=Stagione
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Turni di coppa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Serie
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=Posizione finale nella serie
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Statistiche
-foxtrick.HistoryStats.cupwinner=Vincitore di coppa
-foxtrick.HistoryStats.cupwinner.short=VC
+HistoryStats.season=Stagione
+HistoryStats.season.short=S
+HistoryStats.cup=Turni di coppa
+HistoryStats.cup.short=C
+HistoryStats.league=Serie
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=Posizione finale nella serie
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Statistiche
+HistoryStats.cupwinner=Vincitore di coppa
+HistoryStats.cupwinner.short=VC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -422,56 +422,56 @@ YouthPromotes.future=Il giocatore può essere promosso tra %1 giorno/i ovvero il
 YouthPromotes.today=Il giocatore può essere promosso oggi\!
 
 # links
-foxtrick.links.boxheader=Collegamenti
+links.boxheader=Collegamenti
 
 #teamstats+filters
-foxtrick.TeamStats.label=Panoramica squadra
-foxtrick.TeamStats.PlayerNotToOld.label=Giocatori < 19 anni
-foxtrick.TeamStats.PlayerToOld.label=Giocatori >\= 19 anni
-foxtrick.TeamStats.Cards.label=Cartellini
-foxtrick.TeamStats.Injured.label=Infortunati
-foxtrick.TeamStats.TransferListed.label=Sul mercato
-foxtrick.TeamStats.Pictures.label=Immagini
-foxtrick.TeamStats.PlayedLatest.label=Giocato nell'ultima partita
-foxtrick.TeamStats.NotPlayedLatest.label=Non giocato nell'ultima partita
-foxtrick.TeamStats.NotTransferListed.label=Non inserito nella lista dei trasferimenti
-foxtrick.TeamStats.ActivePlayers.label=Giocatori attivi
-foxtrick.TeamStats.HomeGrownPlayers.label=Giocatori del vivaio
-foxtrick.TeamStats.PurchasedPlayers.label=Giocatori acquistati
-foxtrick.TeamStats.FilterFor=Filtro per
+TeamStats.boxheader=Panoramica squadra
+TeamStats.PlayerNotToOld=Giocatori < 19 anni
+TeamStats.PlayerToOld=Giocatori >\= 19 anni
+TeamStats.Cards=Cartellini
+TeamStats.Injured=Infortunati
+TeamStats.TransferListed=Sul mercato
+TeamStats.Pictures=Immagini
+TeamStats.PlayedLatest=Giocato nell'ultima partita
+TeamStats.NotPlayedLatest=Non giocato nell'ultima partita
+TeamStats.NotTransferListed=Non inserito nella lista dei trasferimenti
+TeamStats.ActivePlayers=Giocatori attivi
+TeamStats.HomeGrownPlayers=Giocatori del vivaio
+TeamStats.PurchasedPlayers=Giocatori acquistati
+TeamStats.FilterFor=Filtro per
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Panoramica serie
+seasonstats.boxheader=Panoramica serie
 
-foxtrick.seasonstats.played=Gioc
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=P
-foxtrick.seasonstats.lost=S
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GS
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=C
-foxtrick.seasonstats.away=F
-foxtrick.seasonstats.league=Campionato
-foxtrick.seasonstats.friendly=Amichevoli
-foxtrick.seasonstats.cup=Coppa
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Gioc
+seasonstats.won=V
+seasonstats.draw=P
+seasonstats.lost=S
+seasonstats.goalplus=GF
+seasonstats.goalminus=GS
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=C
+seasonstats.away=F
+seasonstats.league=Campionato
+seasonstats.friendly=Amichevoli
+seasonstats.cup=Coppa
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtri sulle notizie della serie\:
-foxtrick.LeagueNewsFilter.all=Tutti
-foxtrick.LeagueNewsFilter.friendlies=Amichevoli e cambi allenatori
-foxtrick.LeagueNewsFilter.transfers=Trasferimenti
-foxtrick.LeagueNewsFilter.lineup_changes=Cambi formazione
+LeagueNewsFilter.label=Filtri sulle notizie della serie\:
+LeagueNewsFilter.all=Tutti
+LeagueNewsFilter.friendlies=Amichevoli e cambi allenatori
+LeagueNewsFilter.transfers=Trasferimenti
+LeagueNewsFilter.lineupChanges=Cambi formazione
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
-leave_conf_button=Abbandona forum
+AddLeaveConfButton.alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
+AddLeaveConfButton.LeaveForum=Abbandona forum
 
-forum.preferences=Preferenze del forum
+ShowForumPrefButton.forumPreferences=Preferenze del forum
 
 # ForumTemplates
 make_template_from_post=Crea modello dal messaggio
@@ -488,7 +488,7 @@ preview=Anteprima
 forumPreview.send=Invia
 
 #Forums
-foxtrick.CopyPostID=Copia ID messaggio negli appunti
+copy.PostID=Copia ID messaggio negli appunti
 CopyPosting=Copia messaggio con lo stile %s
 CopyPosting.abbr=Copia in stile %s
 CopyPosting.style.ht-ml=HT-ML
@@ -529,10 +529,10 @@ ForumSpecialBBCode.symbols=Inserisci simbolo\: %s
 ShowNestedQuotes=Visualizza citazioni nidificate
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Inserisci nome filtro\:
-foxtrick.transferfilter.delete_filter_ask=Vuoi veramente cancellare questo filtro?
-foxtrick.transferfilter.save_new_filter=Salva nuovo filtro
-foxtrick.transferfilter.Foxtrick_Filters=Filtri di Foxtrick
+TransferSearchFilters.enterName=Inserisci nome filtro\:
+TransferSearchFilters.deleteFilter.ask=Vuoi veramente cancellare questo filtro?
+TransferSearchFilters.saveFilter=Salva nuovo filtro
+TransferSearchFilters.boxheader=Filtri di Foxtrick
 
 #Filter
 Filters=Filtri
@@ -757,19 +757,19 @@ skilltable.youthplayer=Giocatore delle giovanili
 skilltable.rebought_youthplayer=Giocatore delle giovanili ricomprato
 
 #matchdetail
-foxtrick.matchdetail.midfield=Centrocampo
-foxtrick.matchdetail.attack=Attacco
-foxtrick.matchdetail.defence=Difesa
-foxtrick.matchdetail.total=Totale
-foxtrick.shortcut.matchlineup=Formazione
+match.ratings.midfield=Centrocampo
+match.ratings.attack=Attacco
+match.ratings.defence=Difesa
+match.ratings.total=Totale
+lineupShortcut.lineup=Formazione
 
-foxtrick.matchdetail.right=Destra
-foxtrick.matchdetail.center=Centro
-foxtrick.matchdetail.left=Sinistra
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=S
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Destra
+match.ratings.center=Centro
+match.ratings.left=Sinistra
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=S
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Vuoi offrire per questo giocatore? Il prezzo è %s.
 foxtrick.tlconfirmation=Vuoi vendere questo giocatore? Il prezzo è %s.
 foxtrick.staffconfirmationhire=Vuoi assumere %num %kind?
@@ -875,7 +875,7 @@ matches.wronglang=Foxtrick\: la lingua che hai impostato in hattrick e' diversa 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Statistiche dei Supporter
+shortcuts.suppstats=Statistiche dei Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
