--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -160,7 +160,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=ショートカットアイコンのため
 foxtrick.ExtraShortcuts.Supporterstats.desc=supporter statsへのリンク
 foxtrick.ExtraShortcuts.Transfers.desc=自分のチームの移籍リストへのリンク
 foxtrick.ExtraShortcuts.Prefs.desc=設定ページへのリンク
-foxtrick.ExtraShortcuts.ManageCHPP.desc=CHPP設定ページへのリンク
+ExtraShortcuts.ManageCHPP.desc=CHPP設定ページへのリンク
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=FoxTrick設定ページへのリンク
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -186,10 +186,10 @@ foxtrick.CopyYouth.PlayerSource.desc=選手のHTMLソース
 foxtrick.CopyYouth.FixturesSource.desc=Fixtures source
 foxtrick.SeasonStats.desc=過去の試合ページにいくつかの統計を表示
 foxtrick.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
-foxtrick.LeagueNewsFilter.all.desc=すべてのニュースを表示
-foxtrick.LeagueNewsFilter.friendlies.desc=国際親善試合とコーチの変更のみを表示
-foxtrick.LeagueNewsFilter.transfers.desc=移籍の未表示
-foxtrick.LeagueNewsFilter.lineup_changes.desc=ラインナップの変更のみ表示
+LeagueNewsFilter.all.desc=すべてのニュースを表示
+LeagueNewsFilter.friendlies.desc=国際親善試合とコーチの変更のみを表示
+LeagueNewsFilter.transfers.desc=移籍の未表示
+LeagueNewsFilter.lineupChanges.desc=ラインナップの変更のみ表示
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=地域のページでオンライン中の監督に移動します。注意！オンラインプレイヤーのリストが100を超えるとすごく遅くなる。
 foxtrick.TeamPopupLinks.TeamLinks.desc=チームリンクのポップアップを追加
@@ -277,31 +277,31 @@ foxtrick.RatingsDisplay.HatStats.desc=As HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=タイトル
-foxtrick.SafeForWork.icon=アイコン
+SafeForWork.title=タイトル
+SafeForWork.icon=アイコン
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=埋め込み画像
+EmbedMedia.EmbeddedImage=埋め込み画像
 
 #icons
-foxtrick.ExtraShortcuts.statistics=統計
-foxtrick.ExtraShortcuts.transfers=移籍
-foxtrick.ExtraShortcuts.ManageCHPP=CHPP製品の管理
-foxtrick.ExtraShortcuts.prefs=設定
-foxtrick.ExtraShortcuts.ftprefs=FoxTrickの設定
+ExtraShortcuts.statistics=統計
+ExtraShortcuts.transfers=移籍
+ExtraShortcuts.ManageCHPP=CHPP製品の管理
+ExtraShortcuts.prefs=設定
+ExtraShortcuts.ftprefs=FoxTrickの設定
 
 #HistoryStats
-foxtrick.HistoryStats.season=シーズン
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=カップ ラウンド
-foxtrick.HistoryStats.cup.short=Ｃ
-foxtrick.HistoryStats.league=シリーズ
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=シリーズ最終位置
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=歴史統計
-foxtrick.HistoryStats.cupwinner=カップ優勝者
-foxtrick.HistoryStats.cupwinner.short=CW
+HistoryStats.season=シーズン
+HistoryStats.season.short=S
+HistoryStats.cup=カップ ラウンド
+HistoryStats.cup.short=Ｃ
+HistoryStats.league=シリーズ
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=シリーズ最終位置
+HistoryStats.finalPosition.short=P
+HistoryStats.label=歴史統計
+HistoryStats.cupwinner=カップ優勝者
+HistoryStats.cupwinner.short=CW
 
 # YouthPromotes
 #following string uses pluralForms
@@ -309,55 +309,55 @@ YouthPromotes.future=プレイヤーは、％1日後、％2に昇格すること
 YouthPromotes.today=選手は今日昇格することができます ！
 
 # links
-foxtrick.links.boxheader=リンク
+links.boxheader=リンク
 
 #teamstats+filters
-foxtrick.TeamStats.label=チームの概要
-foxtrick.TeamStats.PlayerNotToOld.label=18歳以下の選手
-foxtrick.TeamStats.PlayerToOld.label=19歳以上の選手
-foxtrick.TeamStats.Cards.label=カード
-foxtrick.TeamStats.Injured.label=負傷者
-foxtrick.TeamStats.TransferListed.label=移籍リスト
-foxtrick.TeamStats.Pictures.label=顔
-foxtrick.TeamStats.PlayedLatest.label=最後の試合でプレー
-foxtrick.TeamStats.NotPlayedLatest.label=最後の試合で出場しなかった
-foxtrick.TeamStats.NotTransferListed.label=移籍リストに記載されていない
-foxtrick.TeamStats.ActivePlayers.label=現役選手
-foxtrick.TeamStats.HomeGrownPlayers.label=自チーム出身の選手
-foxtrick.TeamStats.PurchasedPlayers.label=購入した選手
+TeamStats.boxheader=チームの概要
+TeamStats.PlayerNotToOld=18歳以下の選手
+TeamStats.PlayerToOld=19歳以上の選手
+TeamStats.Cards=カード
+TeamStats.Injured=負傷者
+TeamStats.TransferListed=移籍リスト
+TeamStats.Pictures=顔
+TeamStats.PlayedLatest=最後の試合でプレー
+TeamStats.NotPlayedLatest=最後の試合で出場しなかった
+TeamStats.NotTransferListed=移籍リストに記載されていない
+TeamStats.ActivePlayers=現役選手
+TeamStats.HomeGrownPlayers=自チーム出身の選手
+TeamStats.PurchasedPlayers=購入した選手
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=シーズンの概要
+seasonstats.boxheader=シーズンの概要
 
-foxtrick.seasonstats.played=Pld
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=L
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GA
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=リーグ
-foxtrick.seasonstats.friendly=親善
-foxtrick.seasonstats.cup=カップ
-foxtrick.seasonstats.masters=マスター
+seasonstats.played=Pld
+seasonstats.won=W
+seasonstats.draw=D
+seasonstats.lost=L
+seasonstats.goalplus=GF
+seasonstats.goalminus=GA
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=リーグ
+seasonstats.friendly=親善
+seasonstats.cup=カップ
+seasonstats.masters=マスター
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=ニュースフィードのフィルター\:
-foxtrick.LeagueNewsFilter.all=すべて
-foxtrick.LeagueNewsFilter.friendlies=親善試合とコーチの変更
-foxtrick.LeagueNewsFilter.transfers=移籍
-foxtrick.LeagueNewsFilter.lineup_changes=ラインナップの変更
+LeagueNewsFilter.label=ニュースフィードのフィルター\:
+LeagueNewsFilter.all=すべて
+LeagueNewsFilter.friendlies=親善試合とコーチの変更
+LeagueNewsFilter.transfers=移籍
+LeagueNewsFilter.lineupChanges=ラインナップの変更
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=このフォーラムを残すには、次のページで「保存」ボタンをクリック
-leave_conf_button=フォーラムを残す
+AddLeaveConfButton.alert=このフォーラムを残すには、次のページで「保存」ボタンをクリック
+AddLeaveConfButton.LeaveForum=フォーラムを残す
 
-forum.preferences=フォーラム設定
+ShowForumPrefButton.forumPreferences=フォーラム設定
 
 # ForumTemplates
 make_template_from_post=投稿からテンプレートを作成
@@ -374,7 +374,7 @@ preview=プレビュー
 forumPreview.send=送信
 
 #Forums
-foxtrick.CopyPostID=PostID をクリップボードにコピーする
+copy.PostID=PostID をクリップボードにコピーする
 CopyPosting=%sスタイルで投稿をコピーする
 CopyPosting.abbr=%sスタイルでコピーする
 CopyPosting.style.ht-ml=HT-ML
@@ -414,10 +414,10 @@ ForumSpecialBBCode.symbols=記号を挿入\: %s
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=フィルター名を入力
-foxtrick.transferfilter.delete_filter_ask=本当にこのフィルターを削除しますか？
-foxtrick.transferfilter.save_new_filter=新しいフィルターを保存
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick フィルター
+TransferSearchFilters.enterName=フィルター名を入力
+TransferSearchFilters.deleteFilter.ask=本当にこのフィルターを削除しますか？
+TransferSearchFilters.saveFilter=新しいフィルターを保存
+TransferSearchFilters.boxheader=FoxTrick フィルター
 
 #Filter
 Filters=フィルター
@@ -641,19 +641,19 @@ skilltable.youthplayer=ユース選手
 skilltable.rebought_youthplayer=ユースプレーヤーを再購入
 
 #matchdetail
-foxtrick.matchdetail.midfield=中盤
-foxtrick.matchdetail.attack=攻撃
-foxtrick.matchdetail.defence=守備
-foxtrick.matchdetail.total=合計
-foxtrick.shortcut.matchlineup=ラインナップ
+match.ratings.midfield=中盤
+match.ratings.attack=攻撃
+match.ratings.defence=守備
+match.ratings.total=合計
+lineupShortcut.lineup=ラインナップ
 
-foxtrick.matchdetail.right=ライト
-foxtrick.matchdetail.center=センター
-foxtrick.matchdetail.left=レフト
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=ライト
+match.ratings.center=センター
+match.ratings.left=レフト
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=この選手に入札してもいいですか。価格は %s です。
 foxtrick.tlconfirmation=この選手を移籍リストに登録してもいいですか？提示価格は %s です。
 foxtrick.staffconfirmationhire=Do you wish to hire %num %kind?
@@ -755,7 +755,7 @@ matches.indfreekick=Ind. プレイスキック
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=サポーターの統計
+shortcuts.suppstats=サポーターの統計
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
