--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -160,10 +160,10 @@ foxtrick.PlayerBirthday.desc=Déi lescht an déi zukënfteg Gebuertsdeeg ginn an
 foxtrick.MovePlayerSelectbox.desc=D'Këscht fir d'Spiller auszewielen gëtt op der Spillersäit no uewe gesat.
 foxtrick.SeasonStats.desc=Am Archiv vun de Mätscher ginn e puer Statistiken gewisen.
 foxtrick.LeagueNewsFilter.desc=Fir d'Nouvellen aus der Liga ze filtere gëtt eng Këscht dobäigesat. Deng Standard-Astellunge kanns de ënnendrënner maachen.
-foxtrick.LeagueNewsFilter.all.desc=All d'Nouvellë weisen
-foxtrick.LeagueNewsFilter.friendlies.desc=Nëmmen international Frëndschaftsmätscher an de Wiessel vum Trainer weisen.
-foxtrick.LeagueNewsFilter.transfers.desc=Nëmmen Transfere weisen
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Nëmmen Ännerunge bei den Opstellunge weisen
+LeagueNewsFilter.all.desc=All d'Nouvellë weisen
+LeagueNewsFilter.friendlies.desc=Nëmmen international Frëndschaftsmätscher an de Wiessel vum Trainer weisen.
+LeagueNewsFilter.transfers.desc=Nëmmen Transfere weisen
+LeagueNewsFilter.lineupChanges.desc=Nëmmen Ännerunge bei den Opstellunge weisen
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=D'Manageren, déi connectéiert sinn, ginn op der Säit vun der Regioun uewenhigesat. Opgepasst\! Doduerch geet alles méi lues, wa méi wéi 100 Manager connectéiert sinn.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Pop-upen iwwer d'Équipe bei d'Veräins-Links
@@ -213,9 +213,9 @@ foxtrick.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchta
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistiken
-foxtrick.ExtraShortcuts.transfers=Transferen
-foxtrick.ExtraShortcuts.prefs=Astellungen
+ExtraShortcuts.statistics=Statistiken
+ExtraShortcuts.transfers=Transferen
+ExtraShortcuts.prefs=Astellungen
 
 #HistoryStats
 
@@ -223,49 +223,49 @@ foxtrick.ExtraShortcuts.prefs=Astellungen
 #following string uses pluralForms
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=Iwwersiicht fir d'Équipe
-foxtrick.TeamStats.PlayerNotToOld.label=Spiller < 19 Joer
-foxtrick.TeamStats.PlayerToOld.label=Spiller >\= 19 Joer
-foxtrick.TeamStats.Cards.label=Kaarten
-foxtrick.TeamStats.Injured.label=Verletzt
-foxtrick.TeamStats.TransferListed.label=Op dem Transfermaart
-foxtrick.TeamStats.Pictures.label=Biller
-foxtrick.TeamStats.PlayedLatest.label=Huet am leschte Match gespillt
-foxtrick.TeamStats.NotPlayedLatest.label=Huet net am leschte Match gespillt
+TeamStats.boxheader=Iwwersiicht fir d'Équipe
+TeamStats.PlayerNotToOld=Spiller < 19 Joer
+TeamStats.PlayerToOld=Spiller >\= 19 Joer
+TeamStats.Cards=Kaarten
+TeamStats.Injured=Verletzt
+TeamStats.TransferListed=Op dem Transfermaart
+TeamStats.Pictures=Biller
+TeamStats.PlayedLatest=Huet am leschte Match gespillt
+TeamStats.NotPlayedLatest=Huet net am leschte Match gespillt
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Saisonsiwwerbléck
+seasonstats.boxheader=Saisonsiwwerbléck
 
-foxtrick.seasonstats.played=Gsp
-foxtrick.seasonstats.won=G
-foxtrick.seasonstats.draw=R
-foxtrick.seasonstats.lost=V
-foxtrick.seasonstats.goalplus=GG
-foxtrick.seasonstats.goalminus=GK
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=D
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=Championat
-foxtrick.seasonstats.friendly=Frëndschaftsmätscher
-foxtrick.seasonstats.cup=Coupe
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Gsp
+seasonstats.won=G
+seasonstats.draw=R
+seasonstats.lost=V
+seasonstats.goalplus=GG
+seasonstats.goalminus=GK
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=D
+seasonstats.away=A
+seasonstats.league=Championat
+seasonstats.friendly=Frëndschaftsmätscher
+seasonstats.cup=Coupe
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filter fir den Newsfeed\:
-foxtrick.LeagueNewsFilter.all=All
-foxtrick.LeagueNewsFilter.friendlies=Frëndschaftsmätscher & Trainerwiessel
-foxtrick.LeagueNewsFilter.transfers=Transferen
-foxtrick.LeagueNewsFilter.lineup_changes=Ännerunge vun der Opstellung
+LeagueNewsFilter.label=Filter fir den Newsfeed\:
+LeagueNewsFilter.all=All
+LeagueNewsFilter.friendlies=Frëndschaftsmätscher & Trainerwiessel
+LeagueNewsFilter.transfers=Transferen
+LeagueNewsFilter.lineupChanges=Ännerunge vun der Opstellung
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
-leave_conf_button=Forum verloossen
+AddLeaveConfButton.alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
+AddLeaveConfButton.LeaveForum=Forum verloossen
 
 
 # ForumTemplates
@@ -283,7 +283,7 @@ preview=Previsualiséieren
 forumPreview.send=Schécken
 
 #Forums
-foxtrick.CopyPostID=ID vum Message an d'Tëschepalette kopéieren
+copy.PostID=ID vum Message an d'Tëschepalette kopéieren
 
 ForumYouthIcons.label=Links fir d'Jugend
 ForumYouthIcons.labelToolbar=Haapt-Links
@@ -303,10 +303,10 @@ ForumSpecialBBCode.clock=aktuell Zäit dobäisetzen
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Numm vum Filter antippen\:
-foxtrick.transferfilter.delete_filter_ask=Wëlls de dëse Filter wierklech läschen?
-foxtrick.transferfilter.save_new_filter=Neie Filter späicheren
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick-Filteren
+TransferSearchFilters.enterName=Numm vum Filter antippen\:
+TransferSearchFilters.deleteFilter.ask=Wëlls de dëse Filter wierklech läschen?
+TransferSearchFilters.saveFilter=Neie Filter späicheren
+TransferSearchFilters.boxheader=FoxTrick-Filteren
 
 #Filter
 
@@ -364,18 +364,18 @@ Stamina=Konditioun
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mëttelfeld
-foxtrick.matchdetail.attack=Stuerm
-foxtrick.matchdetail.defence=Verteidegung
-foxtrick.shortcut.matchlineup=Opstellung
+match.ratings.midfield=Mëttelfeld
+match.ratings.attack=Stuerm
+match.ratings.defence=Verteidegung
+lineupShortcut.lineup=Opstellung
 
-foxtrick.matchdetail.right=Riets
-foxtrick.matchdetail.center=Zentral
-foxtrick.matchdetail.left=Lénks
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=Z
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Riets
+match.ratings.center=Zentral
+match.ratings.left=Lénks
+match.ratings.rightshort=R
+match.ratings.centershort=Z
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Wëlls de wierklech eng Offer fir dëse Spiller maachen? De Präis ass %s.
 foxtrick.tlconfirmation=Wëlls de dëse Spiller wierklech op den Transfermaart setzen? De Mindestpräis ass %s.
 foxtrick.ntremoveconfirmation=Wëlls de dëse Spiller wierklech an däi Kader ophuelen/aus dengem Kader erausgeheien?
@@ -439,7 +439,7 @@ matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Spr
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter-Statistiken
+shortcuts.suppstats=Supporter-Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
