--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -47,7 +47,7 @@ foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rādīt algu bez piemak
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rādīt sezonas algu
 foxtrick.SimplePresentation.League_Table.desc=Pievienot vertikālu līniju līgas tabulā, atvieglojot lasīšanu
 #ExtraShortcuts
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Saite uz CHPP uzstādījumu lapu
+ExtraShortcuts.ManageCHPP.desc=Saite uz CHPP uzstādījumu lapu
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Saite uz FoxTrick uzstādījumu lapu
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -56,8 +56,8 @@ foxtrick.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
 foxtrick.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 foxtrick.CopyYouth.ScoutComment.desc=Skauta komentārs
-foxtrick.LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Rādīt tikai izkārtojuma izmaiņas
+LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
+LeagueNewsFilter.lineupChanges.desc=Rādīt tikai izkārtojuma izmaiņas
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.Matches.desc=Spēles
 foxtrick.TeamPopupLinks.Players.desc=Spēlētāji
@@ -94,75 +94,75 @@ foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitāte
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistika
-foxtrick.ExtraShortcuts.transfers=Darījumi
-foxtrick.ExtraShortcuts.ManageCHPP=Pārvaldīt CHPP produktus
-foxtrick.ExtraShortcuts.prefs=Iestatījumi
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
+ExtraShortcuts.statistics=Statistika
+ExtraShortcuts.transfers=Darījumi
+ExtraShortcuts.ManageCHPP=Pārvaldīt CHPP produktus
+ExtraShortcuts.prefs=Iestatījumi
+ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
 
 #HistoryStats
-foxtrick.HistoryStats.season=Sezona
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Kausa kārta
-foxtrick.HistoryStats.cup.short=K
-foxtrick.HistoryStats.league=Līga
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.cupwinner=Kausa ieguvējs
-foxtrick.HistoryStats.cupwinner.short=KU
+HistoryStats.season=Sezona
+HistoryStats.season.short=S
+HistoryStats.cup=Kausa kārta
+HistoryStats.cup.short=K
+HistoryStats.league=Līga
+HistoryStats.finalPosition.short=P
+HistoryStats.cupwinner=Kausa ieguvējs
+HistoryStats.cupwinner.short=KU
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Spēlētāju šodien var paaugstināt\!
 
 # links
-foxtrick.links.boxheader=Saites
+links.boxheader=Saites
 
 #teamstats+filters
-foxtrick.TeamStats.label=Komandas pārskats
-foxtrick.TeamStats.PlayerNotToOld.label=Spēlētāji < 19
-foxtrick.TeamStats.PlayerToOld.label=Spēlētāji >\= 19
-foxtrick.TeamStats.Cards.label=Kartītes
-foxtrick.TeamStats.Injured.label=Savainoti
-foxtrick.TeamStats.TransferListed.label=Izlikti pārdošanā
-foxtrick.TeamStats.Pictures.label=Sejas
-foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
-foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
-foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
-foxtrick.TeamStats.ActivePlayers.label=Aktīvie spēlētāji
-foxtrick.TeamStats.HomeGrownPlayers.label="Mātes kluba" bonuss
-foxtrick.TeamStats.PurchasedPlayers.label=Nopirktie spēlētāji
+TeamStats.boxheader=Komandas pārskats
+TeamStats.PlayerNotToOld=Spēlētāji < 19
+TeamStats.PlayerToOld=Spēlētāji >\= 19
+TeamStats.Cards=Kartītes
+TeamStats.Injured=Savainoti
+TeamStats.TransferListed=Izlikti pārdošanā
+TeamStats.Pictures=Sejas
+TeamStats.PlayedLatest=Spēlēja pēdējā spēlē
+TeamStats.NotPlayedLatest=Nespēlēja pēdējā spēlē
+TeamStats.NotTransferListed=Nav izlikti pārdošanā
+TeamStats.ActivePlayers=Aktīvie spēlētāji
+TeamStats.HomeGrownPlayers="Mātes kluba" bonuss
+TeamStats.PurchasedPlayers=Nopirktie spēlētāji
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Sezonas pārskats
+seasonstats.boxheader=Sezonas pārskats
 
-foxtrick.seasonstats.played=Sp
-foxtrick.seasonstats.won=U
-foxtrick.seasonstats.draw=N
-foxtrick.seasonstats.lost=Z
-foxtrick.seasonstats.goalplus=VG
-foxtrick.seasonstats.goalminus=VI
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=K
-foxtrick.seasonstats.home=M
-foxtrick.seasonstats.away=V
-foxtrick.seasonstats.league=Līgas spēles
-foxtrick.seasonstats.friendly=Draudzības spēles
-foxtrick.seasonstats.cup=Kauss
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Sp
+seasonstats.won=U
+seasonstats.draw=N
+seasonstats.lost=Z
+seasonstats.goalplus=VG
+seasonstats.goalminus=VI
+seasonstats.goaldiff=±
+seasonstats.total=K
+seasonstats.home=M
+seasonstats.away=V
+seasonstats.league=Līgas spēles
+seasonstats.friendly=Draudzības spēles
+seasonstats.cup=Kauss
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Jaunumu filtrs\:
-foxtrick.LeagueNewsFilter.all=Viss
-foxtrick.LeagueNewsFilter.friendlies=Draudzības spēles un mainītie treneri
-foxtrick.LeagueNewsFilter.transfers=Darījumi
-foxtrick.LeagueNewsFilter.lineup_changes=Spēlētāju izkārtojuma izmaiņas
+LeagueNewsFilter.label=Jaunumu filtrs\:
+LeagueNewsFilter.all=Viss
+LeagueNewsFilter.friendlies=Draudzības spēles un mainītie treneri
+LeagueNewsFilter.transfers=Darījumi
+LeagueNewsFilter.lineupChanges=Spēlētāju izkārtojuma izmaiņas
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button=Atstāt diskusiju telpu
+AddLeaveConfButton.LeaveForum=Atstāt diskusiju telpu
 
-forum.preferences=Diskusiju uzstādījumi
+ShowForumPrefButton.forumPreferences=Diskusiju uzstādījumi
 
 # ForumTemplates
 make_template_from_post=Izveidot veidni no ziņojuma
@@ -179,7 +179,7 @@ preview=Priekšskatīt
 forumPreview.send=Nosūtīt
 
 #Forums
-foxtrick.CopyPostID=Kopēt PostID starpliktuvē
+copy.PostID=Kopēt PostID starpliktuvē
 CopyPosting=Kopēt ziņu %s stilā
 CopyPosting.abbr=Kopēt %s stilā
 CopyPosting.style.ht-ml=HT-ML
@@ -196,10 +196,10 @@ ForumSpecialBBCode.symbols=Ievietot simbolu\: %s
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Ievadiet filtra nosaukumu\:
-foxtrick.transferfilter.delete_filter_ask=Vai tiešām vēlaties izdzēst šo filtru?
-foxtrick.transferfilter.save_new_filter=Saglabāt jaunu filtru
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick filtri
+TransferSearchFilters.enterName=Ievadiet filtra nosaukumu\:
+TransferSearchFilters.deleteFilter.ask=Vai tiešām vēlaties izdzēst šo filtru?
+TransferSearchFilters.saveFilter=Saglabāt jaunu filtru
+TransferSearchFilters.boxheader=FoxTrick filtri
 
 #Filter
 Filters=Filtri
@@ -411,19 +411,19 @@ skilltable.youthplayer=jauniešu spēlētājs
 skilltable.rebought_youthplayer=atpirkts jauniešu spēlētājs
 
 #matchdetail
-foxtrick.matchdetail.midfield=Vidējā zona
-foxtrick.matchdetail.attack=Uzbrukums
-foxtrick.matchdetail.defence=Aizsardzība
-foxtrick.matchdetail.total=Kopā
-foxtrick.shortcut.matchlineup=izkārtojums
+match.ratings.midfield=Vidējā zona
+match.ratings.attack=Uzbrukums
+match.ratings.defence=Aizsardzība
+match.ratings.total=Kopā
+lineupShortcut.lineup=izkārtojums
 
-foxtrick.matchdetail.right=Labais
-foxtrick.matchdetail.center=Centra
-foxtrick.matchdetail.left=Kreisais
-foxtrick.matchdetail.rightshort=L
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=K
-foxtrick.matchdetail.ifkshort=N
+match.ratings.right=Labais
+match.ratings.center=Centra
+match.ratings.left=Kreisais
+match.ratings.rightshort=L
+match.ratings.centershort=C
+match.ratings.leftshort=K
+match.ratings.ifkshort=N
 foxtrick.bidconfirmation=Vēlies solīt %s par šo spēlētāju?
 foxtrick.tlconfirmation=Vēlaties pārdot šo spēlētāju? Sākumcena ir %s.
 foxtrick.staffconfirmationhire=Tiks nolīgti %num %kind, turpināt?
@@ -524,7 +524,7 @@ matches.indfreekick=Net. brīvsitieni
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter statistika
+shortcuts.suppstats=Supporter statistika
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
