--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -181,10 +181,10 @@ foxtrick.PlayerBirthday.desc=Juri d-data meta l-plejer għalaq żmienu l-aħħar
 foxtrick.MovePlayerSelectbox.desc=Imexxi l-kaxxa minn fejn tagħżel il-plejers 'il fuq fuq il-paġna bid-dettalji tal-plejers
 foxtrick.SeasonStats.desc=Juri ftit statistika fuq il-paġna bl-arkivju tal-partiti
 foxtrick.LeagueNewsFilter.desc=Fuq il-paġna tas-serje jitniżżlu t-timjiet li bidlu jew għamlu l-formazzjonijiet tagħhom matul il-ġimgħa li għaddiet u jżid filtru għall-aħbarijiet tas-serje. Issettja l-filtru default tiegħek hawn taħt\:
-foxtrick.LeagueNewsFilter.all.desc=Juri l-aħbarijiet kollha
-foxtrick.LeagueNewsFilter.friendlies.desc=Juri partiti ta' ħbiberija internazzjonali u kowċis mibdula biss
-foxtrick.LeagueNewsFilter.transfers.desc=Juri t-trasferimenti biss
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Juri bdil fil-formazzjoni biss
+LeagueNewsFilter.all.desc=Juri l-aħbarijiet kollha
+LeagueNewsFilter.friendlies.desc=Juri partiti ta' ħbiberija internazzjonali u kowċis mibdula biss
+LeagueNewsFilter.transfers.desc=Juri t-trasferimenti biss
+LeagueNewsFilter.lineupChanges.desc=Juri bdil fil-formazzjoni biss
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Imexxi 'l fuq il-maniġers li qegħdin online fuq il-paġna tar-reġjuni. Attent\! Din tista' tieħu ammont ta' ħin konsiderevoli jekk il-lista ta' persuni online taqbeż il-100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Iżid links biex tiftaħ popups fuq it-timijiet
@@ -249,66 +249,66 @@ foxtrick.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tku
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistika
-foxtrick.ExtraShortcuts.transfers=Trasferimenti
-foxtrick.ExtraShortcuts.prefs=Preferenzi
-foxtrick.ExtraShortcuts.ftprefs=Preferenzi ta' Foxtrick
+ExtraShortcuts.statistics=Statistika
+ExtraShortcuts.transfers=Trasferimenti
+ExtraShortcuts.prefs=Preferenzi
+ExtraShortcuts.ftprefs=Preferenzi ta' Foxtrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=staġun
-foxtrick.HistoryStats.cup=tazza
-foxtrick.HistoryStats.league=kampjonat
-foxtrick.HistoryStats.pos=poż
-foxtrick.HistoryStats.label=Statistika dwar l-Istorja
+HistoryStats.season=staġun
+HistoryStats.cup=tazza
+HistoryStats.league=kampjonat
+HistoryStats.finalPosition=poż
+HistoryStats.label=Statistika dwar l-Istorja
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Il-plejer jista' jittella' illum stess\!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=It-tim inġenerali
-foxtrick.TeamStats.PlayerNotToOld.label=Plejers < 19-il sena
-foxtrick.TeamStats.PlayerToOld.label=Plejers >\= 19-il sena
-foxtrick.TeamStats.Cards.label=Karti
-foxtrick.TeamStats.Injured.label=Imweġġa'
-foxtrick.TeamStats.TransferListed.label=Għall-bejgħ
-foxtrick.TeamStats.Pictures.label=Stampi
-foxtrick.TeamStats.PlayedLatest.label=Lagħab fl-aħħar partita
-foxtrick.TeamStats.NotPlayedLatest.label=Ma lagħabx fl-aħħar partita
+TeamStats.boxheader=It-tim inġenerali
+TeamStats.PlayerNotToOld=Plejers < 19-il sena
+TeamStats.PlayerToOld=Plejers >\= 19-il sena
+TeamStats.Cards=Karti
+TeamStats.Injured=Imweġġa'
+TeamStats.TransferListed=Għall-bejgħ
+TeamStats.Pictures=Stampi
+TeamStats.PlayedLatest=Lagħab fl-aħħar partita
+TeamStats.NotPlayedLatest=Ma lagħabx fl-aħħar partita
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=L-istaġun inġenerali
+seasonstats.boxheader=L-istaġun inġenerali
 
-foxtrick.seasonstats.played=L
-foxtrick.seasonstats.won=R
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=T
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GK
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=Logħob tal-kampjonat
-foxtrick.seasonstats.friendly=Logħob ta' ħbiberija
-foxtrick.seasonstats.cup=Logħob tat-Tazza
-foxtrick.seasonstats.masters=Logħob tal-Masters
+seasonstats.played=L
+seasonstats.won=R
+seasonstats.draw=D
+seasonstats.lost=T
+seasonstats.goalplus=GF
+seasonstats.goalminus=GK
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=Logħob tal-kampjonat
+seasonstats.friendly=Logħob ta' ħbiberija
+seasonstats.cup=Logħob tat-Tazza
+seasonstats.masters=Logħob tal-Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtru tal-aħbarijiet\:
-foxtrick.LeagueNewsFilter.all=Kollox
-foxtrick.LeagueNewsFilter.friendlies=Logħob ta' ħbiberija u kowċis mibdula
-foxtrick.LeagueNewsFilter.transfers=Trasferimenti
-foxtrick.LeagueNewsFilter.lineup_changes=Bdil fil-formazzjoni
+LeagueNewsFilter.label=Filtru tal-aħbarijiet\:
+LeagueNewsFilter.all=Kollox
+LeagueNewsFilter.friendlies=Logħob ta' ħbiberija u kowċis mibdula
+LeagueNewsFilter.transfers=Trasferimenti
+LeagueNewsFilter.lineupChanges=Bdil fil-formazzjoni
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Agħfas fuq il-buttuna 'Issejvja' li għandek issib fuq il-paġna li jmiss biex ma titlaq minn dan il-forum
-leave_conf_button=Itlaq mill-forum
+AddLeaveConfButton.alert=Agħfas fuq il-buttuna 'Issejvja' li għandek issib fuq il-paġna li jmiss biex ma titlaq minn dan il-forum
+AddLeaveConfButton.LeaveForum=Itlaq mill-forum
 
 
 # ForumTemplates
@@ -326,7 +326,7 @@ preview=Ara kif se jidher
 forumPreview.send=Ibgħat
 
 #Forums
-foxtrick.CopyPostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
+copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
 
 ForumYouthIcons.label=Links għall-Minors
 ForumYouthIcons.labelToolbar=Links Prinċipali
@@ -348,10 +348,10 @@ ForumSpecialBBCode.pre=Daħħal tikketta b'format kif kien qabel
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Daħħal l-isem tal-filtru\:
-foxtrick.transferfilter.delete_filter_ask=Ċert li trid tħassar dan il-filtru?
-foxtrick.transferfilter.save_new_filter=Issejvja l-filtru l-ġdid
-foxtrick.transferfilter.Foxtrick_Filters=Filtri ta' Foxtrick
+TransferSearchFilters.enterName=Daħħal l-isem tal-filtru\:
+TransferSearchFilters.deleteFilter.ask=Ċert li trid tħassar dan il-filtru?
+TransferSearchFilters.saveFilter=Issejvja l-filtru l-ġdid
+TransferSearchFilters.boxheader=Filtri ta' Foxtrick
 
 #Filter
 
@@ -469,18 +469,18 @@ CareerGoals.abbr=GKr
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Nofs
-foxtrick.matchdetail.attack=Attakk
-foxtrick.matchdetail.defence=Difens
-foxtrick.shortcut.matchlineup=formazzjoni
+match.ratings.midfield=Nofs
+match.ratings.attack=Attakk
+match.ratings.defence=Difens
+lineupShortcut.lineup=formazzjoni
 
-foxtrick.matchdetail.right=Lemin
-foxtrick.matchdetail.center=Ċentrali
-foxtrick.matchdetail.left=Xellug
-foxtrick.matchdetail.rightshort=L
-foxtrick.matchdetail.centershort=Ċ
-foxtrick.matchdetail.leftshort=X
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Lemin
+match.ratings.center=Ċentrali
+match.ratings.left=Xellug
+match.ratings.rightshort=L
+match.ratings.centershort=Ċ
+match.ratings.leftshort=X
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Ċert li trid toffri għal dan il-plejer? Il-prezz huwa %s.
 foxtrick.tlconfirmation=Ċert li trid titfa' lil dan il-plejer għall-bejgħ? Il-prezz se jibda minn %s.
 foxtrick.staffconfirmationhire=Ċert li trid timpjega %num %kind?
@@ -555,7 +555,7 @@ matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Statistika għas-Supporter
+shortcuts.suppstats=Statistika għas-Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
