--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -211,10 +211,10 @@ foxtrick.PlayerBirthday.desc=Pokazuje niedawne i nadchodzące urodziny na stroni
 foxtrick.MovePlayerSelectbox.desc=Przesuwa pole wyboru zawodnika wyżej na stronie Zawodnicy
 foxtrick.SeasonStats.desc=Pokazuje statystyki na stronie Archiwum meczów
 foxtrick.LeagueNewsFilter.desc=Filtruje wydarzenia pokazywane na stronie ligi. Wybierz filtry z poniższych\:
-foxtrick.LeagueNewsFilter.all.desc=Pokazuj wszystkie wydarzenia
-foxtrick.LeagueNewsFilter.friendlies.desc=Pokazuj tylko informacje o sparingach międzynarodowych i zmianach trenera
-foxtrick.LeagueNewsFilter.transfers.desc=Pokazuj tylko informacje o transferach
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Pokazuj tylko informacje o zmianie rozkazów meczowych
+LeagueNewsFilter.all.desc=Pokazuj wszystkie wydarzenia
+LeagueNewsFilter.friendlies.desc=Pokazuj tylko informacje o sparingach międzynarodowych i zmianach trenera
+LeagueNewsFilter.transfers.desc=Pokazuj tylko informacje o transferach
+LeagueNewsFilter.lineupChanges.desc=Pokazuj tylko informacje o zmianie rozkazów meczowych
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Przesuwa w górę listę zalogowanych prezesów na stronie regionu. Uwaga\! Hattrick może działać bardzo wolno jeśli liczba zalogowanych graczy przekroczy 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Aktywuje moduł TeamPopupLinks dla drużyn klubowych
@@ -284,71 +284,71 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statystyki
-foxtrick.ExtraShortcuts.transfers=Transfery
-foxtrick.ExtraShortcuts.prefs=Ustawienia
+ExtraShortcuts.statistics=Statystyki
+ExtraShortcuts.transfers=Transfery
+ExtraShortcuts.prefs=Ustawienia
 
 #HistoryStats
-foxtrick.HistoryStats.season=sezon
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=puchar
-foxtrick.HistoryStats.cup.short=P
-foxtrick.HistoryStats.league=liga
-foxtrick.HistoryStats.league.short=Liga
-foxtrick.HistoryStats.pos=miejsce
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Statystyki
-foxtrick.HistoryStats.cupwinner=Zdobyte puchary
-foxtrick.HistoryStats.cupwinner.short=Pu
+HistoryStats.season=sezon
+HistoryStats.season.short=S
+HistoryStats.cup=puchar
+HistoryStats.cup.short=P
+HistoryStats.league=liga
+HistoryStats.league.short=Liga
+HistoryStats.finalPosition=miejsce
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Statystyki
+HistoryStats.cupwinner=Zdobyte puchary
+HistoryStats.cupwinner.short=Pu
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Możesz promować tego zawodnika\!
 
 # links
-foxtrick.links.boxheader=Linki
+links.boxheader=Linki
 
 #teamstats+filters
-foxtrick.TeamStats.label=Przegląd drużyny
-foxtrick.TeamStats.PlayerNotToOld.label=Zawodnicy poniżej 19 lat
-foxtrick.TeamStats.PlayerToOld.label=Zawodnicy powyżej 19 lat
-foxtrick.TeamStats.Cards.label=Kartki
-foxtrick.TeamStats.Injured.label=Kontuzjowani
-foxtrick.TeamStats.TransferListed.label=Na sprzedaż
-foxtrick.TeamStats.Pictures.label=Twarze
-foxtrick.TeamStats.PlayedLatest.label=Grał w ostatnim meczu
-foxtrick.TeamStats.NotPlayedLatest.label=Nie grał w ostatnim meczu
+TeamStats.boxheader=Przegląd drużyny
+TeamStats.PlayerNotToOld=Zawodnicy poniżej 19 lat
+TeamStats.PlayerToOld=Zawodnicy powyżej 19 lat
+TeamStats.Cards=Kartki
+TeamStats.Injured=Kontuzjowani
+TeamStats.TransferListed=Na sprzedaż
+TeamStats.Pictures=Twarze
+TeamStats.PlayedLatest=Grał w ostatnim meczu
+TeamStats.NotPlayedLatest=Nie grał w ostatnim meczu
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Wyniki w sezonie
+seasonstats.boxheader=Wyniki w sezonie
 
-foxtrick.seasonstats.played=M
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=R
-foxtrick.seasonstats.lost=P
-foxtrick.seasonstats.goalplus=BZ
-foxtrick.seasonstats.goalminus=BS
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=R
-foxtrick.seasonstats.home=D
-foxtrick.seasonstats.away=Z
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Sparing
-foxtrick.seasonstats.cup=Puchar
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=M
+seasonstats.won=W
+seasonstats.draw=R
+seasonstats.lost=P
+seasonstats.goalplus=BZ
+seasonstats.goalminus=BS
+seasonstats.goaldiff=±
+seasonstats.total=R
+seasonstats.home=D
+seasonstats.away=Z
+seasonstats.league=Liga
+seasonstats.friendly=Sparing
+seasonstats.cup=Puchar
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtry wiadomości ligowych\:
-foxtrick.LeagueNewsFilter.all=Wszystkie
-foxtrick.LeagueNewsFilter.friendlies=Sparingi i zmiany trenera
-foxtrick.LeagueNewsFilter.transfers=Transfery
-foxtrick.LeagueNewsFilter.lineup_changes=Zmiany ustawienia
+LeagueNewsFilter.label=Filtry wiadomości ligowych\:
+LeagueNewsFilter.all=Wszystkie
+LeagueNewsFilter.friendlies=Sparingi i zmiany trenera
+LeagueNewsFilter.transfers=Transfery
+LeagueNewsFilter.lineupChanges=Zmiany ustawienia
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
-leave_conf_button=Opuść forum
+AddLeaveConfButton.alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
+AddLeaveConfButton.LeaveForum=Opuść forum
 
 
 # ForumTemplates
@@ -366,7 +366,7 @@ preview=Podgląd
 forumPreview.send=Wyślij
 
 #Forums
-foxtrick.CopyPostID=Kopiuj postID do schowka
+copy.PostID=Kopiuj postID do schowka
 CopyPosting=Kopiuj w stylu %s
 CopyPosting.abbr=Kopiuj w stylu %s
 CopyPosting.style.ht-ml=HT-ML
@@ -395,10 +395,10 @@ ForumSpecialBBCode.tableSeparator=Konwertuj "%s" do komórek
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Nazwij filtr\:
-foxtrick.transferfilter.delete_filter_ask=Czy na pewno chcesz usunąć ten filtr?
-foxtrick.transferfilter.save_new_filter=Dodaj nowy filtr
-foxtrick.transferfilter.Foxtrick_Filters=Filtry FoxTricka
+TransferSearchFilters.enterName=Nazwij filtr\:
+TransferSearchFilters.deleteFilter.ask=Czy na pewno chcesz usunąć ten filtr?
+TransferSearchFilters.saveFilter=Dodaj nowy filtr
+TransferSearchFilters.boxheader=Filtry FoxTricka
 
 #Filter
 
@@ -529,18 +529,18 @@ Current_league.abbr=Liga
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Pomoc
-foxtrick.matchdetail.attack=Atak
-foxtrick.matchdetail.defence=Obrona
-foxtrick.shortcut.matchlineup=Ustawienie
+match.ratings.midfield=Pomoc
+match.ratings.attack=Atak
+match.ratings.defence=Obrona
+lineupShortcut.lineup=Ustawienie
 
-foxtrick.matchdetail.right=Prawy
-foxtrick.matchdetail.center=Środk.
-foxtrick.matchdetail.left=Lewy
-foxtrick.matchdetail.rightshort=P
-foxtrick.matchdetail.centershort=Ś
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=W
+match.ratings.right=Prawy
+match.ratings.center=Środk.
+match.ratings.left=Lewy
+match.ratings.rightshort=P
+match.ratings.centershort=Ś
+match.ratings.leftshort=L
+match.ratings.ifkshort=W
 foxtrick.bidconfirmation=Czy na pewno chcesz złożyć ofertę kupna tego zawodnika? Cena to %s.
 foxtrick.tlconfirmation=Czy na pewno chcesz wystawić tego zawodnika na listę transferową? Cena to %s.
 foxtrick.staffconfirmationhire=Czy napewno chcesz zatrudnić %num %kind?
@@ -613,7 +613,7 @@ matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Zestawienie
+shortcuts.suppstats=Zestawienie
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
