--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -102,7 +102,7 @@ foxtrick.SkinPlugin.desc=Adicionar seu proprio skin CSS para o hattrick
 foxtrick.CurrencyConverter.desc=Converter para uma moeda HT
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.AddSpace.desc=Aumentar o espaço para os ícones de atalho
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link para a página de preferências CHPP
+ExtraShortcuts.ManageCHPP.desc=Link para a página de preferências CHPP
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link para a página de preferências do FoxTrick
 #CopyMatchID
 foxtrick.GoalDifferenceToTables.desc=Adicionar uma coluna extra para a diferença de gols, tabela de promoção, bem como tabelas antigas de série
@@ -191,57 +191,57 @@ foxtrick.RatingsDisplay.HatStats.desc=Hatstats
 #Save for work
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Imagem anexada
+EmbedMedia.EmbeddedImage=Imagem anexada
 
 #icons
-foxtrick.ExtraShortcuts.statistics=statistics
-foxtrick.ExtraShortcuts.transfers=transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
-foxtrick.ExtraShortcuts.prefs=preferences
-foxtrick.ExtraShortcuts.ftprefs=Preferências do FoxTrick
+ExtraShortcuts.statistics=statistics
+ExtraShortcuts.transfers=transfers
+ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
+ExtraShortcuts.prefs=preferences
+ExtraShortcuts.ftprefs=Preferências do FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=Temporada
-foxtrick.HistoryStats.cup=Rodada da copa
-foxtrick.HistoryStats.league=Grupos
-foxtrick.HistoryStats.pos=Posição final no grupo
-foxtrick.HistoryStats.label=Estatísticas históricas
-foxtrick.HistoryStats.cupwinner=Vencedor da copa
+HistoryStats.season=Temporada
+HistoryStats.cup=Rodada da copa
+HistoryStats.league=Grupos
+HistoryStats.finalPosition=Posição final no grupo
+HistoryStats.label=Estatísticas históricas
+HistoryStats.cupwinner=Vencedor da copa
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Jogador pode ser promovido hoje\!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=Visão Geral do Time
-foxtrick.TeamStats.Cards.label=Cartões
-foxtrick.TeamStats.Injured.label=Lesões
-foxtrick.TeamStats.TransferListed.label=A Venda
-foxtrick.TeamStats.NotTransferListed.label=Não listado no mercado de transferência
-foxtrick.TeamStats.ActivePlayers.label=Jogadores ativos
-foxtrick.TeamStats.HomeGrownPlayers.label=Jogadores recrutados pelo time
-foxtrick.TeamStats.PurchasedPlayers.label=Jogadores comprados
+TeamStats.boxheader=Visão Geral do Time
+TeamStats.Cards=Cartões
+TeamStats.Injured=Lesões
+TeamStats.TransferListed=A Venda
+TeamStats.NotTransferListed=Não listado no mercado de transferência
+TeamStats.ActivePlayers=Jogadores ativos
+TeamStats.HomeGrownPlayers=Jogadores recrutados pelo time
+TeamStats.PurchasedPlayers=Jogadores comprados
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Amistosos
-foxtrick.seasonstats.cup=Copa
-foxtrick.seasonstats.masters=Masters
+seasonstats.goaldiff=±
+seasonstats.league=Liga
+seasonstats.friendly=Amistosos
+seasonstats.cup=Copa
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Clique no Botao 'Salvar' na proxima pagina para sair desse forum
-leave_conf_button=Sair da conferencia
+AddLeaveConfButton.alert=Clique no Botao 'Salvar' na proxima pagina para sair desse forum
+AddLeaveConfButton.LeaveForum=Sair da conferencia
 
-forum.preferences=Preferências do fórum
+ShowForumPrefButton.forumPreferences=Preferências do fórum
 
 # ForumTemplates
 make_template_from_post=Criar template para post
@@ -257,7 +257,7 @@ show_preview_from_post=Mostrar uma previa do post
 forumPreview.send=Enviar
 
 #Forums
-foxtrick.CopyPostID=Copiar para Area de Tranferencia
+copy.PostID=Copiar para Area de Tranferencia
 CopyPosting=Copiar postando no estilo %s
 CopyPosting.abbr=Copiar em estilo %s
 CopyPosting.style.ht-ml=HT-ML
@@ -293,10 +293,10 @@ ForumSpecialBBCode.symbols=Inserir símbolo\: %s
 ShowNestedQuotes=Mostrar citações agrupadas  
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Coloque o nome do filtro\:
-foxtrick.transferfilter.delete_filter_ask=Realmente quer apagar esse filtro?
-foxtrick.transferfilter.save_new_filter=Salvar novo filtro
-foxtrick.transferfilter.Foxtrick_Filters=Filtros Foxtrick
+TransferSearchFilters.enterName=Coloque o nome do filtro\:
+TransferSearchFilters.deleteFilter.ask=Realmente quer apagar esse filtro?
+TransferSearchFilters.saveFilter=Salvar novo filtro
+TransferSearchFilters.boxheader=Filtros Foxtrick
 
 #Filter
 Filters=Filtros
@@ -467,19 +467,19 @@ skilltable.youthplayer=junior
 skilltable.rebought_youthplayer=Recomprou junior
 
 #matchdetail
-foxtrick.matchdetail.midfield=Meio Campo
-foxtrick.matchdetail.attack=Ataque
-foxtrick.matchdetail.defence=Defesa
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=formação
+match.ratings.midfield=Meio Campo
+match.ratings.attack=Ataque
+match.ratings.defence=Defesa
+match.ratings.total=Total
+lineupShortcut.lineup=formação
 
-foxtrick.matchdetail.right=Direito
-foxtrick.matchdetail.center=Centro
-foxtrick.matchdetail.left=Esquerdo
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=E
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Direito
+match.ratings.center=Centro
+match.ratings.left=Esquerdo
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=E
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Deseja dar lance a este jogador? O preco é %s.
 foxtrick.tlconfirmation=Deseja colocar este jogador na lista de transferencias? O valor pedido é %s.
 foxtrick.staffconfirmationhire=Você deseja contratar %num %kind?
@@ -575,7 +575,7 @@ matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Estatiticas Exclusivas
+shortcuts.suppstats=Estatiticas Exclusivas
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
