--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -185,10 +185,10 @@ foxtrick.PlayerBirthday.desc=Zobrazuje posledné a nadchádzajúce narodeniny na
 foxtrick.MovePlayerSelectbox.desc=Presúva výberový zoznam hráčov na vrch stránky s hráčmi
 foxtrick.SeasonStats.desc=Zobrazí nejaké štatistiky na stránke s archívom zápasov
 foxtrick.LeagueNewsFilter.desc=Pridáva filter pre ligové novinky. Nastavte si predvolený filter nižšie
-foxtrick.LeagueNewsFilter.all.desc=Zobraziť všetky novinky
-foxtrick.LeagueNewsFilter.friendlies.desc=Zobraziť iba medzinárodné priateĺské zápasy a zmeny trénerov
-foxtrick.LeagueNewsFilter.transfers.desc=Zobraziť iba prestupy
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Zobraziť iba zmeny v zostavách
+LeagueNewsFilter.all.desc=Zobraziť všetky novinky
+LeagueNewsFilter.friendlies.desc=Zobraziť iba medzinárodné priateĺské zápasy a zmeny trénerov
+LeagueNewsFilter.transfers.desc=Zobraziť iba prestupy
+LeagueNewsFilter.lineupChanges.desc=Zobraziť iba zmeny v zostavách
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Presúva manažérov online nahor na stránke s regiónom. Upozornenie\! Ak je počet online užívateľov väčší ako 100, stáva sa to veľmi pomalým\!
 foxtrick.TeamPopupLinks.TeamLinks.desc=Pridáva TeamPopupLinks do tímových odkazov
@@ -251,65 +251,65 @@ foxtrick.RapidId.desc=Chytré okienko na vrchu stránky pre zobrazenie tímu, hr
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=štatistiky
-foxtrick.ExtraShortcuts.transfers=prestupy
-foxtrick.ExtraShortcuts.prefs=preferencie
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick nastavenia
+ExtraShortcuts.statistics=štatistiky
+ExtraShortcuts.transfers=prestupy
+ExtraShortcuts.prefs=preferencie
+ExtraShortcuts.ftprefs=FoxTrick nastavenia
 
 #HistoryStats
-foxtrick.HistoryStats.season=sezóna
-foxtrick.HistoryStats.cup=pohár
-foxtrick.HistoryStats.league=liga
-foxtrick.HistoryStats.pos=poz.
-foxtrick.HistoryStats.label=Historické štatistiky
+HistoryStats.season=sezóna
+HistoryStats.cup=pohár
+HistoryStats.league=liga
+HistoryStats.finalPosition=poz.
+HistoryStats.label=Historické štatistiky
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Hráč môže byť dnes preradený\!
 
 # links
-foxtrick.links.boxheader=Odkazy
+links.boxheader=Odkazy
 
 #teamstats+filters
-foxtrick.TeamStats.label=Prehľad o tíme
-foxtrick.TeamStats.PlayerNotToOld.label=Hráči < 19 rokov
-foxtrick.TeamStats.PlayerToOld.label=Hráči >\= 19 rokov
-foxtrick.TeamStats.Cards.label=Karty
-foxtrick.TeamStats.Injured.label=Zranenia
-foxtrick.TeamStats.TransferListed.label=Na trhu
-foxtrick.TeamStats.Pictures.label=Obrázky
-foxtrick.TeamStats.PlayedLatest.label=Hrali v poslednom zápase
-foxtrick.TeamStats.NotPlayedLatest.label=Nehrali v poslednom zápase
+TeamStats.boxheader=Prehľad o tíme
+TeamStats.PlayerNotToOld=Hráči < 19 rokov
+TeamStats.PlayerToOld=Hráči >\= 19 rokov
+TeamStats.Cards=Karty
+TeamStats.Injured=Zranenia
+TeamStats.TransferListed=Na trhu
+TeamStats.Pictures=Obrázky
+TeamStats.PlayedLatest=Hrali v poslednom zápase
+TeamStats.NotPlayedLatest=Nehrali v poslednom zápase
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-foxtrick.seasonstats.played=Odoh
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=R
-foxtrick.seasonstats.lost=P
-foxtrick.seasonstats.goalplus=GV
-foxtrick.seasonstats.goalminus=GO
-foxtrick.seasonstats.goaldiff=R±
-foxtrick.seasonstats.total=C
-foxtrick.seasonstats.home=D
-foxtrick.seasonstats.away=V
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Priateláky
-foxtrick.seasonstats.cup=Pohár
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Odoh
+seasonstats.won=V
+seasonstats.draw=R
+seasonstats.lost=P
+seasonstats.goalplus=GV
+seasonstats.goalminus=GO
+seasonstats.goaldiff=R±
+seasonstats.total=C
+seasonstats.home=D
+seasonstats.away=V
+seasonstats.league=Liga
+seasonstats.friendly=Priateláky
+seasonstats.cup=Pohár
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filter s novinkami\:
-foxtrick.LeagueNewsFilter.all=Všetky
-foxtrick.LeagueNewsFilter.friendlies=Priateláky a zmeny trénerov
-foxtrick.LeagueNewsFilter.transfers=Prestupy
-foxtrick.LeagueNewsFilter.lineup_changes=Zmeny v zostavách
+LeagueNewsFilter.label=Filter s novinkami\:
+LeagueNewsFilter.all=Všetky
+LeagueNewsFilter.friendlies=Priateláky a zmeny trénerov
+LeagueNewsFilter.transfers=Prestupy
+LeagueNewsFilter.lineupChanges=Zmeny v zostavách
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
-leave_conf_button=Opustiť konferenciu
+AddLeaveConfButton.alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
+AddLeaveConfButton.LeaveForum=Opustiť konferenciu
 
 
 # ForumTemplates
@@ -327,7 +327,7 @@ preview=Náhľad
 forumPreview.send=Poslať
 
 #Forums
-foxtrick.CopyPostID=Kopírovať do schránky
+copy.PostID=Kopírovať do schránky
 
 ForumYouthIcons.label=Dorastenecké odkazy
 ForumYouthIcons.labelToolbar=Štandardné odkazy
@@ -349,10 +349,10 @@ ForumSpecialBBCode.pre=Vložiť 'pre' formátovaciu značku
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Napíš názov filtra\:
-foxtrick.transferfilter.delete_filter_ask=Určite chceš odstrániť tento filter?
-foxtrick.transferfilter.save_new_filter=Uložiť nový filter
-foxtrick.transferfilter.Foxtrick_Filters=Foxtrick filtre
+TransferSearchFilters.enterName=Napíš názov filtra\:
+TransferSearchFilters.deleteFilter.ask=Určite chceš odstrániť tento filter?
+TransferSearchFilters.saveFilter=Uložiť nový filter
+TransferSearchFilters.boxheader=Foxtrick filtre
 
 #Filter
 
@@ -471,18 +471,18 @@ CareerGoals.abbr=KG
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Záloha
-foxtrick.matchdetail.attack=Útok
-foxtrick.matchdetail.defence=Obrana
-foxtrick.shortcut.matchlineup=zostava
+match.ratings.midfield=Záloha
+match.ratings.attack=Útok
+match.ratings.defence=Obrana
+lineupShortcut.lineup=zostava
 
-foxtrick.matchdetail.right=Pravý
-foxtrick.matchdetail.center=Stredný
-foxtrick.matchdetail.left=Ľavý
-foxtrick.matchdetail.rightshort=P
-foxtrick.matchdetail.centershort=S
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=NK
+match.ratings.right=Pravý
+match.ratings.center=Stredný
+match.ratings.left=Ľavý
+match.ratings.rightshort=P
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=NK
 foxtrick.bidconfirmation=Určite chceš za hráča ponúknuť sumu %s?
 foxtrick.tlconfirmation=Určite chceš tohto hráča umiestniť na prestupovú listinu? Jeho vyvolávacia cena bude %s.
 foxtrick.staffconfirmationhire=Určite chceš najať %num %kind?
@@ -557,7 +557,7 @@ matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš ja
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Štatistiky supportera
+shortcuts.suppstats=Štatistiky supportera
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
