--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -163,10 +163,10 @@ foxtrick.PlayerBirthday.desc=Tregon ditëlindjet e fundit dhe ato qe vijnë në 
 foxtrick.MovePlayerSelectbox.desc=Zhvendos kutinë e zgjedhjes së lojtarit lart në faqen e detajuar të lojtarëve
 foxtrick.SeasonStats.desc=Shton disa statistika në faqen e arkivit të ndeshjeve
 foxtrick.LeagueNewsFilter.desc=Shton kuti zgjedhëse si filtër për la lajmet e ligës. Vendos filtrin tuaj standart më poshtë
-foxtrick.LeagueNewsFilter.all.desc=Trego gjithë lajmet
-foxtrick.LeagueNewsFilter.friendlies.desc=Shfaq vetëm miqsoret ndërkombëtare dhe trajnerët e ndryshuar
-foxtrick.LeagueNewsFilter.transfers.desc=Shfaq vetëm shitblerjet
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Shfaq vetëm ndryshimet në rreshtim
+LeagueNewsFilter.all.desc=Trego gjithë lajmet
+LeagueNewsFilter.friendlies.desc=Shfaq vetëm miqsoret ndërkombëtare dhe trajnerët e ndryshuar
+LeagueNewsFilter.transfers.desc=Shfaq vetëm shitblerjet
+LeagueNewsFilter.lineupChanges.desc=Shfaq vetëm ndryshimet në rreshtim
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Zhvendos lart manaxherët në linjë tek faqja e zonës. Kujdes\! Kjo ngadalësohet shumë nëse lista e përdoruesve në linjë tejkalon 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Shton LinkPopup të ekipit tek linket e ekipeve
@@ -216,9 +216,9 @@ foxtrick.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=statistika
-foxtrick.ExtraShortcuts.transfers=transferta
-foxtrick.ExtraShortcuts.prefs=preferencat
+ExtraShortcuts.statistics=statistika
+ExtraShortcuts.transfers=transferta
+ExtraShortcuts.prefs=preferencat
 
 #HistoryStats
 
@@ -226,49 +226,49 @@ foxtrick.ExtraShortcuts.prefs=preferencat
 #following string uses pluralForms
 
 # links
-foxtrick.links.boxheader=Link
+links.boxheader=Link
 
 #teamstats+filters
-foxtrick.TeamStats.label=Paraqitja e ekipit
-foxtrick.TeamStats.PlayerNotToOld.label=Lojtarë < 19 vjeç
-foxtrick.TeamStats.PlayerToOld.label=Lojtarë >\= 19 vjeç
-foxtrick.TeamStats.Cards.label=Kartona
-foxtrick.TeamStats.Injured.label=Të dëmtuar
-foxtrick.TeamStats.TransferListed.label=Në shitje
-foxtrick.TeamStats.Pictures.label=Foto
-foxtrick.TeamStats.PlayedLatest.label=Luajtën ndeshjen e fundit
-foxtrick.TeamStats.NotPlayedLatest.label=Nuk luajtën ndeshjen e fundit
+TeamStats.boxheader=Paraqitja e ekipit
+TeamStats.PlayerNotToOld=Lojtarë < 19 vjeç
+TeamStats.PlayerToOld=Lojtarë >\= 19 vjeç
+TeamStats.Cards=Kartona
+TeamStats.Injured=Të dëmtuar
+TeamStats.TransferListed=Në shitje
+TeamStats.Pictures=Foto
+TeamStats.PlayedLatest=Luajtën ndeshjen e fundit
+TeamStats.NotPlayedLatest=Nuk luajtën ndeshjen e fundit
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Paraqitja e sezonit
+seasonstats.boxheader=Paraqitja e sezonit
 
-foxtrick.seasonstats.played=Nde
-foxtrick.seasonstats.won=F
-foxtrick.seasonstats.draw=B
-foxtrick.seasonstats.lost=H
-foxtrick.seasonstats.goalplus=GSH
-foxtrick.seasonstats.goalminus=GP
-foxtrick.seasonstats.goaldiff=Â±
-foxtrick.seasonstats.total=To
-foxtrick.seasonstats.home=Br
-foxtrick.seasonstats.away=Ja
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Miqësore
-foxtrick.seasonstats.cup=Kup
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Nde
+seasonstats.won=F
+seasonstats.draw=B
+seasonstats.lost=H
+seasonstats.goalplus=GSH
+seasonstats.goalminus=GP
+seasonstats.goaldiff=Â±
+seasonstats.total=To
+seasonstats.home=Br
+seasonstats.away=Ja
+seasonstats.league=Liga
+seasonstats.friendly=Miqësore
+seasonstats.cup=Kup
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Filtër i lajmeve\:
-foxtrick.LeagueNewsFilter.all=Të gjitha
-foxtrick.LeagueNewsFilter.friendlies=Miqësore dhe ndryshim traineri
-foxtrick.LeagueNewsFilter.transfers=Transferta
-foxtrick.LeagueNewsFilter.lineup_changes=Ndryshime rreshtimi
+LeagueNewsFilter.label=Filtër i lajmeve\:
+LeagueNewsFilter.all=Të gjitha
+LeagueNewsFilter.friendlies=Miqësore dhe ndryshim traineri
+LeagueNewsFilter.transfers=Transferta
+LeagueNewsFilter.lineupChanges=Ndryshime rreshtimi
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klikoni butonin "Ruaj" te faqa tjetër për të dal nga ky forum.
-leave_conf_button=dilni nga konferenca
+AddLeaveConfButton.alert=Klikoni butonin "Ruaj" te faqa tjetër për të dal nga ky forum.
+AddLeaveConfButton.LeaveForum=dilni nga konferenca
 
 
 # ForumTemplates
@@ -286,7 +286,7 @@ preview=Paraqitje
 forumPreview.send=Dërgo
 
 #Forums
-foxtrick.CopyPostID=Kopjo PostimID te tabela
+copy.PostID=Kopjo PostimID te tabela
 
 ForumYouthIcons.label=Link Rinor
 ForumYouthIcons.labelToolbar=Link Kryesor
@@ -307,10 +307,10 @@ ForumSpecialBBCode.spoiler=shto spoiler
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Shto emrin e filtrimit\:
-foxtrick.transferfilter.delete_filter_ask=Doni ta fshini këtë filtrim?
-foxtrick.transferfilter.save_new_filter=Ruaj filtrimin e ri
-foxtrick.transferfilter.Foxtrick_Filters=Filtrimet FoxTrick
+TransferSearchFilters.enterName=Shto emrin e filtrimit\:
+TransferSearchFilters.deleteFilter.ask=Doni ta fshini këtë filtrim?
+TransferSearchFilters.saveFilter=Ruaj filtrimin e ri
+TransferSearchFilters.boxheader=Filtrimet FoxTrick
 
 #Filter
 
@@ -368,18 +368,18 @@ Stamina=Rrezistenca
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mesfusha
-foxtrick.matchdetail.attack=Sulmi
-foxtrick.matchdetail.defence=Mbrojtja
-foxtrick.shortcut.matchlineup=rreshtimi
+match.ratings.midfield=Mesfusha
+match.ratings.attack=Sulmi
+match.ratings.defence=Mbrojtja
+lineupShortcut.lineup=rreshtimi
 
-foxtrick.matchdetail.right=Djathtas
-foxtrick.matchdetail.center=Qëndër
-foxtrick.matchdetail.left=Majtas
-foxtrick.matchdetail.rightshort=D
-foxtrick.matchdetail.centershort=Q
-foxtrick.matchdetail.leftshort=M
-foxtrick.matchdetail.ifkshort=I-------------------------------------------------------------<<<<<<<<<<<<<<<<<<<<<<<<<
+match.ratings.right=Djathtas
+match.ratings.center=Qëndër
+match.ratings.left=Majtas
+match.ratings.rightshort=D
+match.ratings.centershort=Q
+match.ratings.leftshort=M
+match.ratings.ifkshort=I-------------------------------------------------------------<<<<<<<<<<<<<<<<<<<<<<<<<
 foxtrick.bidconfirmation=Doni të dërgoni ofertë për këtë lojtar? Çmimi është %s.
 foxtrick.tlconfirmation=Doni të shisni këtë lojtar? Çmimi kërkues është %s.
 foxtrick.ntremoveconfirmation=Doni të shtoni/hiqni këtë lojtar nga skuadra juaj?
@@ -443,7 +443,7 @@ matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj n
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Statistikat e Supporter
+shortcuts.suppstats=Statistikat e Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
