--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -227,7 +227,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Utöka utrymmet för ikonerna
 foxtrick.ExtraShortcuts.Supporterstats.desc=Länkikon till supporterstatistik
 foxtrick.ExtraShortcuts.Transfers.desc=Länkikon till egna lagets transfersida
 foxtrick.ExtraShortcuts.Prefs.desc=Länkikon till foruminställningar
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Länkikon till de CHPP-produkter du gett tillstånd till
+ExtraShortcuts.ManageCHPP.desc=Länkikon till de CHPP-produkter du gett tillstånd till
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Länkikon till Foxtrickinställningar
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -259,10 +259,10 @@ foxtrick.PlayerBirthday.desc=Visar senaste och kommande födelsedagar i spelarö
 foxtrick.MovePlayerSelectbox.desc=Flyttar spelarvallistan uppåt på spelardetaljsidan
 foxtrick.SeasonStats.desc=Visar lite statistik på matcharkivsidorna
 foxtrick.LeagueNewsFilter.desc=Lägger till filter för serienyheter. Sätt ditt filter nedan
-foxtrick.LeagueNewsFilter.all.desc=Visa alla nyheter
-foxtrick.LeagueNewsFilter.friendlies.desc=Visa alla internationella träningsmatcher och bytta tränare
-foxtrick.LeagueNewsFilter.transfers.desc=Visa endast transfers
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Visa endast laguppställningsändringar
+LeagueNewsFilter.all.desc=Visa alla nyheter
+LeagueNewsFilter.friendlies.desc=Visa alla internationella träningsmatcher och bytta tränare
+LeagueNewsFilter.transfers.desc=Visa endast transfers
+LeagueNewsFilter.lineupChanges.desc=Visa endast laguppställningsändringar
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Flyttar online managers upp på regionsidan. Varning\! Detta blir mycket långsamt om listan blir över 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Lägg till Lag-popup-länkar till laglänkar
@@ -370,27 +370,27 @@ foxtrick.RatingsDisplay.HatStats.desc=Som HatStats
 #Save for work
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Inbäddad bild
+EmbedMedia.EmbeddedImage=Inbäddad bild
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistik
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Hantera dina CHPP produkter
-foxtrick.ExtraShortcuts.prefs=Foruminställningar
-foxtrick.ExtraShortcuts.ftprefs=Inställningar FoxTrick
+ExtraShortcuts.statistics=Statistik
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Hantera dina CHPP produkter
+ExtraShortcuts.prefs=Foruminställningar
+ExtraShortcuts.ftprefs=Inställningar FoxTrick
 
 #HistoryStats
-foxtrick.HistoryStats.season=Säsong
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Cup
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Serie
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=Placering
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Historisk statistik
-foxtrick.HistoryStats.cupwinner=Cupsegrare
-foxtrick.HistoryStats.cupwinner.short=CS
+HistoryStats.season=Säsong
+HistoryStats.season.short=S
+HistoryStats.cup=Cup
+HistoryStats.cup.short=C
+HistoryStats.league=Serie
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=Placering
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Historisk statistik
+HistoryStats.cupwinner=Cupsegrare
+HistoryStats.cupwinner.short=CS
 
 # YouthPromotes
 #following string uses pluralForms
@@ -398,55 +398,55 @@ YouthPromotes.future=Spelaren kan plockas upp om %1 dag(ar). [%2]
 YouthPromotes.today=Spelaren kan plockas upp idag\!
 
 # links
-foxtrick.links.boxheader=Länkar
+links.boxheader=Länkar
 
 #teamstats+filters
-foxtrick.TeamStats.label=Lagöversikt
-foxtrick.TeamStats.PlayerNotToOld.label=Spelare < 19 år
-foxtrick.TeamStats.PlayerToOld.label=Spelare >\= 19 år
-foxtrick.TeamStats.Cards.label=Kort
-foxtrick.TeamStats.Injured.label=Skadad
-foxtrick.TeamStats.TransferListed.label=Transferlistade
-foxtrick.TeamStats.Pictures.label=Bilder
-foxtrick.TeamStats.PlayedLatest.label=Spelade i senaste matchen
-foxtrick.TeamStats.NotPlayedLatest.label=Spelade inte i senaste matchen
-foxtrick.TeamStats.NotTransferListed.label=Ej transferlistade
-foxtrick.TeamStats.ActivePlayers.label=Aktiva spelare
-foxtrick.TeamStats.HomeGrownPlayers.label=Egna produkter
-foxtrick.TeamStats.PurchasedPlayers.label=Inköpta spelare
+TeamStats.boxheader=Lagöversikt
+TeamStats.PlayerNotToOld=Spelare < 19 år
+TeamStats.PlayerToOld=Spelare >\= 19 år
+TeamStats.Cards=Kort
+TeamStats.Injured=Skadad
+TeamStats.TransferListed=Transferlistade
+TeamStats.Pictures=Bilder
+TeamStats.PlayedLatest=Spelade i senaste matchen
+TeamStats.NotPlayedLatest=Spelade inte i senaste matchen
+TeamStats.NotTransferListed=Ej transferlistade
+TeamStats.ActivePlayers=Aktiva spelare
+TeamStats.HomeGrownPlayers=Egna produkter
+TeamStats.PurchasedPlayers=Inköpta spelare
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Säsongsöversikt
+seasonstats.boxheader=Säsongsöversikt
 
-foxtrick.seasonstats.played=S
-foxtrick.seasonstats.won=V
-foxtrick.seasonstats.draw=O
-foxtrick.seasonstats.lost=F
-foxtrick.seasonstats.goalplus=GM
-foxtrick.seasonstats.goalminus=IM
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=B
-foxtrick.seasonstats.league=Serie
-foxtrick.seasonstats.friendly=Träningsmatcher
-foxtrick.seasonstats.cup=Cup
-foxtrick.seasonstats.masters=Hattrick Masters
+seasonstats.played=S
+seasonstats.won=V
+seasonstats.draw=O
+seasonstats.lost=F
+seasonstats.goalplus=GM
+seasonstats.goalminus=IM
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=B
+seasonstats.league=Serie
+seasonstats.friendly=Träningsmatcher
+seasonstats.cup=Cup
+seasonstats.masters=Hattrick Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Nyhetsfilter\:
-foxtrick.LeagueNewsFilter.all=Alla
-foxtrick.LeagueNewsFilter.friendlies=Träningsmatcher och bytta tränare
-foxtrick.LeagueNewsFilter.transfers=Transfers
-foxtrick.LeagueNewsFilter.lineup_changes=Laguppställningsändringar
+LeagueNewsFilter.label=Nyhetsfilter\:
+LeagueNewsFilter.all=Alla
+LeagueNewsFilter.friendlies=Träningsmatcher och bytta tränare
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Laguppställningsändringar
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Klicka på 'Spara'-knappen på nästa sida för att lämna det här forumet
-leave_conf_button=Lämna forum
+AddLeaveConfButton.alert=Klicka på 'Spara'-knappen på nästa sida för att lämna det här forumet
+AddLeaveConfButton.LeaveForum=Lämna forum
 
-forum.preferences=Foruminställningar
+ShowForumPrefButton.forumPreferences=Foruminställningar
 
 # ForumTemplates
 make_template_from_post=Skapa en mall från inlägg
@@ -463,7 +463,7 @@ preview=Förhandsgranskning
 forumPreview.send=Skicka
 
 #Forums
-foxtrick.CopyPostID=Kopiera InläggsId till urklipp
+copy.PostID=Kopiera InläggsId till urklipp
 CopyPosting=Kopiera post i %s stil
 CopyPosting.abbr=Kopiera i %s stil
 CopyPosting.style.ht-ml=HT-ML
@@ -501,10 +501,10 @@ ForumSpecialBBCode.symbols=Infoga symbol\: %s
 ShowNestedQuotes=Visa nästlade citat
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Skriv in filternamn\:
-foxtrick.transferfilter.delete_filter_ask=Vill du verkligen ta bort detta filer?
-foxtrick.transferfilter.save_new_filter=Spara nytt filter
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filter
+TransferSearchFilters.enterName=Skriv in filternamn\:
+TransferSearchFilters.deleteFilter.ask=Vill du verkligen ta bort detta filer?
+TransferSearchFilters.saveFilter=Spara nytt filter
+TransferSearchFilters.boxheader=FoxTrick Filter
 
 #Filter
 Filters=Filter
@@ -722,19 +722,19 @@ skilltable.youthplayer=juniorspelare
 skilltable.rebought_youthplayer=återköpt juniorspelare
 
 #matchdetail
-foxtrick.matchdetail.midfield=Mittfält
-foxtrick.matchdetail.attack=Anfall
-foxtrick.matchdetail.defence=Försvar
-foxtrick.matchdetail.total=Totalt
-foxtrick.shortcut.matchlineup=Uppställning
+match.ratings.midfield=Mittfält
+match.ratings.attack=Anfall
+match.ratings.defence=Försvar
+match.ratings.total=Totalt
+lineupShortcut.lineup=Uppställning
 
-foxtrick.matchdetail.right=Höger
-foxtrick.matchdetail.center=Mitten
-foxtrick.matchdetail.left=Vänster
-foxtrick.matchdetail.rightshort=H
-foxtrick.matchdetail.centershort=M
-foxtrick.matchdetail.leftshort=V
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Höger
+match.ratings.center=Mitten
+match.ratings.left=Vänster
+match.ratings.rightshort=H
+match.ratings.centershort=M
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Vill du bjuda på den här spelaren? Priset är %s.
 foxtrick.tlconfirmation=Vill du lägga ut den här spelaren på transfern? Utropspriset är %s.
 foxtrick.staffconfirmationhire=Vill du anställa\! %num %kind?
@@ -840,7 +840,7 @@ matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporterstatistik
+shortcuts.suppstats=Supporterstatistik
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
