--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -206,10 +206,10 @@ foxtrick.PlayerBirthday.desc=Hiển thị ngày sinh cuối cùng và sắp tớ
 foxtrick.MovePlayerSelectbox.desc=Chuyển hộp thoại lựa chọn cầu thủ ở trang chi tiết cầu thủ
 foxtrick.SeasonStats.desc=Hiển thị những chỉ số đánh giá ở trang lưu trữ trận đấu
 foxtrick.LeagueNewsFilter.desc=Thêm hộp thoại chọn lựa những tin tức của giải đấu. Cài đặt mặc định bộ lọc bên dưới
-foxtrick.LeagueNewsFilter.all.desc=Hiển thị tất cả tin tức mới
-foxtrick.LeagueNewsFilter.friendlies.desc=Chỉ hiện những trận giao hữu quốc tế và những huấn luyện viên đã được thay đổi
-foxtrick.LeagueNewsFilter.transfers.desc=Chỉ hiện những vụ chuyển nhượng
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Chỉ hiện những thay đổi ở đội hình xuất phát
+LeagueNewsFilter.all.desc=Hiển thị tất cả tin tức mới
+LeagueNewsFilter.friendlies.desc=Chỉ hiện những trận giao hữu quốc tế và những huấn luyện viên đã được thay đổi
+LeagueNewsFilter.transfers.desc=Chỉ hiện những vụ chuyển nhượng
+LeagueNewsFilter.lineupChanges.desc=Chỉ hiện những thay đổi ở đội hình xuất phát
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Di chuyển những người quản lý hiện đang ở tình trạng trực tuyến lên trên ở trang các vùng. Chú ý\! Sẽ rất chậm nếu số người online hơn con số 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Thêm Đường dẫn thêm của đội bóng vào trang đường dẫn của đội bóng
@@ -281,71 +281,71 @@ foxtrick.TableSort.desc=Làm cho tất cả các bảng  'hợp lệ' có thể 
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Chi tiết
-foxtrick.ExtraShortcuts.transfers=Chuyển nhượng
-foxtrick.ExtraShortcuts.prefs=Tùy chọn
+ExtraShortcuts.statistics=Chi tiết
+ExtraShortcuts.transfers=Chuyển nhượng
+ExtraShortcuts.prefs=Tùy chọn
 
 #HistoryStats
-foxtrick.HistoryStats.season=mùa giải
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=cup quốc gia
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Giải
-foxtrick.HistoryStats.league.short=G.
-foxtrick.HistoryStats.pos=Vị trí cuối mùa giải
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Chi tiết lịch sử
-foxtrick.HistoryStats.cupwinner=Vô địch cúp
-foxtrick.HistoryStats.cupwinner.short=VĐC
+HistoryStats.season=mùa giải
+HistoryStats.season.short=S
+HistoryStats.cup=cup quốc gia
+HistoryStats.cup.short=C
+HistoryStats.league=Giải
+HistoryStats.league.short=G.
+HistoryStats.finalPosition=Vị trí cuối mùa giải
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Chi tiết lịch sử
+HistoryStats.cupwinner=Vô địch cúp
+HistoryStats.cupwinner.short=VĐC
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Cầu thủ có thể được gọi lên hôm nay\!
 
 # links
-foxtrick.links.boxheader=Đường dẫn
+links.boxheader=Đường dẫn
 
 #teamstats+filters
-foxtrick.TeamStats.label=Tổng quan đội bóng
-foxtrick.TeamStats.PlayerNotToOld.label=Cầu thủ < 19 tuổi
-foxtrick.TeamStats.PlayerToOld.label=Cầu thủ >\= 19 tuổi
-foxtrick.TeamStats.Cards.label=Thẻ phạt
-foxtrick.TeamStats.Injured.label=Chấn thương
-foxtrick.TeamStats.TransferListed.label=Lên thị trường chuyển nhượng
-foxtrick.TeamStats.Pictures.label=Hình ảnh
-foxtrick.TeamStats.PlayedLatest.label=Chơi ở trận đấu cuối
-foxtrick.TeamStats.NotPlayedLatest.label=Không chơi trận đấu cuối
+TeamStats.boxheader=Tổng quan đội bóng
+TeamStats.PlayerNotToOld=Cầu thủ < 19 tuổi
+TeamStats.PlayerToOld=Cầu thủ >\= 19 tuổi
+TeamStats.Cards=Thẻ phạt
+TeamStats.Injured=Chấn thương
+TeamStats.TransferListed=Lên thị trường chuyển nhượng
+TeamStats.Pictures=Hình ảnh
+TeamStats.PlayedLatest=Chơi ở trận đấu cuối
+TeamStats.NotPlayedLatest=Không chơi trận đấu cuối
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Tổng quan mùa giải
+seasonstats.boxheader=Tổng quan mùa giải
 
-foxtrick.seasonstats.played=ĐC
-foxtrick.seasonstats.won=T
-foxtrick.seasonstats.draw=H
-foxtrick.seasonstats.lost=Th
-foxtrick.seasonstats.goalplus=Tha
-foxtrick.seasonstats.goalminus=Thu
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=SN
-foxtrick.seasonstats.away=SK
-foxtrick.seasonstats.league=Giải đấu
-foxtrick.seasonstats.friendly=Giao hữu
-foxtrick.seasonstats.cup=Cúp
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=ĐC
+seasonstats.won=T
+seasonstats.draw=H
+seasonstats.lost=Th
+seasonstats.goalplus=Tha
+seasonstats.goalminus=Thu
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=SN
+seasonstats.away=SK
+seasonstats.league=Giải đấu
+seasonstats.friendly=Giao hữu
+seasonstats.cup=Cúp
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Bộ lọc tin tức\:
-foxtrick.LeagueNewsFilter.all=Tất cả
-foxtrick.LeagueNewsFilter.friendlies=Giao hữu và thay đổi huấn luyện viên
-foxtrick.LeagueNewsFilter.transfers=Chuyển nhượng
-foxtrick.LeagueNewsFilter.lineup_changes=Thay đổi đội hình xuất phát
+LeagueNewsFilter.label=Bộ lọc tin tức\:
+LeagueNewsFilter.all=Tất cả
+LeagueNewsFilter.friendlies=Giao hữu và thay đổi huấn luyện viên
+LeagueNewsFilter.transfers=Chuyển nhượng
+LeagueNewsFilter.lineupChanges=Thay đổi đội hình xuất phát
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Click nút 'Lưu' ở trang tiếp theo để rời diễn đàn này.
-leave_conf_button=Rời diễn đàn
+AddLeaveConfButton.alert=Click nút 'Lưu' ở trang tiếp theo để rời diễn đàn này.
+AddLeaveConfButton.LeaveForum=Rời diễn đàn
 
 
 # ForumTemplates
@@ -363,7 +363,7 @@ preview=Xem trước
 forumPreview.send=Gửi
 
 #Forums
-foxtrick.CopyPostID=Sao chép ID bài đã đăng vào bộ nhớ tạm
+copy.PostID=Sao chép ID bài đã đăng vào bộ nhớ tạm
 CopyPosting=Sao chép bài theo kiểu %s
 CopyPosting.abbr=Sao chép theo kiểu %s
 CopyPosting.style.ht-ml=HT-ML
@@ -393,10 +393,10 @@ ForumSpecialBBCode.enterSeparator=Nhập vào bộ chia tùy chọn
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Nhập tên lọc\:
-foxtrick.transferfilter.delete_filter_ask=Bạn thực sự muốn xóa bộ lọc này?
-foxtrick.transferfilter.save_new_filter=Lưu bộ lọc mới
-foxtrick.transferfilter.Foxtrick_Filters=Bộ lọc FoxTrick
+TransferSearchFilters.enterName=Nhập tên lọc\:
+TransferSearchFilters.deleteFilter.ask=Bạn thực sự muốn xóa bộ lọc này?
+TransferSearchFilters.saveFilter=Lưu bộ lọc mới
+TransferSearchFilters.boxheader=Bộ lọc FoxTrick
 
 #Filter
 
@@ -530,18 +530,18 @@ Current_league.abbr=Giải
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Trung lộ
-foxtrick.matchdetail.attack=Tấn công
-foxtrick.matchdetail.defence=Phòng thủ
-foxtrick.shortcut.matchlineup=đội hình xuất phát
+match.ratings.midfield=Trung lộ
+match.ratings.attack=Tấn công
+match.ratings.defence=Phòng thủ
+lineupShortcut.lineup=đội hình xuất phát
 
-foxtrick.matchdetail.right=Phải
-foxtrick.matchdetail.center=Chính giữa
-foxtrick.matchdetail.left=Trái
-foxtrick.matchdetail.rightshort=P
-foxtrick.matchdetail.centershort=G
-foxtrick.matchdetail.leftshort=T
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Phải
+match.ratings.center=Chính giữa
+match.ratings.left=Trái
+match.ratings.rightshort=P
+match.ratings.centershort=G
+match.ratings.leftshort=T
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Bạn muốn đặt giá cho cầu thủ này? Giá tiền là %s.
 foxtrick.tlconfirmation=Bạn muốn cho cầu thủ này lên thị trường chuyển nhượng? Giá  ban đầu là %s.
 foxtrick.staffconfirmationhire=Bạn muốn thuê\! %num %kind?
@@ -616,7 +616,7 @@ matches.wronglang=FoxTrick\: Bảng chi tiết không được hiển thị tạ
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Chi tiết HT Suppoter
+shortcuts.suppstats=Chi tiết HT Suppoter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
