--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -210,7 +210,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=在按钮之间添加空白
 foxtrick.ExtraShortcuts.Supporterstats.desc=到支持者统计页面的链接
 foxtrick.ExtraShortcuts.Transfers.desc=到本队转会页面的链接
 foxtrick.ExtraShortcuts.Prefs.desc=到首选项页面的链接
-foxtrick.ExtraShortcuts.ManageCHPP.desc=到管理 CHPP 产品页面的链接
+ExtraShortcuts.ManageCHPP.desc=到管理 CHPP 产品页面的链接
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=到 FoxTrick 首选项页面的链接
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -241,10 +241,10 @@ foxtrick.PlayerBirthday.desc=在球员概述中显示刚过以及即将到来的
 foxtrick.MovePlayerSelectbox.desc=在球员详细页面中将球员选择框移至上方
 foxtrick.SeasonStats.desc=在归档比赛页面中显示统计信息
 foxtrick.LeagueNewsFilter.desc=在联赛页面中筛选特定种类的新闻
-foxtrick.LeagueNewsFilter.all.desc=显示所有新闻
-foxtrick.LeagueNewsFilter.friendlies.desc=仅显示国际友谊赛以及教练变更
-foxtrick.LeagueNewsFilter.transfers.desc=仅显示转会
-foxtrick.LeagueNewsFilter.lineup_changes.desc=仅显示布阵改变
+LeagueNewsFilter.all.desc=显示所有新闻
+LeagueNewsFilter.friendlies.desc=仅显示国际友谊赛以及教练变更
+LeagueNewsFilter.transfers.desc=仅显示转会
+LeagueNewsFilter.lineupChanges.desc=仅显示布阵改变
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=将地区页面中在线的经理向上移. 注意\! 如果超过100个玩家在线, 会很慢.
 foxtrick.TeamPopupLinks.TeamLinks.desc=给球队链接添加 TeamPopupLinks
@@ -348,24 +348,24 @@ foxtrick.MobileEnhancements.desc=优化在移动设备上的显示
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=统计
-foxtrick.ExtraShortcuts.transfers=转会
-foxtrick.ExtraShortcuts.ManageCHPP=管理 CHPP 产品
-foxtrick.ExtraShortcuts.prefs=首选项
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick 首选项
+ExtraShortcuts.statistics=统计
+ExtraShortcuts.transfers=转会
+ExtraShortcuts.ManageCHPP=管理 CHPP 产品
+ExtraShortcuts.prefs=首选项
+ExtraShortcuts.ftprefs=FoxTrick 首选项
 
 #HistoryStats
-foxtrick.HistoryStats.season=赛季
-foxtrick.HistoryStats.season.short=赛季
-foxtrick.HistoryStats.cup=杯赛
-foxtrick.HistoryStats.cup.short=杯赛
-foxtrick.HistoryStats.league=联赛
-foxtrick.HistoryStats.league.short=联赛
-foxtrick.HistoryStats.pos=联赛排名
-foxtrick.HistoryStats.pos.short=排名
-foxtrick.HistoryStats.label=历史统计
-foxtrick.HistoryStats.cupwinner=杯赛冠军
-foxtrick.HistoryStats.cupwinner.short=冠军
+HistoryStats.season=赛季
+HistoryStats.season.short=赛季
+HistoryStats.cup=杯赛
+HistoryStats.cup.short=杯赛
+HistoryStats.league=联赛
+HistoryStats.league.short=联赛
+HistoryStats.finalPosition=联赛排名
+HistoryStats.finalPosition.short=排名
+HistoryStats.label=历史统计
+HistoryStats.cupwinner=杯赛冠军
+HistoryStats.cupwinner.short=冠军
 
 # YouthPromotes
 #following string uses pluralForms
@@ -373,51 +373,51 @@ YouthPromotes.future=可以在 %1 天后 (%2) 提升球员.
 YouthPromotes.today=今天即可提升球员\!
 
 # links
-foxtrick.links.boxheader=链接
+links.boxheader=链接
 
 #teamstats+filters
-foxtrick.TeamStats.label=球队概述
-foxtrick.TeamStats.PlayerNotToOld.label=球员 < 19岁
-foxtrick.TeamStats.PlayerToOld.label=球员 >\= 19岁
-foxtrick.TeamStats.Cards.label=警告
-foxtrick.TeamStats.Injured.label=受伤
-foxtrick.TeamStats.TransferListed.label=在转会列表上
-foxtrick.TeamStats.Pictures.label=面貌
-foxtrick.TeamStats.PlayedLatest.label=在上一场比赛中出场
-foxtrick.TeamStats.NotPlayedLatest.label=未在上一场比赛中出场
+TeamStats.boxheader=球队概述
+TeamStats.PlayerNotToOld=球员 < 19岁
+TeamStats.PlayerToOld=球员 >\= 19岁
+TeamStats.Cards=警告
+TeamStats.Injured=受伤
+TeamStats.TransferListed=在转会列表上
+TeamStats.Pictures=面貌
+TeamStats.PlayedLatest=在上一场比赛中出场
+TeamStats.NotPlayedLatest=未在上一场比赛中出场
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=赛季综述
+seasonstats.boxheader=赛季综述
 
-foxtrick.seasonstats.played=赛
-foxtrick.seasonstats.won=胜
-foxtrick.seasonstats.draw=平
-foxtrick.seasonstats.lost=负
-foxtrick.seasonstats.goalplus=进球
-foxtrick.seasonstats.goalminus=失球
-foxtrick.seasonstats.goaldiff=净胜
-foxtrick.seasonstats.total=总
-foxtrick.seasonstats.home=主
-foxtrick.seasonstats.away=客
-foxtrick.seasonstats.league=联赛
-foxtrick.seasonstats.friendly=友谊赛
-foxtrick.seasonstats.cup=杯赛
-foxtrick.seasonstats.masters=大师杯
+seasonstats.played=赛
+seasonstats.won=胜
+seasonstats.draw=平
+seasonstats.lost=负
+seasonstats.goalplus=进球
+seasonstats.goalminus=失球
+seasonstats.goaldiff=净胜
+seasonstats.total=总
+seasonstats.home=主
+seasonstats.away=客
+seasonstats.league=联赛
+seasonstats.friendly=友谊赛
+seasonstats.cup=杯赛
+seasonstats.masters=大师杯
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=新闻筛选\:
-foxtrick.LeagueNewsFilter.all=全部
-foxtrick.LeagueNewsFilter.friendlies=友谊赛以及教练变更
-foxtrick.LeagueNewsFilter.transfers=转会
-foxtrick.LeagueNewsFilter.lineup_changes=修改布阵
+LeagueNewsFilter.label=新闻筛选\:
+LeagueNewsFilter.all=全部
+LeagueNewsFilter.friendlies=友谊赛以及教练变更
+LeagueNewsFilter.transfers=转会
+LeagueNewsFilter.lineupChanges=修改布阵
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=点击下一页面中的“保存”按钮以离开此论坛.
-leave_conf_button=离开论坛
+AddLeaveConfButton.alert=点击下一页面中的“保存”按钮以离开此论坛.
+AddLeaveConfButton.LeaveForum=离开论坛
 
-forum.preferences=论坛首选项
+ShowForumPrefButton.forumPreferences=论坛首选项
 
 # ForumTemplates
 make_template_from_post=从帖子内容生成模板
@@ -434,7 +434,7 @@ preview=预览
 forumPreview.send=发送
 
 #Forums
-foxtrick.CopyPostID=将帖子 ID 复制到剪帖版
+copy.PostID=将帖子 ID 复制到剪帖版
 CopyPosting=以 %s 样式复制帖子
 CopyPosting.abbr=复制为 %s 样式
 CopyPosting.style.ht-ml=HT-ML
@@ -469,10 +469,10 @@ ForumSpecialBBCode.enterSeparator=自定义分隔符
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=输入过滤器名称\:
-foxtrick.transferfilter.delete_filter_ask=你真的要删除该过滤器吗?
-foxtrick.transferfilter.save_new_filter=保存新过滤器
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick 过滤器
+TransferSearchFilters.enterName=输入过滤器名称\:
+TransferSearchFilters.deleteFilter.ask=你真的要删除该过滤器吗?
+TransferSearchFilters.saveFilter=保存新过滤器
+TransferSearchFilters.boxheader=FoxTrick 过滤器
 
 #Filter
 
@@ -629,19 +629,19 @@ skilltable.youthplayer=青年球员
 skilltable.rebought_youthplayer=回购的青年球员
 
 #matchdetail
-foxtrick.matchdetail.midfield=中场
-foxtrick.matchdetail.attack=攻击
-foxtrick.matchdetail.defence=防守
-foxtrick.matchdetail.total=总计
-foxtrick.shortcut.matchlineup=阵容
+match.ratings.midfield=中场
+match.ratings.attack=攻击
+match.ratings.defence=防守
+match.ratings.total=总计
+lineupShortcut.lineup=阵容
 
-foxtrick.matchdetail.right=右
-foxtrick.matchdetail.center=中
-foxtrick.matchdetail.left=左
-foxtrick.matchdetail.rightshort=右
-foxtrick.matchdetail.centershort=中
-foxtrick.matchdetail.leftshort=左
-foxtrick.matchdetail.ifkshort=间接定位
+match.ratings.right=右
+match.ratings.center=中
+match.ratings.left=左
+match.ratings.rightshort=右
+match.ratings.centershort=中
+match.ratings.leftshort=左
+match.ratings.ifkshort=间接定位
 foxtrick.bidconfirmation=你确定要对这名球员出价吗? 价格为 %s.
 foxtrick.tlconfirmation=你确定要挂牌这名球员吗? 挂牌价为 %s.
 foxtrick.staffconfirmationhire=你确定要雇用 %num 名 %kind 吗?
@@ -739,7 +739,7 @@ matches.wronglang=FoxTrick\: 由于你的语言没有注册或你在首选项中
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=HT 支持者统计
+shortcuts.suppstats=HT 支持者统计
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
