--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -147,11 +147,11 @@ foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to team p
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
 foxtrick.TeamStats.desc=Compiles an overview of a team.
 foxtrick.HistoryStats.desc=Compiles an overview of team's history.
-foxtrick.HistoryStats.season=season
-foxtrick.HistoryStats.cup=cup
-foxtrick.HistoryStats.league=league
-foxtrick.HistoryStats.pos=pos
-foxtrick.HistoryStats.label=History stats
+HistoryStats.season=season
+HistoryStats.cup=cup
+HistoryStats.league=league
+HistoryStats.finalPosition=pos
+HistoryStats.label=History stats
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page. Clicking on the header switches between list and select box
@@ -228,10 +228,10 @@ foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
 foxtrick.SeasonStats.desc=Shows some stats on the match archive pages
 foxtrick.LeagueNewsFilter.desc=Adds filter select box for league news. Set your default filter below
-foxtrick.LeagueNewsFilter.all.desc=Show all news
-foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
-foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
+LeagueNewsFilter.all.desc=Show all news
+LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
+LeagueNewsFilter.transfers.desc=Show only transfers
+LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
 
 
 #MoveManagerOnline
@@ -342,9 +342,9 @@ foxtrick.LeagueAndMatchChat.desc=Adds link for external Chat on National Cup and
 
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistics
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.prefs=Preferences
+ExtraShortcuts.statistics=Statistics
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.prefs=Preferences
 
 # YouthPromoteDays
 
@@ -352,47 +352,47 @@ foxtrick.ExtraShortcuts.prefs=Preferences
 YouthPromotes.today=Player can be promoted today!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats
-foxtrick.TeamStats.label=Team overview
+TeamStats.boxheader=Team overview
 
 
-foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 yr
-foxtrick.TeamStats.PlayerToOld.label=Players >= 19 yr
-foxtrick.TeamStats.Cards.label=Cards
-foxtrick.TeamStats.Injured.label=Injured
-foxtrick.TeamStats.TransferListed.label=Transfer listed
-foxtrick.TeamStats.Pictures.label=Pictures
-foxtrick.TeamStats.PlayedLatest.label=Played in last match
-foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
+TeamStats.PlayerNotToOld=Players < 19 yr
+TeamStats.PlayerToOld=Players >= 19 yr
+TeamStats.Cards=Cards
+TeamStats.Injured=Injured
+TeamStats.TransferListed=Transfer listed
+TeamStats.Pictures=Pictures
+TeamStats.PlayedLatest=Played in last match
+TeamStats.NotPlayedLatest=Did not play last match
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Season overview
+seasonstats.boxheader=Season overview
 
-foxtrick.seasonstats.played=Pld
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=L
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GA
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=League
-foxtrick.seasonstats.friendly=Friendlies
-foxtrick.seasonstats.cup=Cup
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Pld
+seasonstats.won=W
+seasonstats.draw=D
+seasonstats.lost=L
+seasonstats.goalplus=GF
+seasonstats.goalminus=GA
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=League
+seasonstats.friendly=Friendlies
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Newsfeed filter:
-foxtrick.LeagueNewsFilter.all=All
-foxtrick.LeagueNewsFilter.friendlies=Friendlies & changed coaches
-foxtrick.LeagueNewsFilter.transfers=Transfers
-foxtrick.LeagueNewsFilter.lineup_changes=Lineup changes
+LeagueNewsFilter.label=Newsfeed filter:
+LeagueNewsFilter.all=All
+LeagueNewsFilter.friendlies=Friendlies & changed coaches
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Lineup changes
 
 
 
@@ -400,8 +400,8 @@ foxtrick.LeagueNewsFilter.lineup_changes=Lineup changes
 button.go=goto
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
-leave_conf_button=Leave forum
+AddLeaveConfButton.alert=Click on the 'Save' button on the next page to leave this forum.
+AddLeaveConfButton.LeaveForum=Leave forum
 
 # ForumTemplates
 make_template_from_post=Make template from post
@@ -419,7 +419,7 @@ preview=Preview
 forumPreview.send=Send
 
 #Forums
-foxtrick.CopyPostID=Copy PostID to clipboard
+copy.PostID=Copy PostID to clipboard
 
 
 
@@ -440,10 +440,10 @@ ForumSpecialBBCode.spoiler=Add spoiler
 ForumSpecialBBCode.pre=Insert 'pre' format tag
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Enter filter name:
-foxtrick.transferfilter.delete_filter_ask=Do you really want to delete this filter?
-foxtrick.transferfilter.save_new_filter=Save new filter
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filters
+TransferSearchFilters.enterName=Enter filter name:
+TransferSearchFilters.deleteFilter.ask=Do you really want to delete this filter?
+TransferSearchFilters.saveFilter=Save new filter
+TransferSearchFilters.boxheader=FoxTrick Filters
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -488,10 +488,10 @@ Stamina=Stamina
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Midfield
-foxtrick.matchdetail.attack=Attack
-foxtrick.matchdetail.defence=Defence
-foxtrick.shortcut.matchlineup=lineup
+match.ratings.midfield=Midfield
+match.ratings.attack=Attack
+match.ratings.defence=Defence
+lineupShortcut.lineup=lineup
 
 # as in 2,3,4 stars
 
@@ -501,14 +501,14 @@ foxtrick.shortcut.matchlineup=lineup
 
 
 
-foxtrick.matchdetail.right=Right
-foxtrick.matchdetail.center=Center
-foxtrick.matchdetail.left=Left
+match.ratings.right=Right
+match.ratings.center=Center
+match.ratings.left=Left
 
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 
 foxtrick.bidconfirmation=Do you wish to bid for this player? The price is %s.
 foxtrick.tlconfirmation=Do you wish to transfer list this player? The asking price is %s.
@@ -638,7 +638,7 @@ matches.wronglang=FoxTrick: The stats cannot be displayed because your language 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter Statistics
+shortcuts.suppstats=Supporter Statistics
 # Look on your Matches page: copy the header of the sold seats box
 
 
