--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -119,8 +119,8 @@ foxtrick.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.
 #Embed Media
 
 #icons
-foxtrick.ExtraShortcuts.statistics=statistikk
-foxtrick.ExtraShortcuts.transfers=overganger
+ExtraShortcuts.statistics=statistikk
+ExtraShortcuts.transfers=overganger
 
 #HistoryStats
 
@@ -128,10 +128,10 @@ foxtrick.ExtraShortcuts.transfers=overganger
 #following string uses pluralForms
 
 # links
-foxtrick.links.boxheader=Lenker
+links.boxheader=Lenker
 
 #teamstats+filters
-foxtrick.TeamStats.label=Lagoversikt
+TeamStats.boxheader=Lagoversikt
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -141,8 +141,8 @@ foxtrick.TeamStats.label=Lagoversikt
 #Newsfeed filter
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
-leave_conf_button=forlat liga
+AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
+AddLeaveConfButton.LeaveForum=forlat liga
 
 
 # ForumTemplates
@@ -154,7 +154,7 @@ delete_template_ask=Slett mal?
 show_preview_from_post=Forhåndsvis posten
 
 #Forums
-foxtrick.CopyPostID=Kopier til utklippstavle
+copy.PostID=Kopier til utklippstavle
 
 ForumYouthIcons.label=Juniorlenker
 ForumYouthIcons.labelToolbar=Hovedlenker
@@ -172,10 +172,10 @@ ForumSpecialBBCode.article=legg til artikkelid
 
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Skriv inn filternavn\:
-foxtrick.transferfilter.delete_filter_ask=Er du sikker på at du vil slette dette filteret?
-foxtrick.transferfilter.save_new_filter=Lagre nytt filter
-foxtrick.transferfilter.Foxtrick_Filters=Foxtrick Filtere
+TransferSearchFilters.enterName=Skriv inn filternavn\:
+TransferSearchFilters.deleteFilter.ask=Er du sikker på at du vil slette dette filteret?
+TransferSearchFilters.saveFilter=Lagre nytt filter
+TransferSearchFilters.boxheader=Foxtrick Filtere
 
 #Filter
 
@@ -233,18 +233,18 @@ Stamina=Kondisjon
 
 
 #matchdetail
-foxtrick.matchdetail.midfield=Midtbane
-foxtrick.matchdetail.attack=Angrep
-foxtrick.matchdetail.defence=Forsvar
-foxtrick.shortcut.matchlineup=Kampoppsett
+match.ratings.midfield=Midtbane
+match.ratings.attack=Angrep
+match.ratings.defence=Forsvar
+lineupShortcut.lineup=Kampoppsett
 
-foxtrick.matchdetail.right=Høyre
-foxtrick.matchdetail.center=Midt
-foxtrick.matchdetail.left=Venstre
-foxtrick.matchdetail.rightshort=H
-foxtrick.matchdetail.centershort=M
-foxtrick.matchdetail.leftshort=V
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Høyre
+match.ratings.center=Midt
+match.ratings.left=Venstre
+match.ratings.rightshort=H
+match.ratings.centershort=M
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
 foxtrick.tlconfirmation=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
 copy.selectplayer=Velg spiller
