--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -98,7 +98,7 @@ foxtrick.CurrencyConverter.desc=Pretvarjanje HT valute
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.Supporterstats.desc=Povezava na statistiko suporterjev
 foxtrick.ExtraShortcuts.Prefs.desc=Povezava na stran z nastavitvami
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Povezava na CHPP-jevo stran z nastavitvami
+ExtraShortcuts.ManageCHPP.desc=Povezava na CHPP-jevo stran z nastavitvami
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Povezava na FoxTrickovo stran z nastavitvami
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -115,9 +115,9 @@ foxtrick.CopyYouth.desc=Funkcije za kopiranje za mladinska sporočila in igralce
 foxtrick.CopyYouth.TrainingReport.desc=Poročilo s treninga
 foxtrick.CopyYouth.ScoutComment.desc=Skavtov komentar
 foxtrick.PlayerBirthday.desc=Pokaže zadnje in prihajajoče rojstne dneve v pregledu igralcev
-foxtrick.LeagueNewsFilter.all.desc=Pokaži vse novice
-foxtrick.LeagueNewsFilter.transfers.desc=Pokaži samo prestope
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Pokaži samo spremembe v postavitvi
+LeagueNewsFilter.all.desc=Pokaži vse novice
+LeagueNewsFilter.transfers.desc=Pokaži samo prestope
+LeagueNewsFilter.lineupChanges.desc=Pokaži samo spremembe v postavitvi
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.Matches.desc=Tekme
 foxtrick.TeamPopupLinks.Players.desc=Igralci
@@ -176,77 +176,77 @@ foxtrick.RatingsDisplay.HatStats.desc=Kot HatStati
 #Save for work
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Vgnezdena slika
+EmbedMedia.EmbeddedImage=Vgnezdena slika
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistika
-foxtrick.ExtraShortcuts.transfers=Prestopi
-foxtrick.ExtraShortcuts.ManageCHPP=Upravljajte vaše CHPP izdelke
-foxtrick.ExtraShortcuts.prefs=Nastavitve
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick nastavitve
+ExtraShortcuts.statistics=Statistika
+ExtraShortcuts.transfers=Prestopi
+ExtraShortcuts.ManageCHPP=Upravljajte vaše CHPP izdelke
+ExtraShortcuts.prefs=Nastavitve
+ExtraShortcuts.ftprefs=FoxTrick nastavitve
 
 #HistoryStats
-foxtrick.HistoryStats.season=Sezona
-foxtrick.HistoryStats.season.short=Sez
-foxtrick.HistoryStats.cup=Krog pokala
-foxtrick.HistoryStats.cup.short=Pok
-foxtrick.HistoryStats.league=Serija
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Statistična zgodovina
-foxtrick.HistoryStats.cupwinner=Zmagovalec pokala
+HistoryStats.season=Sezona
+HistoryStats.season.short=Sez
+HistoryStats.cup=Krog pokala
+HistoryStats.cup.short=Pok
+HistoryStats.league=Serija
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Statistična zgodovina
+HistoryStats.cupwinner=Zmagovalec pokala
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Igralec je lahko sprejet danes\!
 
 # links
-foxtrick.links.boxheader=Povezave
+links.boxheader=Povezave
 
 #teamstats+filters
-foxtrick.TeamStats.label=Pregled ekipe
-foxtrick.TeamStats.PlayerNotToOld.label=Igralci < 19 let
-foxtrick.TeamStats.PlayerToOld.label=Igralci >\= 19 let
-foxtrick.TeamStats.Cards.label=Kartoni
-foxtrick.TeamStats.Injured.label=Poškodovan
-foxtrick.TeamStats.TransferListed.label=Na trgu prestopov
-foxtrick.TeamStats.Pictures.label=Obrazi
-foxtrick.TeamStats.PlayedLatest.label=Igral zadnjo tekmo
-foxtrick.TeamStats.NotPlayedLatest.label=Ni igral zadnje tekme
-foxtrick.TeamStats.NotTransferListed.label=Ni na trgu prestopov
-foxtrick.TeamStats.ActivePlayers.label=Aktivni igralci
-foxtrick.TeamStats.PurchasedPlayers.label=Kupljenih igralcev
-foxtrick.TeamStats.FilterFor=Filter za
+TeamStats.boxheader=Pregled ekipe
+TeamStats.PlayerNotToOld=Igralci < 19 let
+TeamStats.PlayerToOld=Igralci >\= 19 let
+TeamStats.Cards=Kartoni
+TeamStats.Injured=Poškodovan
+TeamStats.TransferListed=Na trgu prestopov
+TeamStats.Pictures=Obrazi
+TeamStats.PlayedLatest=Igral zadnjo tekmo
+TeamStats.NotPlayedLatest=Ni igral zadnje tekme
+TeamStats.NotTransferListed=Ni na trgu prestopov
+TeamStats.ActivePlayers=Aktivni igralci
+TeamStats.PurchasedPlayers=Kupljenih igralcev
+TeamStats.FilterFor=Filter za
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Pregled sezone
+seasonstats.boxheader=Pregled sezone
 
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=L
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GA
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=Liga
-foxtrick.seasonstats.friendly=Prijateljske tekme
-foxtrick.seasonstats.cup=Pokal
-foxtrick.seasonstats.masters=Masters
+seasonstats.won=W
+seasonstats.draw=D
+seasonstats.lost=L
+seasonstats.goalplus=GF
+seasonstats.goalminus=GA
+seasonstats.goaldiff=±
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=Liga
+seasonstats.friendly=Prijateljske tekme
+seasonstats.cup=Pokal
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.all=Vse
-foxtrick.LeagueNewsFilter.friendlies=Prijateljske tekme & spremembe trenerja
-foxtrick.LeagueNewsFilter.transfers=Prestopi
-foxtrick.LeagueNewsFilter.lineup_changes=Spremembe postavitve
+LeagueNewsFilter.all=Vse
+LeagueNewsFilter.friendlies=Prijateljske tekme & spremembe trenerja
+LeagueNewsFilter.transfers=Prestopi
+LeagueNewsFilter.lineupChanges=Spremembe postavitve
 
 # FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
-leave_conf_button=Zapusti forum
+AddLeaveConfButton.alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
+AddLeaveConfButton.LeaveForum=Zapusti forum
 
-forum.preferences=Nastavitve foruma
+ShowForumPrefButton.forumPreferences=Nastavitve foruma
 
 # ForumTemplates
 make_template_from_post=Ustvari predlogo iz prispevka
@@ -292,10 +292,10 @@ ForumSpecialBBCode.forumSymbol=Vstavi "%s"
 ShowNestedQuotes=Pokaži ugnezdene citate  
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Vnesite ime filtra\:
-foxtrick.transferfilter.delete_filter_ask=Ali res želite izbrisati ta filter?
-foxtrick.transferfilter.save_new_filter=Shrani nov filter
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick filtri
+TransferSearchFilters.enterName=Vnesite ime filtra\:
+TransferSearchFilters.deleteFilter.ask=Ali res želite izbrisati ta filter?
+TransferSearchFilters.saveFilter=Shrani nov filter
+TransferSearchFilters.boxheader=FoxTrick filtri
 
 #Filter
 Filters=Filtri
@@ -496,15 +496,15 @@ skilltable.youthplayer=mladinec
 skilltable.rebought_youthplayer=ponovno kupljen mladinec
 
 #matchdetail
-foxtrick.matchdetail.midfield=Sredina
-foxtrick.matchdetail.attack=Napad
-foxtrick.matchdetail.defence=Obramba
-foxtrick.matchdetail.total=Skupno
-foxtrick.shortcut.matchlineup=postavitev
+match.ratings.midfield=Sredina
+match.ratings.attack=Napad
+match.ratings.defence=Obramba
+match.ratings.total=Skupno
+lineupShortcut.lineup=postavitev
 
-foxtrick.matchdetail.right=Desno
-foxtrick.matchdetail.left=Levo
-foxtrick.matchdetail.leftshort=L
+match.ratings.right=Desno
+match.ratings.left=Levo
+match.ratings.leftshort=L
 foxtrick.tlconfirmation=Ali res želite dodati tega igralca na seznam prestopov? Izklicna cena je %s.
 foxtrick.staffconfirmationhire=Ali želite najeti %num %kind?
 foxtrick.staffconfirmationsack=Ali želite odpustiti %num %kind?
@@ -595,7 +595,7 @@ matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Statistika suporterjev
+shortcuts.suppstats=Statistika suporterjev
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
