--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -204,7 +204,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Vergroot de tussenruimte tussen snelkoppel
 foxtrick.ExtraShortcuts.Supporterstats.desc=Link naar supporterstatistieken
 foxtrick.ExtraShortcuts.Transfers.desc=Link naar de transferpagina van je eigen team
 foxtrick.ExtraShortcuts.Prefs.desc=Link naar de voorkeurenpagina
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link naar CHPP voorkeuren pagina
+ExtraShortcuts.ManageCHPP.desc=Link naar CHPP voorkeuren pagina
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link naar FoxTrick voorkeuren pagina
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -236,10 +236,10 @@ foxtrick.PlayerBirthday.desc=Toon laatste en volgende verjaardag in spelersoverz
 foxtrick.MovePlayerSelectbox.desc=Verplaats de speler selectieknop naar boven op de speler detailpagina
 foxtrick.SeasonStats.desc=Toon statistieken op de wedstrijdarchief pagina's
 foxtrick.LeagueNewsFilter.desc=Markeer teams die hun opstelling onlangs hebben gewijzigd en toon een filter selectieknop voor competitienieuws.
-foxtrick.LeagueNewsFilter.all.desc=Toon alle nieuwsberichten
-foxtrick.LeagueNewsFilter.friendlies.desc=Toon alleen internationale vriendschappelijke wedstrijden en trainerswisselingen
-foxtrick.LeagueNewsFilter.transfers.desc=Toon alleen transfers
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
+LeagueNewsFilter.all.desc=Toon alle nieuwsberichten
+LeagueNewsFilter.friendlies.desc=Toon alleen internationale vriendschappelijke wedstrijden en trainerswisselingen
+LeagueNewsFilter.transfers.desc=Toon alleen transfers
+LeagueNewsFilter.lineupChanges.desc=Toon alleen opstellingswijzigingen
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op: dit kan erg traag worden als er meer dan 100 managers online zijn.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
@@ -345,75 +345,75 @@ foxtrick.MobileEnhancements.desc=Verbeteringen voor mobiele toestellen
 # IN-GAME STRINGS. translate first
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistieken
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Beheer je CHPP producten
-foxtrick.ExtraShortcuts.prefs=Voorkeuren
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick voorkeuren
+ExtraShortcuts.statistics=Statistieken
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Beheer je CHPP producten
+ExtraShortcuts.prefs=Voorkeuren
+ExtraShortcuts.ftprefs=FoxTrick voorkeuren
 
 #HistoryStats
-foxtrick.HistoryStats.season=Seizoen
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Beker ronde
-foxtrick.HistoryStats.cup.short=B
-foxtrick.HistoryStats.league=Competitie
-foxtrick.HistoryStats.league.short=Div.
-foxtrick.HistoryStats.pos=Eind positie in competitie
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=Geschiedenis statistieken
-foxtrick.HistoryStats.cupwinner=Beker winnaar
-foxtrick.HistoryStats.cupwinner.short=BW
+HistoryStats.season=Seizoen
+HistoryStats.season.short=S
+HistoryStats.cup=Beker ronde
+HistoryStats.cup.short=B
+HistoryStats.league=Competitie
+HistoryStats.league.short=Div.
+HistoryStats.finalPosition=Eind positie in competitie
+HistoryStats.finalPosition.short=P
+HistoryStats.label=Geschiedenis statistieken
+HistoryStats.cupwinner=Beker winnaar
+HistoryStats.cupwinner.short=BW
 
 # YouthPromotes
 YouthPromotes.future=Speler kan gepromoveerd worden over %1 dag(en), op %2.
 YouthPromotes.today=Speler kan vandaag gepromoveerd worden!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats
-foxtrick.TeamStats.label=Teamoverzicht
-foxtrick.TeamStats.PlayerNotToOld.label=Spelers < 19jr
-foxtrick.TeamStats.PlayerToOld.label=Spelers >= 19jr
-foxtrick.TeamStats.Cards.label=Kaarten
-foxtrick.TeamStats.Injured.label=Geblesseerd
-foxtrick.TeamStats.TransferListed.label=Op de transferlijst
-foxtrick.TeamStats.Pictures.label=Gezichten
-foxtrick.TeamStats.PlayedLatest.label=Speelde in de laatste wedstrijd
-foxtrick.TeamStats.NotPlayedLatest.label=Speelde niet in de laatste wedstrijd
+TeamStats.boxheader=Teamoverzicht
+TeamStats.PlayerNotToOld=Spelers < 19jr
+TeamStats.PlayerToOld=Spelers >= 19jr
+TeamStats.Cards=Kaarten
+TeamStats.Injured=Geblesseerd
+TeamStats.TransferListed=Op de transferlijst
+TeamStats.Pictures=Gezichten
+TeamStats.PlayedLatest=Speelde in de laatste wedstrijd
+TeamStats.NotPlayedLatest=Speelde niet in de laatste wedstrijd
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Seizoensoverzicht
+seasonstats.boxheader=Seizoensoverzicht
 
-foxtrick.seasonstats.played=Gsp
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=G
-foxtrick.seasonstats.lost=V
-foxtrick.seasonstats.goalplus=DV
-foxtrick.seasonstats.goalminus=DT
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=Pt
-foxtrick.seasonstats.home=T
-foxtrick.seasonstats.away=U
-foxtrick.seasonstats.league=Competitie
-foxtrick.seasonstats.friendly=Vriendschappelijk
-foxtrick.seasonstats.cup=Beker
-foxtrick.seasonstats.masters=Masters
+seasonstats.played=Gsp
+seasonstats.won=W
+seasonstats.draw=G
+seasonstats.lost=V
+seasonstats.goalplus=DV
+seasonstats.goalminus=DT
+seasonstats.goaldiff=±
+seasonstats.total=Pt
+seasonstats.home=T
+seasonstats.away=U
+seasonstats.league=Competitie
+seasonstats.friendly=Vriendschappelijk
+seasonstats.cup=Beker
+seasonstats.masters=Masters
 
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Nieuws filter:
-foxtrick.LeagueNewsFilter.all=Alles
-foxtrick.LeagueNewsFilter.friendlies=Vriendschappelijke wedstrijden en trainerswisselingen
-foxtrick.LeagueNewsFilter.transfers=Transfers
-foxtrick.LeagueNewsFilter.lineup_changes=Opstellingen
+LeagueNewsFilter.label=Nieuws filter:
+LeagueNewsFilter.all=Alles
+LeagueNewsFilter.friendlies=Vriendschappelijke wedstrijden en trainerswisselingen
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Opstellingen
 
 # FoxTrickAddLeaveConfButton
-leave_conf_button_alert=Klik op de 'Save' knop op de volgende pagina om dit forum te verlaten.
-leave_conf_button=Verlaat forum
+AddLeaveConfButton.alert=Klik op de 'Save' knop op de volgende pagina om dit forum te verlaten.
+AddLeaveConfButton.LeaveForum=Verlaat forum
 
-forum.preferences=Forum voorkeuren
+ShowForumPrefButton.forumPreferences=Forum voorkeuren
 
 # ForumTemplates
 make_template_from_post=Maak sjabloon van bericht
@@ -430,7 +430,7 @@ preview=Voorbeeld
 forumPreview.send=Verstuur
 
 #Forums
-foxtrick.CopyPostID=Kopieer bericht-ID naar klembord
+copy.PostID=Kopieer bericht-ID naar klembord
 CopyPosting=Kopieer post in %s stijl
 CopyPosting.abbr=Kopieer in %s stijl
 CopyPosting.style.ht-ml=HT-ML
@@ -463,10 +463,10 @@ ForumSpecialBBCode.tableSeparator=Converteer "%s" naar cellen
 ForumSpecialBBCode.enterSeparator=Voeg een aangepast scheidingsteken toe
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Geef filternaam:
-foxtrick.transferfilter.delete_filter_ask=Weet je zeker dat je deze filter wilt verwijderen?
-foxtrick.transferfilter.save_new_filter=Sla nieuwe filter op
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick filters
+TransferSearchFilters.enterName=Geef filternaam:
+TransferSearchFilters.deleteFilter.ask=Weet je zeker dat je deze filter wilt verwijderen?
+TransferSearchFilters.saveFilter=Sla nieuwe filter op
+TransferSearchFilters.boxheader=FoxTrick filters
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -617,19 +617,19 @@ skilltable.youthplayer=Jeugdspeler
 skilltable.rebought_youthplayer=Herkochte jeugdspeler
 
 #matchdetail
-foxtrick.matchdetail.midfield=Middenveld
-foxtrick.matchdetail.attack=Aanval
-foxtrick.matchdetail.defence=Verdediging
-foxtrick.matchdetail.total=Totaal
-foxtrick.shortcut.matchlineup=opstelling
+match.ratings.midfield=Middenveld
+match.ratings.attack=Aanval
+match.ratings.defence=Verdediging
+match.ratings.total=Totaal
+lineupShortcut.lineup=opstelling
 
-foxtrick.matchdetail.right=Rechts
-foxtrick.matchdetail.center=Centrum
-foxtrick.matchdetail.left=Links
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Rechts
+match.ratings.center=Centrum
+match.ratings.left=Links
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Wil je op deze speler bieden? De prijs is %s.
 foxtrick.tlconfirmation=Wil je deze speler op de transferlijst zetten? De vraagprijs is %s.
 foxtrick.staffconfirmationhire=Wil je %num %kind inhuren?
@@ -727,7 +727,7 @@ matches.wronglang=FoxTrick: De stats kunnen niet getoond worden, omdat jouw taal
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter statistieken
+shortcuts.suppstats=Supporter statistieken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
